Replace VERSANT with Versant

--- a/casestudy/01/index.html
+++ b/casestudy/01/index.html
@@ -2,8 +2,8 @@
   
 
 <!--Header Options
-<SEOTitle>パーソルホールディングス 導入事例｜VERSANT（ヴァーサント）【法人版】</SEOTitle>
-<SEODescription>2016年の米国に本社を置く大手人材サービス企業との東南アジアにおける合弁事業の開始を契機に、いまではアジア・パシフィックにおいて13カ国・地域に事業を展開するパーソルホールディングス。国内でも外国人の採用・就業支援や、日本と海外の二国間の人材紹介・転職支援などを進めるなか、グローバル人材の育成とその英語能力の成長を図る目的で「VERSANT」を活用する。</SEODescription>
+<SEOTitle>パーソルホールディングス 導入事例｜Versant（ヴァーサント）【法人版】</SEOTitle>
+<SEODescription>2016年の米国に本社を置く大手人材サービス企業との東南アジアにおける合弁事業の開始を契機に、いまではアジア・パシフィックにおいて13カ国・地域に事業を展開するパーソルホールディングス。国内でも外国人の採用・就業支援や、日本と海外の二国間の人材紹介・転職支援などを進めるなか、グローバル人材の育成とその英語能力の成長を図る目的で「Versant」を活用する。</SEODescription>
 <SEOrobots>noarchive</SEOrobots>
 <SEOcanonical>/nn/special/versant/</SEOcanonical>
 <OGType>article</OGType>
@@ -51,8 +51,8 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>パーソルホールディングス 導入事例｜VERSANT（ヴァーサント）【法人版】</title>
-  <meta name="description" content="2016年の米国に本社を置く大手人材サービス企業との東南アジアにおける合弁事業の開始を契機に、いまではアジア・パシフィックにおいて13カ国・地域に事業を展開するパーソルホールディングス。国内でも外国人の採用・就業支援や、日本と海外の二国間の人材紹介・転職支援などを進めるなか、グローバル人材の育成とその英語能力の成長を図る目的で「VERSANT」を活用する。">
+  <title>パーソルホールディングス 導入事例｜Versant（ヴァーサント）【法人版】</title>
+  <meta name="description" content="2016年の米国に本社を置く大手人材サービス企業との東南アジアにおける合弁事業の開始を契機に、いまではアジア・パシフィックにおいて13カ国・地域に事業を展開するパーソルホールディングス。国内でも外国人の採用・就業支援や、日本と海外の二国間の人材紹介・転職支援などを進めるなか、グローバル人材の育成とその英語能力の成長を図る目的で「Versant」を活用する。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
 
@@ -60,11 +60,11 @@
 
   <meta name="robots" content="noarchive"/>
   <meta property="og:type" content="article">
-  <meta property="og:title" content="パーソルホールディングス 導入事例｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:title" content="パーソルホールディングス 導入事例｜Versant（ヴァーサント）【法人版】">
   <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/casestudy/01/index.html">
-  <meta property="og:description" content="2016年の米国に本社を置く大手人材サービス企業との東南アジアにおける合弁事業の開始を契機に、いまではアジア・パシフィックにおいて13カ国・地域に事業を展開するパーソルホールディングス。国内でも外国人の採用・就業支援や、日本と海外の二国間の人材紹介・転職支援などを進めるなか、グローバル人材の育成とその英語能力の成長を図る目的で「VERSANT」を活用する。">
+  <meta property="og:description" content="2016年の米国に本社を置く大手人材サービス企業との東南アジアにおける合弁事業の開始を契機に、いまではアジア・パシフィックにおいて13カ国・地域に事業を展開するパーソルホールディングス。国内でも外国人の採用・就業支援や、日本と海外の二国間の人材紹介・転職支援などを進めるなか、グローバル人材の育成とその英語能力の成長を図る目的で「Versant」を活用する。">
   <meta property="og:image" content="https://school.nikkei.co.jp/nn/feature/hr/assets/img/ogp_nbs_logo.jpg">
-  <meta property="og:site_name" content="パーソルホールディングス 導入事例｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:site_name" content="パーソルホールディングス 導入事例｜Versant（ヴァーサント）【法人版】">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="135452203504570">
   <link rel="shortcut icon" href="https://school.nikkei.co.jp/nn/parts/school2016/images/favicon.ico" type="image/vnd.microsoft.icon">
@@ -87,7 +87,7 @@
 <header class="l-header">
   <div class="l-header__cnt">
     <a href="../../index.html">
-      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ" class="l-header__logo">
+      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="Versant&trade; ロゴ" class="l-header__logo">
     </a>
     <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
     <label for="nav-toggle" class="l-header__nav-toggle">
@@ -128,15 +128,15 @@
     <section class="p-casestudy-article__lead l-bg__gray">
       <div class="l-inner">
         <div class="l-article__lead is__white">
-          <p>2016年の米国に本社を置く大手人材サービス企業との東南アジアにおける合弁事業の開始を契機に、いまではアジア・パシフィックにおいて13カ国・地域に事業を展開するパーソルホールディングス。国内でも外国人の採用・就業支援や、日本と海外の二国間の人材紹介・転職支援などを進めるなか、グローバル人材の育成とその英語能力の成長を図る目的で「VERSANT」を活用する。</p>
+          <p>2016年の米国に本社を置く大手人材サービス企業との東南アジアにおける合弁事業の開始を契機に、いまではアジア・パシフィックにおいて13カ国・地域に事業を展開するパーソルホールディングス。国内でも外国人の採用・就業支援や、日本と海外の二国間の人材紹介・転職支援などを進めるなか、グローバル人材の育成とその英語能力の成長を図る目的で「Versant」を活用する。</p>
         </div>
 
         <div class="p-casestudy-article__summary">
-          <h2 class="p-casestudy-article__summary_headline">英語研修の成果や成長を「VERSANT」で確認</h2>
+          <h2 class="p-casestudy-article__summary_headline">英語研修の成果や成長を「Versant」で確認</h2>
 
           <div class="p-casestudy-article__summary_cnt">
             <h3 class="summary_badge">活用内容</h3>
-            <p>2016年からパーソルグループの本格的なグローバル展開がスタート。2018年から各部門長の推薦を受けた約50人の選抜社員を対象にマンツーマン英語レッスンの提供を開始した。研修成果を検証するためにVERSANTを導入し、現在まで定期的にスコア分析をしながらレッスン内容に反映させている。</p>
+            <p>2016年からパーソルグループの本格的なグローバル展開がスタート。2018年から各部門長の推薦を受けた約50人の選抜社員を対象にマンツーマン英語レッスンの提供を開始した。研修成果を検証するためにVersantを導入し、現在まで定期的にスコア分析をしながらレッスン内容に反映させている。</p>
           </div>
 
           <div class="p-casestudy-article__summary_cnt">
@@ -174,25 +174,25 @@
           <h4 class="p-casestudy-article__section_head visible_m">
             <span class="o-textline">実践に即した能力を測りたいので</span><br>
             <span class="o-textline">「スピーキング」「リスニング」を重視している点も</span><br>
-            <span class="o-textline">「VERSANT」を採用した理由の1つです。</span>
+            <span class="o-textline">「Versant」を採用した理由の1つです。</span>
           </h4>
           <h4 class="p-casestudy-article__section_head visible_to_m">
             <span class="o-textline">実践に即した能力を測りたいので</span><br>
             <span class="o-textline">「スピーキング」「リスニング」</span><br>
-            <span class="o-textline">を重視している点も「VERSANT」</span><br>
+            <span class="o-textline">を重視している点も「Versant」</span><br>
             <span class="o-textline">を採用した理由の1つです。</span>
           </h4>
         </div>
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            「VERSANT」の結果をどのように英語レッスンに反映させているのですか。
+            「Versant」の結果をどのように英語レッスンに反映させているのですか。
           </p>
           <div class="l-article__section_interview_answer">
             <p>「はたらいて、笑おう。」というグループビジョンを世界で実現するために、16年に米国に本社を置く大手人材サービス企業と東南アジアで合弁事業を開始し、17年にはオーストラリアの大手人材サービス企業を買収しました。その時点で海外売上比率が全体の約30％にまで高まり、様々な施策の共通化やモニタリングなどのガバナンスが必要になってくるため、18年にはグローバル人事室を立ち上げ、海外駐在員の派遣や長期的なグローバル人材の育成などを進めてきました。</p>
-            <p>当初、各部門長の推薦を受けた選抜社員を対象にマンツーマン英語レッスンの提供を開始し、研修成果を検証するために「VERSANT」を導入しました。様々な英語能力テストのなかで「VERSANT」を選んだ理由は「客観性の高さ」と「スピード感」です。AI（人工知能）による採点はブレが無く結果分析が細かくできるので、受験者個人の能力を正しく評価し、適切なフォローアップができます。そして、いつでもどこでもスマートフォンで受験できる手軽さや、テスト結果がすぐに分かるスピード感は、忙しいビジネスパーソンの受験者と、素早く運用を回したい人事担当にはとても大切なポイントだと感じています。また、実践に即した能力を測りたいので「スピーキング」「リスニング」を重視している点も「VERSANT」を採用した理由の1つです。</p>
-            <p>実際にスピーキングでB1（VERSANT43点以上）のスコアだった従業員たちが海外駐在を経て帰国後にはB2（同59点以上）やC1（同76点以上）を獲得していたり、海外赴任後の推移も確かめる中で、当社が求める能力がきちんと測定できていると実感しています。</p>
-            <p>当社で英語を使う場面の多くは、ガバナンスの共通化や現地進出する日本企業の採用支援など、直接面談して細かな意思疎通ができる能力が求められます。英語レッスンの内容も実際のビジネスでの会話などを想定したすぐに使える言語力と、英語圏の文化やネイティブの日常会話を身に付ける長期的な視点でのグローバル人材育成という2つの目的で構成しています。海外駐在などで入れ替わるため変動しますが、常に20～50人ほどが英語レッスンと「VERSANT」に取り組んでいます。</p>
+            <p>当初、各部門長の推薦を受けた選抜社員を対象にマンツーマン英語レッスンの提供を開始し、研修成果を検証するために「Versant」を導入しました。様々な英語能力テストのなかで「Versant」を選んだ理由は「客観性の高さ」と「スピード感」です。AI（人工知能）による採点はブレが無く結果分析が細かくできるので、受験者個人の能力を正しく評価し、適切なフォローアップができます。そして、いつでもどこでもスマートフォンで受験できる手軽さや、テスト結果がすぐに分かるスピード感は、忙しいビジネスパーソンの受験者と、素早く運用を回したい人事担当にはとても大切なポイントだと感じています。また、実践に即した能力を測りたいので「スピーキング」「リスニング」を重視している点も「Versant」を採用した理由の1つです。</p>
+            <p>実際にスピーキングでB1（Versant43点以上）のスコアだった従業員たちが海外駐在を経て帰国後にはB2（同59点以上）やC1（同76点以上）を獲得していたり、海外赴任後の推移も確かめる中で、当社が求める能力がきちんと測定できていると実感しています。</p>
+            <p>当社で英語を使う場面の多くは、ガバナンスの共通化や現地進出する日本企業の採用支援など、直接面談して細かな意思疎通ができる能力が求められます。英語レッスンの内容も実際のビジネスでの会話などを想定したすぐに使える言語力と、英語圏の文化やネイティブの日常会話を身に付ける長期的な視点でのグローバル人材育成という2つの目的で構成しています。海外駐在などで入れ替わるため変動しますが、常に20～50人ほどが英語レッスンと「Versant」に取り組んでいます。</p>
           </div>
           <div class="l-article__section_interview_img">
             <img src="../../assets/img/casestudy/01/img_01.jpg" alt="インタビュー画像">
@@ -222,18 +222,18 @@
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            「VERSANT」の結果をどのように英語レッスンに反映させているのですか。
+            「Versant」の結果をどのように英語レッスンに反映させているのですか。
           </p>
           <div class="l-article__section_interview_answer">
-            <p>言語力は人それぞれでレベルも得意不得意も異なります。そのため様々な英語研修のプログラムを採用し、様々なレベルやテーマに合わせてカスタマイズしています。そのうちの１つとして外国人講師に社内に常駐していただき、「VERSANT」の結果も踏まえて新しいレッスンコンテンツやカリキュラムなどを考案してもらっています。</p>
-            <p>当社の場合、「VERSANT」のレッスンへつながるモチベーション向上という効果も重要視しています。最初に受験するとほとんどの人がリアルな手応えと結果に衝撃を受けます。海外赴任の任命を受けた選抜者などは、「このままではミッションを果たせない」と痛感し、英語レッスンに取り組む姿勢が一気に変わります。どんなレベルであれリアルな会話に対する手応えを感じ取れることが大切で、それは学習への熱意や継続性につながります。「VERSANT」のスコアにはいくつか乗り越えるのに困難な壁があり、それもモチベーション維持に役立っていると思います。</p>
-            <p>グローバル人事部はテストの内容や結果を定期的に分析し、それに対するレッスン内容を検討し、レッスン講師と相談しながら主にスピーキングとリスニングの能力向上をサポートしていきます。ただ、あくまで本質的な英語力を高めることを主眼とし、「VERSANT」対策にならないことを意識しています。スコアが伸び悩んでいる人には個別にインタビューしてフォローしたり、必要に応じてサポートを行っています。語学力の向上は個人差があるものの、「VERSANT」は長期にわたりデータ分析ができるので、将来的にはさらに効果的なレッスンの構築や、海外で活躍できる人材の判断基準などにも役立つはずです。</p>
+            <p>言語力は人それぞれでレベルも得意不得意も異なります。そのため様々な英語研修のプログラムを採用し、様々なレベルやテーマに合わせてカスタマイズしています。そのうちの１つとして外国人講師に社内に常駐していただき、「Versant」の結果も踏まえて新しいレッスンコンテンツやカリキュラムなどを考案してもらっています。</p>
+            <p>当社の場合、「Versant」のレッスンへつながるモチベーション向上という効果も重要視しています。最初に受験するとほとんどの人がリアルな手応えと結果に衝撃を受けます。海外赴任の任命を受けた選抜者などは、「このままではミッションを果たせない」と痛感し、英語レッスンに取り組む姿勢が一気に変わります。どんなレベルであれリアルな会話に対する手応えを感じ取れることが大切で、それは学習への熱意や継続性につながります。「Versant」のスコアにはいくつか乗り越えるのに困難な壁があり、それもモチベーション維持に役立っていると思います。</p>
+            <p>グローバル人事部はテストの内容や結果を定期的に分析し、それに対するレッスン内容を検討し、レッスン講師と相談しながら主にスピーキングとリスニングの能力向上をサポートしていきます。ただ、あくまで本質的な英語力を高めることを主眼とし、「Versant」対策にならないことを意識しています。スコアが伸び悩んでいる人には個別にインタビューしてフォローしたり、必要に応じてサポートを行っています。語学力の向上は個人差があるものの、「Versant」は長期にわたりデータ分析ができるので、将来的にはさらに効果的なレッスンの構築や、海外で活躍できる人材の判断基準などにも役立つはずです。</p>
           </div>
         </div>
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            「VERSANT」のスピーキングテストは24年1月にアップグレードしました。<br class="visible_m">どのように評価されていますか。
+            「Versant」のスピーキングテストは24年1月にアップグレードしました。<br class="visible_m">どのように評価されていますか。
           </p>
           <p class="l-article__section_interview_answer">
             短い会話のやり取りが増えるなど、より実践的な会話力を重視した内容になり、採点の精度や精密さもさらに向上したと感じています。最新のAIによる採点はより精密になり、実際にネイティブの講師と協力して、いくつかのパターンでテストを受けて検証したところ、以前のテストよりもリアルなスコアが出ました。自分の言葉で話す機会が増え、「話しぶり」が採点されるなど、ビジネスシーンで共感を得たり、説得したりする能力を向上させるヒントが得られる点が当社の目的とより密接的になりました。
@@ -272,7 +272,7 @@
           </p>
           <div class="l-article__section_interview_answer">
             <p>人材ビジネスは各国の労基法やビジネス慣習が理解できなければ成立しないため、日本人が日本のビジネスをそのまま展開できることはほとんどありません。もしかしたら、この先の10年、20年のグローバル化を見据えた時、必ずしも日本人が主役である必要はないかもしれません。外国人と日本人が共に「はたらいて、笑おう。」というビジョンを世界各地で実現することがグローバル化の大きな目的であり、そのためには東南アジアの人々のグローバル人材化も視野に入れて検討する必要があるでしょう。</p>
-            <p>全世界のタレントをマネジメントして、パーソルが真のグローバル企業へと成長していくためには、世界共通の英語能力を測定することが重要になるかもしれません。グローバルに展開する大手企業や世界中の政府機関で英語力を測定するテストとして採用されている「VERSANT」はその点でも有用だと考えています。</p>
+            <p>全世界のタレントをマネジメントして、パーソルが真のグローバル企業へと成長していくためには、世界共通の英語能力を測定することが重要になるかもしれません。グローバルに展開する大手企業や世界中の政府機関で英語力を測定するテストとして採用されている「Versant」はその点でも有用だと考えています。</p>
             <p>日本のすべての従業員がいますぐにグローバル人材になる必要性には迫られていませんが、国内でも外国籍の人材を求める事業や分野は拡大傾向にあり、少なくとも様々な仕事の中で英語力が必要となる場面は増えていくはずです。大切なのは世界の人々と当社をつなぐ会話力やコミュニケーション力、異文化への興味や理解などのビジネススキルで、それを支えるのが語学力です。多様な価値観を持った個人の能力が最大限に発揮できる環境を整え、世界中の誰もが、「はたらいて、笑おう。」を実感できる未来をつくっていくことを目指していきたいと考えています。</p>
           </div>
         </div>
@@ -302,7 +302,7 @@
           <p class="l-footer__info_head">お問合せ窓口</p>
           <div class="l-footer__info_txt"><span>Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793</a> (平日10:00〜17:00)</div>
           <div class="l-footer__info_txt"><span>Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
+          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">Versant法人利用規約</a>
       </address>  
       
       <div class="l-footer__lnk_box">
