--- a/casestudy/03/index.html
+++ b/casestudy/03/index.html
@@ -2,8 +2,8 @@
   
 
 <!--Header Options
-<SEOTitle>東京海上日動システムズ 導入事例｜VERSANT（ヴァーサント）【法人版】</SEOTitle>
-<SEODescription>国内外において損害保険・生命保険事業や金融・一般事業を幅広く展開する東京海上グループのIT・デジタル戦略を担う東京海上日動システムズ。グローバルに活躍する同グループの支援だけでなく、急速な変化を続けるIT業界の著しいグローバル化に対応するため、1559人の社員全員を対象に「VERSANT」で英語力の自己判定を推進し、そのスコアをグローバル関連プロジェクト、海外研修生派遣などの基準に設定する。</SEODescription>
+<SEOTitle>東京海上日動システムズ 導入事例｜Versant（ヴァーサント）【法人版】</SEOTitle>
+<SEODescription>国内外において損害保険・生命保険事業や金融・一般事業を幅広く展開する東京海上グループのIT・デジタル戦略を担う東京海上日動システムズ。グローバルに活躍する同グループの支援だけでなく、急速な変化を続けるIT業界の著しいグローバル化に対応するため、1559人の社員全員を対象に「Versant」で英語力の自己判定を推進し、そのスコアをグローバル関連プロジェクト、海外研修生派遣などの基準に設定する。</SEODescription>
 <SEOrobots>noarchive</SEOrobots>
 <SEOcanonical>/nn/special/versant/</SEOcanonical>
 <OGType>article</OGType>
@@ -51,8 +51,8 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>東京海上日動システムズ 導入事例｜VERSANT（ヴァーサント）【法人版】</title>
-  <meta name="description" content="国内外において損害保険・生命保険事業や金融・一般事業を幅広く展開する東京海上グループのIT・デジタル戦略を担う東京海上日動システムズ。グローバルに活躍する同グループの支援だけでなく、急速な変化を続けるIT業界の著しいグローバル化に対応するため、1559人の社員全員を対象に「VERSANT」で英語力の自己判定を推進し、そのスコアをグローバル関連プロジェクト、海外研修生派遣などの基準に設定する。">
+  <title>東京海上日動システムズ 導入事例｜Versant（ヴァーサント）【法人版】</title>
+  <meta name="description" content="国内外において損害保険・生命保険事業や金融・一般事業を幅広く展開する東京海上グループのIT・デジタル戦略を担う東京海上日動システムズ。グローバルに活躍する同グループの支援だけでなく、急速な変化を続けるIT業界の著しいグローバル化に対応するため、1559人の社員全員を対象に「Versant」で英語力の自己判定を推進し、そのスコアをグローバル関連プロジェクト、海外研修生派遣などの基準に設定する。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
 
@@ -60,11 +60,11 @@
 
   <meta name="robots" content="noarchive"/>
   <meta property="og:type" content="article">
-  <meta property="og:title" content="東京海上日動システムズ 導入事例｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:title" content="東京海上日動システムズ 導入事例｜Versant（ヴァーサント）【法人版】">
   <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/casestudy/03/index.html">
-  <meta property="og:description" content="国内外において損害保険・生命保険事業や金融・一般事業を幅広く展開する東京海上グループのIT・デジタル戦略を担う東京海上日動システムズ。グローバルに活躍する同グループの支援だけでなく、急速な変化を続けるIT業界の著しいグローバル化に対応するため、1559人の社員全員を対象に「VERSANT」で英語力の自己判定を推進し、そのスコアをグローバル関連プロジェクト、海外研修生派遣などの基準に設定する。">
+  <meta property="og:description" content="国内外において損害保険・生命保険事業や金融・一般事業を幅広く展開する東京海上グループのIT・デジタル戦略を担う東京海上日動システムズ。グローバルに活躍する同グループの支援だけでなく、急速な変化を続けるIT業界の著しいグローバル化に対応するため、1559人の社員全員を対象に「Versant」で英語力の自己判定を推進し、そのスコアをグローバル関連プロジェクト、海外研修生派遣などの基準に設定する。">
   <meta property="og:image" content="https://school.nikkei.co.jp/nn/feature/hr/assets/img/ogp_nbs_logo.jpg">
-  <meta property="og:site_name" content="東京海上日動システムズ 導入事例｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:site_name" content="東京海上日動システムズ 導入事例｜Versant（ヴァーサント）【法人版】">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="135452203504570">
   <link rel="shortcut icon" href="https://school.nikkei.co.jp/nn/parts/school2016/images/favicon.ico" type="image/vnd.microsoft.icon">
@@ -87,7 +87,7 @@
 <header class="l-header">
   <div class="l-header__cnt">
     <a href="../../index.html">
-      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ" class="l-header__logo">
+      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="Versant&trade; ロゴ" class="l-header__logo">
     </a>
     <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
     <label for="nav-toggle" class="l-header__nav-toggle">
@@ -127,15 +127,15 @@
     <section class="p-casestudy-article__lead l-bg__gray">
       <div class="l-inner">
         <div class="l-article__lead is__white">
-          <p>国内外において損害保険・生命保険事業や金融・一般事業を幅広く展開する東京海上グループのIT・デジタル戦略を担う東京海上日動システムズ。グローバルに活躍する同グループの支援だけでなく、急速な変化を続けるIT業界の著しいグローバル化に対応するため、1559人の社員全員を対象に「VERSANT」で英語力の自己判定を推進し、そのスコアをグローバル関連プロジェクト、海外研修生派遣などの基準に設定する。 </p>
+          <p>国内外において損害保険・生命保険事業や金融・一般事業を幅広く展開する東京海上グループのIT・デジタル戦略を担う東京海上日動システムズ。グローバルに活躍する同グループの支援だけでなく、急速な変化を続けるIT業界の著しいグローバル化に対応するため、1559人の社員全員を対象に「Versant」で英語力の自己判定を推進し、そのスコアをグローバル関連プロジェクト、海外研修生派遣などの基準に設定する。 </p>
         </div>
 
         <div class="p-casestudy-article__summary">
-          <h2 class="p-casestudy-article__summary_headline">全社員を対象に「VERSANT」を推奨</h2>
+          <h2 class="p-casestudy-article__summary_headline">全社員を対象に「Versant」を推奨</h2>
 
           <div class="p-casestudy-article__summary_cnt">
             <h3 class="summary_badge">活用内容</h3>
-            <p>東京海上グループのグローバルIT人材育成プログラムの一環として「VERSANT」を導入。プログラム終了後も全社員を対象に受験を推奨。現在までに全社員の約半数が受験。海外研修生派遣などの応募基準として「VERSANT」のスコアを採用する。</p>
+            <p>東京海上グループのグローバルIT人材育成プログラムの一環として「Versant」を導入。プログラム終了後も全社員を対象に受験を推奨。現在までに全社員の約半数が受験。海外研修生派遣などの応募基準として「Versant」のスコアを採用する。</p>
           </div>
 
           <div class="p-casestudy-article__summary_cnt">
@@ -185,13 +185,13 @@
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            いま起こっているIT業界のグローバル化と「VERSANT」の導入理由について教えてください。 
+            いま起こっているIT業界のグローバル化と「Versant」の導入理由について教えてください。 
           </p>
           <p class="l-article__section_interview_answer">
             <span class="is-bold pr1em">木村</span>
             日本のIT業界ではいま、急激なグローバル化が進んでいます。それはシステムやアプリケーションの進化のスピードが著しく、海外ベンダーと直接業務のやり取りを行う機会が増えているからです。また、ITの最新技術の多くは英語で、それを読み解く力が無ければIT業界の先端にいることすら難しい状況が訪れています。当社では、新たなシステム開発などで海外ベンダーと協業するケースが増え、英語の必要性と直面するプロジェクトも数十人から100人規模へと拡大しています。<br>
-            元々東京海上グループが実施していたグローバル人材育成のプログラムを採用しており、語学力の基準には「VERSANT」が組み込まれておりました。その有用性に人事部や経営層が着目し、全社員を対象に受験を推奨しています。他の英語能力テストを採用したこともありましたが、高得点者でも海外駐在で会話力に苦心するケースが多く、コミュニケーション力向上をテーマに「VERSANT」を再び採用しました。<br>
-            海外研修生の経験者やそれを希望する社員だけでなく、最新のシステムやアプリケーション、クラウドサービスを活用するうえで、一人ひとりがITの技術力や専門性を磨くのと同じように英語力をスキルアップしていくことが必要だというメッセージを全社員に向けて発信しています。「VERSANT」のスコアを基準に語学力のガイドラインも作成し、仕様書などの情報収集に必要なレベル（VET35）、海外ベンダーとの協業で必要なレベル（VET45以上推奨）、海外駐在を目指すうえで必要なレベル（VET45以上を求める）などを提示しました。まずは「VERSANT」で現時点での自身の語学力レベルを確認し、自らが描くキャリアに必要なスコアを目指し、自己研鑽を進めてもらうよう呼び掛けています。 
+            元々東京海上グループが実施していたグローバル人材育成のプログラムを採用しており、語学力の基準には「Versant」が組み込まれておりました。その有用性に人事部や経営層が着目し、全社員を対象に受験を推奨しています。他の英語能力テストを採用したこともありましたが、高得点者でも海外駐在で会話力に苦心するケースが多く、コミュニケーション力向上をテーマに「Versant」を再び採用しました。<br>
+            海外研修生の経験者やそれを希望する社員だけでなく、最新のシステムやアプリケーション、クラウドサービスを活用するうえで、一人ひとりがITの技術力や専門性を磨くのと同じように英語力をスキルアップしていくことが必要だというメッセージを全社員に向けて発信しています。「Versant」のスコアを基準に語学力のガイドラインも作成し、仕様書などの情報収集に必要なレベル（VET35）、海外ベンダーとの協業で必要なレベル（VET45以上推奨）、海外駐在を目指すうえで必要なレベル（VET45以上を求める）などを提示しました。まずは「Versant」で現時点での自身の語学力レベルを確認し、自らが描くキャリアに必要なスコアを目指し、自己研鑽を進めてもらうよう呼び掛けています。 
           </p>
           
           <div class="l-article__section_interview_img_2column">
@@ -231,7 +231,7 @@
             当社のケースでは、英語を使う場面は大きく分けると3つあります。1つ目は、東京海上グループの海外拠点のITガバナンス、セキュリティ、ITプロジェクトを支援する海外研修生の派遣です。基本的には2、3年の期間ですが、昨年から短期海外研修生としてシリコンバレーへの短期研修（数ヵ月）も実施しています。<br>
             最近では、グローバル人材の裾野拡大施策として、海外研修や駐在員の経験者がセミナーなど開催して現地で活躍するうえで必要な英会話力や現地のビジネス文化、コミュニケーションに必要な能力などを全社員と共有しています。<br>
             2つ目は、海外ベンダーとの協業です。大きなプロジェクトでは構想から数年にわたりコミュニケーションを続けることになります。金融業の厳しいセキュリティや日本ならではのきめ細かいレスポンシブ対応のような文化の共有など、理想のシステムに仕上げるにはかなりの時間を要します。<br>
-            3つ目は、最新の技術情報のキャッチアップです。ベンダーが開催するイベントに参加してエンジニアに要望を直接説明することが最近では増え、そういった場に挑戦した人は向上心を持って「VERSANT」に取り組んでいます。
+            3つ目は、最新の技術情報のキャッチアップです。ベンダーが開催するイベントに参加してエンジニアに要望を直接説明することが最近では増え、そういった場に挑戦した人は向上心を持って「Versant」に取り組んでいます。
             国内で必然的に英語に慣れながら自己学習し、言語だけでなく、マインド、仕事の進め方などの多様性に対応出来るグローバルIT人材へと成長するのが理想的だと考えています。 
           </p>
           <p class="l-article__section_interview_answer">
@@ -243,12 +243,12 @@
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            英語力向上を目指すなかで、「VERSANT」はどのように貢献していますか。 
+            英語力向上を目指すなかで、「Versant」はどのように貢献していますか。 
           </p>
           <p class="l-article__section_interview_answer">
             <span class="is-bold pr1em">水本</span>
             基本的には自主的に受験します。人事部が年に数回実施を呼びかけ、誰かがチームや職場仲間に声を掛け合って参加するケースが多いです。私はゲーム感覚で気軽に取り組めるよう10人ほどの仲間と2回受験したスコアの伸び幅を競ったりしています。一番スコアが上がった人には、ちょっとしたインセンティブを用意するなど、まずは受験するきっかけを増やしたいと思っています。<br>
-            「VERSANT」受験者の多くは受験によって自身の英語力を把握し、学習意欲も向上しています。他のテストと圧倒的に違うのが「使える英語」の習得に有用だと感じていることです。スコアレポートでもカテゴリーごとの可視化ができるので、次に何に取り組めばいいのかが分かりやすい点が継続性につながります。私の周りでもメール作成やリスニング力の向上を実感している社員が増えています。英語力向上のハードルである「継続的な学習意識」は「VERSANT」だから得られていると感じています。
+            「Versant」受験者の多くは受験によって自身の英語力を把握し、学習意欲も向上しています。他のテストと圧倒的に違うのが「使える英語」の習得に有用だと感じていることです。スコアレポートでもカテゴリーごとの可視化ができるので、次に何に取り組めばいいのかが分かりやすい点が継続性につながります。私の周りでもメール作成やリスニング力の向上を実感している社員が増えています。英語力向上のハードルである「継続的な学習意識」は「Versant」だから得られていると感じています。
           </p>
         </div>
 
@@ -320,7 +320,7 @@
           <p class="l-footer__info_head">お問合せ窓口</p>
           <div class="l-footer__info_txt"><span>Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793</a> (平日10:00〜17:00)</div>
           <div class="l-footer__info_txt"><span>Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
+          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">Versant法人利用規約</a>
       </address>  
       
       <div class="l-footer__lnk_box">
