--- a/casestudy/05/index.html
+++ b/casestudy/05/index.html
@@ -2,8 +2,8 @@
   
 
 <!--Header Options
-<SEOTitle>スタディーハッカー 導入事例｜VERSANT（ヴァ―サント）【法人版】</SEOTitle>
-<SEODescription>2015年に英語パーソナルジム「ENGLISH COMPANY」のサービスを開始し、学びの領域に先進的な科学の知見を取り入れ、常に合理的な学び方を提案してきたスタディーハッカー。「ENGLISH COMPANY」のメソッドを凝縮し、短い学習時間でも成果が出るようコンサルティングする「STRAIL」のカリキュラムに「VERSANT」を組み入れた。「ENGLISH COMPANY」「STRAIL」で受講は累計約28,000人。</SEODescription>
+<SEOTitle>スタディーハッカー 導入事例｜Versant（ヴァ―サント）【法人版】</SEOTitle>
+<SEODescription>2015年に英語パーソナルジム「ENGLISH COMPANY」のサービスを開始し、学びの領域に先進的な科学の知見を取り入れ、常に合理的な学び方を提案してきたスタディーハッカー。「ENGLISH COMPANY」のメソッドを凝縮し、短い学習時間でも成果が出るようコンサルティングする「STRAIL」のカリキュラムに「Versant」を組み入れた。「ENGLISH COMPANY」「STRAIL」で受講は累計約28,000人。</SEODescription>
 <SEOrobots>noarchive</SEOrobots>
 <SEOcanonical>/nn/special/versant/</SEOcanonical>
 <OGType>article</OGType>
@@ -51,8 +51,8 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>スタディーハッカー 導入事例｜VERSANT（ヴァ―サント）【法人版】</title>
-  <meta name="description" content="2015年に英語パーソナルジム「ENGLISH COMPANY」のサービスを開始し、学びの領域に先進的な科学の知見を取り入れ、常に合理的な学び方を提案してきたスタディーハッカー。「ENGLISH COMPANY」のメソッドを凝縮し、短い学習時間でも成果が出るようコンサルティングする「STRAIL」のカリキュラムに「VERSANT」を組み入れた。「ENGLISH COMPANY」「STRAIL」で受講は累計約28,000人。">
+  <title>スタディーハッカー 導入事例｜Versant（ヴァ―サント）【法人版】</title>
+  <meta name="description" content="2015年に英語パーソナルジム「ENGLISH COMPANY」のサービスを開始し、学びの領域に先進的な科学の知見を取り入れ、常に合理的な学び方を提案してきたスタディーハッカー。「ENGLISH COMPANY」のメソッドを凝縮し、短い学習時間でも成果が出るようコンサルティングする「STRAIL」のカリキュラムに「Versant」を組み入れた。「ENGLISH COMPANY」「STRAIL」で受講は累計約28,000人。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
 
@@ -60,11 +60,11 @@
 
   <meta name="robots" content="noarchive"/>
   <meta property="og:type" content="article">
-  <meta property="og:title" content="スタディーハッカー 導入事例｜VERSANT（ヴァ―サント）【法人版】">
+  <meta property="og:title" content="スタディーハッカー 導入事例｜Versant（ヴァ―サント）【法人版】">
   <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/casestudy/05/index.html">
-  <meta property="og:description" content="2015年に英語パーソナルジム「ENGLISH COMPANY」のサービスを開始し、学びの領域に先進的な科学の知見を取り入れ、常に合理的な学び方を提案してきたスタディーハッカー。「ENGLISH COMPANY」のメソッドを凝縮し、短い学習時間でも成果が出るようコンサルティングする「STRAIL」のカリキュラムに「VERSANT」を組み入れた。「ENGLISH COMPANY」「STRAIL」で受講は累計約28,000人。">
+  <meta property="og:description" content="2015年に英語パーソナルジム「ENGLISH COMPANY」のサービスを開始し、学びの領域に先進的な科学の知見を取り入れ、常に合理的な学び方を提案してきたスタディーハッカー。「ENGLISH COMPANY」のメソッドを凝縮し、短い学習時間でも成果が出るようコンサルティングする「STRAIL」のカリキュラムに「Versant」を組み入れた。「ENGLISH COMPANY」「STRAIL」で受講は累計約28,000人。">
   <meta property="og:image" content="https://school.nikkei.co.jp/nn/feature/hr/assets/img/ogp_nbs_logo.jpg">
-  <meta property="og:site_name" content="スタディーハッカー 導入事例｜VERSANT（ヴァ―サント）【法人版】">
+  <meta property="og:site_name" content="スタディーハッカー 導入事例｜Versant（ヴァ―サント）【法人版】">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="135452203504570">
   <link rel="shortcut icon" href="https://school.nikkei.co.jp/nn/parts/school2016/images/favicon.ico" type="image/vnd.microsoft.icon">
@@ -87,7 +87,7 @@
 <header class="l-header">
   <div class="l-header__cnt">
     <a href="../../index.html">
-      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ" class="l-header__logo">
+      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="Versant&trade; ロゴ" class="l-header__logo">
     </a>
     <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
     <label for="nav-toggle" class="l-header__nav-toggle">
@@ -127,7 +127,7 @@
     <section class="p-casestudy-article__lead l-bg__gray">
       <div class="l-inner">
         <div class="l-article__lead is__white">
-          <p>2015年に英語パーソナルジム「ENGLISH COMPANY」のサービスを開始し、学びの領域に先進的な科学の知見を取り入れ、常に合理的な学び方を提案してきたスタディーハッカー。「ENGLISH COMPANY」のメソッドを凝縮し、短い学習時間でも成果が出るようコンサルティングする「STRAIL」のカリキュラムに「VERSANT」を組み入れた。「ENGLISH COMPANY」「STRAIL」で受講は累計約28,000人。</p>
+          <p>2015年に英語パーソナルジム「ENGLISH COMPANY」のサービスを開始し、学びの領域に先進的な科学の知見を取り入れ、常に合理的な学び方を提案してきたスタディーハッカー。「ENGLISH COMPANY」のメソッドを凝縮し、短い学習時間でも成果が出るようコンサルティングする「STRAIL」のカリキュラムに「Versant」を組み入れた。「ENGLISH COMPANY」「STRAIL」で受講は累計約28,000人。</p>
         </div>
 
         <div class="p-casestudy-article__summary">
@@ -135,7 +135,7 @@
 
           <div class="p-casestudy-article__summary_cnt">
             <h3 class="summary_badge">活用内容</h3>
-            <p>中上級者の受講生が比較的多い「STRAIL」の中でも、「スピーキングを伸ばしたい」というニーズが多く、現状レベルの把握やトレーニング期間を終えた後の成長などを定量的に示すために「VERSANT」を採用。受講者は最短3カ月のトレーニング期間の最初と最後に受験する。法人サービスを利用する企業からは成果が数字で確認できると好評を博している。</p>
+            <p>中上級者の受講生が比較的多い「STRAIL」の中でも、「スピーキングを伸ばしたい」というニーズが多く、現状レベルの把握やトレーニング期間を終えた後の成長などを定量的に示すために「Versant」を採用。受講者は最短3カ月のトレーニング期間の最初と最後に受験する。法人サービスを利用する企業からは成果が数字で確認できると好評を博している。</p>
           </div>
 
           <div class="p-casestudy-article__summary_cnt">
@@ -170,12 +170,12 @@
           </h3>
 
           <h4 class="p-casestudy-article__section_head visible_m">
-            <span class="o-textline">3カ月間の努力が「VERSANT」のスコアで</span><br>
+            <span class="o-textline">3カ月間の努力が「Versant」のスコアで</span><br>
             <span class="o-textline">示すことができ、詳細な分析もできることで、</span><br>
             <span class="o-textline">次の学習ステップもイメージできます。</span>
           </h4>
           <h4 class="p-casestudy-article__section_head visible_to_m">
-            <span class="o-textline">3カ月間の努力が「VERSANT」</span><br>
+            <span class="o-textline">3カ月間の努力が「Versant」</span><br>
             <span class="o-textline">のスコアで示すことができ、</span><br>
             <span class="o-textline">詳細な分析もできることで、</span><br>
             <span class="o-textline">次の学習ステップもイメージ</span><br>
@@ -185,16 +185,16 @@
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            「STRAIL」のカリキュラムに「VERSANT」を組み入れた理由と、その活用方法について教えてください。
+            「STRAIL」のカリキュラムに「Versant」を組み入れた理由と、その活用方法について教えてください。
           </p>
           <p class="l-article__section_interview_answer">
             「ENGLISH COMPANY」はプロトレーナーが受講生一人ひとりに集中的にトレーニングを行い、英語初心者から様々なレベルの受講生にご利用いただいています。一方「STRAIL」は「ENGLISH COMPANY」のメソッドをそのままに、コンサルタントが英語学習の効果と生産性を最大化するためのアセスメントと学習メニューを提供するコーチングサービスです。中上級者や「ENGLISH COMPANY」を終えてさらに上のレベルを目指す受講者が多く、主なニーズはビジネスでのスピーキング力の向上です。
           </p>
           <p class="l-article__section_interview_answer">
-            私たちは「確実に成長していただく」ことを第一の目標に掲げていますので、これまで定性的な評価が主流だったスピーキング力をスコアとして定量的に示したいと常々考えていました。「VERSANT」のスピーキング力測定の正確さと、忙しいビジネスパーソンにも手軽に受験していただける利便性を評価し、「STRAIL」のビジネス英語コースに取り入れることを決定しました。STRAILのコンサルントも全員受験し、問題音声の発音やスピードがネイティブに近いリアルさで、その採点や細かな分析が実際の実力を正確に評価していることを実感しています。
+            私たちは「確実に成長していただく」ことを第一の目標に掲げていますので、これまで定性的な評価が主流だったスピーキング力をスコアとして定量的に示したいと常々考えていました。「Versant」のスピーキング力測定の正確さと、忙しいビジネスパーソンにも手軽に受験していただける利便性を評価し、「STRAIL」のビジネス英語コースに取り入れることを決定しました。STRAILのコンサルントも全員受験し、問題音声の発音やスピードがネイティブに近いリアルさで、その採点や細かな分析が実際の実力を正確に評価していることを実感しています。
           </p>
           <p class="l-article__section_interview_answer">
-            受講生には受講開始直後とコースを修了する3カ月後に受験していただきます。3カ月の成果が数字で表れるということはコンサルタント側にもプレッシャーになりますが、最初のスコア分析で受講者のスピーキング力が詳細に掴めるため、より多角的なアドバイスを伝えることができます。また、受講者の中にはなかなか自信が持てなかったり、自己評価が低い人もいらっしゃいます。そういった方に3カ月間の英語学習の成果を「VERSANT」のスコアで示すことができるのは、ご卒業後の継続的な学習へつながることができます。英語研修としてご利用の法人様の場合には、定量的な成果をお示しすることができるため、同じ法人様からリピートいただく機会が以前より多くなりました。STRAILだけではなく、「ENGLISH COMPANY」でも希望者には「VERSANT」を受験していただいています。
+            受講生には受講開始直後とコースを修了する3カ月後に受験していただきます。3カ月の成果が数字で表れるということはコンサルタント側にもプレッシャーになりますが、最初のスコア分析で受講者のスピーキング力が詳細に掴めるため、より多角的なアドバイスを伝えることができます。また、受講者の中にはなかなか自信が持てなかったり、自己評価が低い人もいらっしゃいます。そういった方に3カ月間の英語学習の成果を「Versant」のスコアで示すことができるのは、ご卒業後の継続的な学習へつながることができます。英語研修としてご利用の法人様の場合には、定量的な成果をお示しすることができるため、同じ法人様からリピートいただく機会が以前より多くなりました。STRAILだけではなく、「ENGLISH COMPANY」でも希望者には「Versant」を受験していただいています。
           </p>
           
           <div class="l-article__section_interview_img">
@@ -227,16 +227,16 @@
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            「VERSANT」の分析をどうコンサルティングやアドバイスにつなげていますか。また、24年1月のテストのアップグレードをどのように評価されていますか。
+            「Versant」の分析をどうコンサルティングやアドバイスにつなげていますか。また、24年1月のテストのアップグレードをどのように評価されていますか。
           </p>
           <p class="l-article__section_interview_answer">
-            実際に受験してみて、大変素晴らしいアップグレードだと思いました。「VERSANT」はスピーキング力が測れるテストと評価されがちですが、実際にはリスニング力とスピーキング力のどちらの実力も把握できます。会話とは正確に相手の話している内容を聞いて理解し、それに合わせて適切な返答をおこなうことです。英語の音がそもそも聞きとれない場合や単語をうまく捉えることができなかった場合には、脳の認知資源がリスニングに多く使われてしまいます。そうすると、英語を話す際にスムーズに英語を組み立てることができなくなってしまいます。テンポの良い会話のラリーや比較的長めのパッセージを聞き取ったあとに、瞬時に英語で返答する必要がある「VERSANT」を受けていただくことで、受講者の皆さんは英語を正確に聞き取ることと、瞬発的に英語を発話する重要性にあらためて気付くことができます。これが一番重要なポイントです。
+            実際に受験してみて、大変素晴らしいアップグレードだと思いました。「Versant」はスピーキング力が測れるテストと評価されがちですが、実際にはリスニング力とスピーキング力のどちらの実力も把握できます。会話とは正確に相手の話している内容を聞いて理解し、それに合わせて適切な返答をおこなうことです。英語の音がそもそも聞きとれない場合や単語をうまく捉えることができなかった場合には、脳の認知資源がリスニングに多く使われてしまいます。そうすると、英語を話す際にスムーズに英語を組み立てることができなくなってしまいます。テンポの良い会話のラリーや比較的長めのパッセージを聞き取ったあとに、瞬時に英語で返答する必要がある「Versant」を受けていただくことで、受講者の皆さんは英語を正確に聞き取ることと、瞬発的に英語を発話する重要性にあらためて気付くことができます。これが一番重要なポイントです。
           </p>
           <p class="l-article__section_interview_answer">
-            ですから皆さんはトレーニングの中で、3カ月後の「VERSANT」の対策などを考えることもなく、正確にリスニングができるようになろうとか、チャンクといわれる意味のかたまり毎に発話できるようにして正確に、流暢に話せるようになろうとか、実際のビジネスシーンを想定したリアルなコミュニケーションを意識するようになります。
+            ですから皆さんはトレーニングの中で、3カ月後の「Versant」の対策などを考えることもなく、正確にリスニングができるようになろうとか、チャンクといわれる意味のかたまり毎に発話できるようにして正確に、流暢に話せるようになろうとか、実際のビジネスシーンを想定したリアルなコミュニケーションを意識するようになります。
           </p>
           <p class="l-article__section_interview_answer">
-            今回のVERSANTのアップグレードではリスニングとスピーキングのほか、「Manner of Speaking（話し方）」の項目が設けられ、それぞれ点数と評価コメントが示されるようになったのでさらに実践的な英語力が分かるようになりました。また、「文章や会話を聞き取り、英語で質問に回答する」はまさに「STRAIL」のカリキュラムで実践していることです。受講生の皆様には、ビジネス上で円滑にコミュニケーションができる力をつけていただきたいと思っていますので、その能力が測れることは「STRAIL」に限らず、当社のサービス全体において大きな意味を持ちます。また、ビジネスシーンで必ず必要となる「あなたの意見を述べる」という項目も、仕事のなかで使われる定型的な文章に気付けるチャンスになります。
+            今回のVersantのアップグレードではリスニングとスピーキングのほか、「Manner of Speaking（話し方）」の項目が設けられ、それぞれ点数と評価コメントが示されるようになったのでさらに実践的な英語力が分かるようになりました。また、「文章や会話を聞き取り、英語で質問に回答する」はまさに「STRAIL」のカリキュラムで実践していることです。受講生の皆様には、ビジネス上で円滑にコミュニケーションができる力をつけていただきたいと思っていますので、その能力が測れることは「STRAIL」に限らず、当社のサービス全体において大きな意味を持ちます。また、ビジネスシーンで必ず必要となる「あなたの意見を述べる」という項目も、仕事のなかで使われる定型的な文章に気付けるチャンスになります。
           </p>
         </div>
 
@@ -304,7 +304,7 @@
           <p class="l-footer__info_head">お問合せ窓口</p>
           <div class="l-footer__info_txt"><span>Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793</a> (平日10:00〜17:00)</div>
           <div class="l-footer__info_txt"><span>Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
+          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">Versant法人利用規約</a>
       </address>  
       
       <div class="l-footer__lnk_box">
