--- a/casestudy/06/index.html
+++ b/casestudy/06/index.html
@@ -2,8 +2,8 @@
   
 
 <!--Header Options
-<SEOTitle>資生堂 導入事例｜VERSANT（ヴァ―サント）【法人版】</SEOTitle>
-<SEODescription>「世界で勝てる日本発のグローバルビューティーカンパニー」を目指し、2030年に向けた中長期経営戦略を実践する資生堂。多彩な国籍の社員が自らの言葉で伝え合い、理解し合うことを目的に2018年より社内の公用語を英語としている。ダイバーシティ・エクイティ＆＆インクルージョン（DE&I）が進み、海外との連携が重要度を増す中、2023年からサプライネットワーク部門での採用試験の中に「VERSANT」を組み入れた。</SEODescription>
+<SEOTitle>資生堂 導入事例｜Versant（ヴァ―サント）【法人版】</SEOTitle>
+<SEODescription>「世界で勝てる日本発のグローバルビューティーカンパニー」を目指し、2030年に向けた中長期経営戦略を実践する資生堂。多彩な国籍の社員が自らの言葉で伝え合い、理解し合うことを目的に2018年より社内の公用語を英語としている。ダイバーシティ・エクイティ＆＆インクルージョン（DE&I）が進み、海外との連携が重要度を増す中、2023年からサプライネットワーク部門での採用試験の中に「Versant」を組み入れた。</SEODescription>
 <SEOrobots>noarchive</SEOrobots>
 <SEOcanonical>/nn/special/versant/</SEOcanonical>
 <OGType>article</OGType>
@@ -51,8 +51,8 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>資生堂 導入事例｜VERSANT（ヴァ―サント）【法人版】</title>
-  <meta name="description" content="「世界で勝てる日本発のグローバルビューティーカンパニー」を目指し、2030年に向けた中長期経営戦略を実践する資生堂。多彩な国籍の社員が自らの言葉で伝え合い、理解し合うことを目的に2018年より社内の公用語を英語としている。ダイバーシティ・エクイティ＆＆インクルージョン（DE&I）が進み、海外との連携が重要度を増す中、2023年からサプライネットワーク部門での採用試験の中に「VERSANT」を組み入れた。">
+  <title>資生堂 導入事例｜Versant（ヴァ―サント）【法人版】</title>
+  <meta name="description" content="「世界で勝てる日本発のグローバルビューティーカンパニー」を目指し、2030年に向けた中長期経営戦略を実践する資生堂。多彩な国籍の社員が自らの言葉で伝え合い、理解し合うことを目的に2018年より社内の公用語を英語としている。ダイバーシティ・エクイティ＆＆インクルージョン（DE&I）が進み、海外との連携が重要度を増す中、2023年からサプライネットワーク部門での採用試験の中に「Versant」を組み入れた。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
 
@@ -60,11 +60,11 @@
 
   <meta name="robots" content="noarchive"/>
   <meta property="og:type" content="article">
-  <meta property="og:title" content="資生堂 導入事例｜VERSANT（ヴァ―サント）【法人版】">
+  <meta property="og:title" content="資生堂 導入事例｜Versant（ヴァ―サント）【法人版】">
   <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/casestudy/06/index.html">
-  <meta property="og:description" content="「世界で勝てる日本発のグローバルビューティーカンパニー」を目指し、2030年に向けた中長期経営戦略を実践する資生堂。多彩な国籍の社員が自らの言葉で伝え合い、理解し合うことを目的に2018年より社内の公用語を英語としている。ダイバーシティ・エクイティ＆＆インクルージョン（DE&I）が進み、海外との連携が重要度を増す中、2023年からサプライネットワーク部門での採用試験の中に「VERSANT」を組み入れた。">
+  <meta property="og:description" content="「世界で勝てる日本発のグローバルビューティーカンパニー」を目指し、2030年に向けた中長期経営戦略を実践する資生堂。多彩な国籍の社員が自らの言葉で伝え合い、理解し合うことを目的に2018年より社内の公用語を英語としている。ダイバーシティ・エクイティ＆＆インクルージョン（DE&I）が進み、海外との連携が重要度を増す中、2023年からサプライネットワーク部門での採用試験の中に「Versant」を組み入れた。">
   <meta property="og:image" content="https://school.nikkei.co.jp/nn/feature/hr/assets/img/ogp_nbs_logo.jpg">
-  <meta property="og:site_name" content="資生堂 導入事例｜VERSANT（ヴァ―サント）【法人版】">
+  <meta property="og:site_name" content="資生堂 導入事例｜Versant（ヴァ―サント）【法人版】">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="135452203504570">
   <link rel="shortcut icon" href="https://school.nikkei.co.jp/nn/parts/school2016/images/favicon.ico" type="image/vnd.microsoft.icon">
@@ -87,7 +87,7 @@
 <header class="l-header">
   <div class="l-header__cnt">
     <a href="../../index.html">
-      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ" class="l-header__logo">
+      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="Versant&trade; ロゴ" class="l-header__logo">
     </a>
     <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
     <label for="nav-toggle" class="l-header__nav-toggle">
@@ -131,15 +131,15 @@
     <section class="p-casestudy-article__lead l-bg__gray">
       <div class="l-inner">
         <div class="l-article__lead is__white">
-          <p>「世界で勝てる日本発のグローバルビューティーカンパニー」を目指し、2030年に向けた中長期経営戦略を実践する資生堂。多彩な国籍の社員が自らの言葉で伝え合い、理解し合うことを目的に2018年より社内の公用語を英語としている。ダイバーシティ・エクイティ＆インクルージョン（DE&I）が進み、海外との連携が重要度を増す中、2023年からサプライネットワーク部門での採用試験の中に「VERSANT」を組み入れた。</p>
+          <p>「世界で勝てる日本発のグローバルビューティーカンパニー」を目指し、2030年に向けた中長期経営戦略を実践する資生堂。多彩な国籍の社員が自らの言葉で伝え合い、理解し合うことを目的に2018年より社内の公用語を英語としている。ダイバーシティ・エクイティ＆インクルージョン（DE&I）が進み、海外との連携が重要度を増す中、2023年からサプライネットワーク部門での採用試験の中に「Versant」を組み入れた。</p>
         </div>
 
         <div class="p-casestudy-article__summary">
-          <h2 class="p-casestudy-article__summary_headline">新卒採用にVERSANTを活用<br>グローバル人財選考に公平なものさしを</h2>
+          <h2 class="p-casestudy-article__summary_headline">新卒採用にVersantを活用<br>グローバル人財選考に公平なものさしを</h2>
 
           <div class="p-casestudy-article__summary_cnt">
             <h3 class="summary_badge">活用内容</h3>
-            <p>様々な部署でDE&Iが進む中、一部の部門で英語力を備えたグローバル人財の獲得意向が強まり、2023年の新卒採用の試験から「VERSANT」を採用した。書類選考を通過したすべての学生が通知後1週間以内に「VERSANT」を受験して一次面接に臨む。2024年の選考では、「VERSANT」導入部門をさらに拡大している</p>
+            <p>様々な部署でDE&Iが進む中、一部の部門で英語力を備えたグローバル人財の獲得意向が強まり、2023年の新卒採用の試験から「Versant」を採用した。書類選考を通過したすべての学生が通知後1週間以内に「Versant」を受験して一次面接に臨む。2024年の選考では、「Versant」導入部門をさらに拡大している</p>
           </div>
 
           <div class="p-casestudy-article__summary_cnt">
@@ -176,14 +176,14 @@
           <h4 class="p-casestudy-article__section_head visible_m">
             <span class="o-textline">「この人は英語ができる」という表現をよく使いますが、</span><br>
             <span class="o-textline">それは話す力なのか語彙力なのか判然としません。</span><br>
-            <span class="o-textline">「VERSANT」のスコアや結果分析はそれが</span><br>
+            <span class="o-textline">「Versant」のスコアや結果分析はそれが</span><br>
             <span class="o-textline">リアルに分かります。（大石氏）</span>
           </h4>
           <h4 class="p-casestudy-article__section_head visible_to_m">
             <span class="o-textline">「この人は英語ができる」という</span><br>
             <span class="o-textline">表現をよく使いますが、それは</span><br>
             <span class="o-textline">話す力なのか語彙力なのか判然と</span><br>
-            <span class="o-textline">しません。「VERSANT」の</span><br>
+            <span class="o-textline">しません。「Versant」の</span><br>
             <span class="o-textline">スコアや結果分析はそれが</span>
             <span class="o-textline">リアルに分かります。（大石氏）</span>
           </h4>
@@ -191,19 +191,19 @@
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            新卒採用で「VERSANT」を組み入れた背景とその活用について教えてください。
+            新卒採用で「Versant」を組み入れた背景とその活用について教えてください。
           </p>
           <p class="l-article__section_interview_answer">
             <span class="is-bold pr1em">福田</span>
-            資生堂は、現在推進中の中長期経営戦略で「世界で勝てる日本発のグローバルビューティーカンパニーを目指す」という目標を掲げており、グローバルに活躍できる人財を広く求めています。グローバル人財には様々な能力が求められますが、一部の部門からバイリンガル能力（英語・日本語）の要望が強まり、新卒採用の選考で「VERSANT」を取り入れました。様々な英語テストのなかで、①英語の会話力やスピーキングが測れる②学生たちが手軽に受験できる③詳細な結果分析ができる、という３つの要素を評価したことが採用の主な理由です。
+            資生堂は、現在推進中の中長期経営戦略で「世界で勝てる日本発のグローバルビューティーカンパニーを目指す」という目標を掲げており、グローバルに活躍できる人財を広く求めています。グローバル人財には様々な能力が求められますが、一部の部門からバイリンガル能力（英語・日本語）の要望が強まり、新卒採用の選考で「Versant」を取り入れました。様々な英語テストのなかで、①英語の会話力やスピーキングが測れる②学生たちが手軽に受験できる③詳細な結果分析ができる、という３つの要素を評価したことが採用の主な理由です。
           </p>
           <p class="l-article__section_interview_answer">
             <span class="is-bold pr1em">内藤</span>
-            様々なテストのパイロット版などを試しながら、実際のビジネスシーンや日常会話での英語能力が把握できるテストを検討する中、「VERSANT」の受験経験を持つ上司がその導入を推薦しました。私も実際にサンプルを試して、リアルなスピーキング力を測るテストだと実感しました。スコアは選考基準の1つで、コミュニケーション力や資生堂で活躍できる素養など、総合的な視点で採用を決めていますが、「VERSANT」を受験した学生たちは仕事での英語力の必要性を痛感するようで、合格してから入社までの期間にトレーニングに励む人が多かったのが想定外の効果でした。
+            様々なテストのパイロット版などを試しながら、実際のビジネスシーンや日常会話での英語能力が把握できるテストを検討する中、「Versant」の受験経験を持つ上司がその導入を推薦しました。私も実際にサンプルを試して、リアルなスピーキング力を測るテストだと実感しました。スコアは選考基準の1つで、コミュニケーション力や資生堂で活躍できる素養など、総合的な視点で採用を決めていますが、「Versant」を受験した学生たちは仕事での英語力の必要性を痛感するようで、合格してから入社までの期間にトレーニングに励む人が多かったのが想定外の効果でした。
           </p>
           <p class="l-article__section_interview_answer">
             <span class="is-bold pr1em">大石</span>
-            現時点の英語運用力を知りたいのですが、なかなか真の実力を知ることが難しくなっています。英語面接ではあらかじめ回答例を用意できますし、著名な英語テストも様々な対策が浸透しています。「この人は英語ができる」という表現をよく使いますが、それは話す力なのか語彙力なのか判然としません。「VERSANT」のスコアや結果分析はそれがリアルに分かります。試験対策ができないので、公平な結果として選考に利用することができます。
+            現時点の英語運用力を知りたいのですが、なかなか真の実力を知ることが難しくなっています。英語面接ではあらかじめ回答例を用意できますし、著名な英語テストも様々な対策が浸透しています。「この人は英語ができる」という表現をよく使いますが、それは話す力なのか語彙力なのか判然としません。「Versant」のスコアや結果分析はそれがリアルに分かります。試験対策ができないので、公平な結果として選考に利用することができます。
           </p>
           
           <div class="l-article__section_interview_img_3column">
@@ -222,13 +222,13 @@
           <h3 class="l-article__section_point">DE&Iが社内言語の英語化を<br class="visible_to_m">浸透させていく</h3>
 
           <h4 class="p-casestudy-article__section_head visible_m">
-            <span class="o-textline">「VERSANT」のスコアや結果の詳細な分析は、</span><br>
+            <span class="o-textline">「Versant」のスコアや結果の詳細な分析は、</span><br>
             <span class="o-textline">個々の英語スキルの強み・弱みの把握や学生への</span><br>
             <span class="o-textline">フィードバックの参考にもなると考えています。</span><br>
             <span class="o-textline">（福田氏）</span>
           </h4>
           <h4 class="p-casestudy-article__section_head visible_to_m">
-            <span class="o-textline">「VERSANT」のスコアや結果の</span><br>
+            <span class="o-textline">「Versant」のスコアや結果の</span><br>
             <span class="o-textline">詳細な分析は、個々の英語スキルの</span><br>
             <span class="o-textline">強み・弱みの把握や学生への</span><br>
             <span class="o-textline">フィードバックの参考にも</span><br>
@@ -246,11 +246,11 @@
           </p>
           <p class="l-article__section_interview_answer">
             <span class="is-bold pr1em">内藤</span>
-            日本向けの商品を担当する部署など英語を使用する機会の少ない部署もありますが、実際にはすでに外国籍の社員の割合が多い部署もあり、その傾向は全社的に広がっています。「VERSANT」を受験した学生たちから「どのレベルの英語力が必要か」と質問を受けることがありますが、語学は日々の鍛錬なので入社後にグンと向上する人も多くいることを伝えています。また、応募者の学生や中途採用候補の人々の多くがグローバル展開の事業に貢献することを望んでいるのも最近の傾向です。
+            日本向けの商品を担当する部署など英語を使用する機会の少ない部署もありますが、実際にはすでに外国籍の社員の割合が多い部署もあり、その傾向は全社的に広がっています。「Versant」を受験した学生たちから「どのレベルの英語力が必要か」と質問を受けることがありますが、語学は日々の鍛錬なので入社後にグンと向上する人も多くいることを伝えています。また、応募者の学生や中途採用候補の人々の多くがグローバル展開の事業に貢献することを望んでいるのも最近の傾向です。
           </p>
           <p class="l-article__section_interview_answer">
             <span class="is-bold pr1em">福田</span>
-            そうした流れを受け、採用試験で「VERSANT」を取り入れる部門も拡大しています。
+            そうした流れを受け、採用試験で「Versant」を取り入れる部門も拡大しています。
           </p>
         </div>
 
@@ -269,13 +269,13 @@
           <h4 class="p-casestudy-article__section_head visible_m">
             <span class="o-textline">多彩なバックグラウンドを持つ人々が混ざり合い、</span><br>
             <span class="o-textline">イノベーションを創出するために、</span><br>
-            <span class="o-textline">「VERSANT」の活用方法も</span><br>
+            <span class="o-textline">「Versant」の活用方法も</span><br>
             <span class="o-textline">さらに検討していければいいですね。（内藤氏）</span>
           </h4>
           <h4 class="p-casestudy-article__section_head visible_to_m">
             <span class="o-textline">多彩なバックグラウンドを持つ人々</span><br>
             <span class="o-textline">が混ざり合い、イノベーションを</span><br>
-            <span class="o-textline">創出するために、「VERSANT」の</span><br>
+            <span class="o-textline">創出するために、「Versant」の</span><br>
             <span class="o-textline">活用方法もさらに検討していければ</span><br>
             <span class="o-textline">いいですね。（内藤氏）</span>
           </h4>
@@ -283,19 +283,19 @@
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            最後に、「VERSANT」を用いた採用の効果や今後の期待感についてお聞かせください。
+            最後に、「Versant」を用いた採用の効果や今後の期待感についてお聞かせください。
           </p>
           <p class="l-article__section_interview_answer">
             <span class="is-bold pr1em">福田</span>
-            当社の採用試験で「VERSANT」を受験した人々がちょうど入社し働き始めています。テスト内容が難しかったという声は多かったのですが、このレベルの実力を求められているのだと感じた人が、その後に英語トレーニングなどを積んでから入社しているのはとても良い効果だと喜んでいます。実際に内定を得てから海外に英語学習の短期留学を決めた学生もいます。「VERSANT」を１つの起爆剤として、グローバルでの活躍を夢見る学生たちを世界の舞台に導いていきたいと考えています。
+            当社の採用試験で「Versant」を受験した人々がちょうど入社し働き始めています。テスト内容が難しかったという声は多かったのですが、このレベルの実力を求められているのだと感じた人が、その後に英語トレーニングなどを積んでから入社しているのはとても良い効果だと喜んでいます。実際に内定を得てから海外に英語学習の短期留学を決めた学生もいます。「Versant」を１つの起爆剤として、グローバルでの活躍を夢見る学生たちを世界の舞台に導いていきたいと考えています。
           </p>
           <p class="l-article__section_interview_answer">
             <span class="is-bold pr1em">内藤</span>
-            資生堂には150年の歴史があり、その中で様々な文化をつくってきました。DE&Iにさらに注力していくいま、英語はお互いの考えや意見を伝え合う大切なツールです。多彩なバックグラウンドを持つ人々が混ざり合い、イノベーションを創出するために、「VERSANT」の活用方法もさらに検討していければいいですね。
+            資生堂には150年の歴史があり、その中で様々な文化をつくってきました。DE&Iにさらに注力していくいま、英語はお互いの考えや意見を伝え合う大切なツールです。多彩なバックグラウンドを持つ人々が混ざり合い、イノベーションを創出するために、「Versant」の活用方法もさらに検討していければいいですね。
           </p>
           <p class="l-article__section_interview_answer">
             <span class="is-bold pr1em">大石</span>
-            資生堂は世界で勝てる日本発のグローバルビューティーカンパニーを目指して様々な挑戦を続けています。だからこそ、新たに入社する人々に求めたい素養が３つあります。1つは自分が果たしたい夢への思いの強さ。2つ目はそれを行動に移す熱量。3つ目はグローバルに通用するコミュニケーション力、つまり英語です。コミュニケーション力こそがすべての道を開くカギであり、それを磨き続けることで夢に近づくことができます。「VERSANT」の刺激が彼らにそのことを気付かせてくれることを期待しています。
+            資生堂は世界で勝てる日本発のグローバルビューティーカンパニーを目指して様々な挑戦を続けています。だからこそ、新たに入社する人々に求めたい素養が３つあります。1つは自分が果たしたい夢への思いの強さ。2つ目はそれを行動に移す熱量。3つ目はグローバルに通用するコミュニケーション力、つまり英語です。コミュニケーション力こそがすべての道を開くカギであり、それを磨き続けることで夢に近づくことができます。「Versant」の刺激が彼らにそのことを気付かせてくれることを期待しています。
           </p>
         </div>
 
@@ -324,7 +324,7 @@
           <p class="l-footer__info_head">お問合せ窓口</p>
           <div class="l-footer__info_txt"><span>Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793</a> (平日10:00〜17:00)</div>
           <div class="l-footer__info_txt"><span>Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
+          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">Versant法人利用規約</a>
       </address>  
       
       <div class="l-footer__lnk_box">
