--- a/casestudy/08/index.html
+++ b/casestudy/08/index.html
@@ -2,8 +2,8 @@
   
 
 <!--Header Options
-<SEOTitle>日本触媒 導入事例｜VERSANT（ヴァ―サント）【法人版】</SEOTitle>
-<SEODescription>紙おむつに使われる高吸水性樹脂（SAP）に強みを持ち、エネルギー事業、エレクトロニクス事業、ライフサイエンス事業等にも優れた高機能製品・ソリューションを提供する日本触媒。2022年度に人事制度と人財開発方針を刷新し、自律的なキャリア形成を支援する施策の1つとして「グローバルに活躍できる人財」の育成強化を掲げる。英語学習プログラムの充実と共に英語能力診断基準として「VERSANT」を採用した。</SEODescription>
+<SEOTitle>日本触媒 導入事例｜Versant（ヴァ―サント）【法人版】</SEOTitle>
+<SEODescription>紙おむつに使われる高吸水性樹脂（SAP）に強みを持ち、エネルギー事業、エレクトロニクス事業、ライフサイエンス事業等にも優れた高機能製品・ソリューションを提供する日本触媒。2022年度に人事制度と人財開発方針を刷新し、自律的なキャリア形成を支援する施策の1つとして「グローバルに活躍できる人財」の育成強化を掲げる。英語学習プログラムの充実と共に英語能力診断基準として「Versant」を採用した。</SEODescription>
 <SEOrobots>noarchive</SEOrobots>
 <SEOcanonical>/nn/special/versant/</SEOcanonical>
 <OGType>article</OGType>
@@ -51,8 +51,8 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>日本触媒 導入事例｜VERSANT（ヴァ―サント）【法人版】</title>
-  <meta name="description" content="紙おむつに使われる高吸水性樹脂（SAP）に強みを持ち、エネルギー事業、エレクトロニクス事業、ライフサイエンス事業等にも優れた高機能製品・ソリューションを提供する日本触媒。2022年度に人事制度と人財開発方針を刷新し、自律的なキャリア形成を支援する施策の1つとして「グローバルに活躍できる人財」の育成強化を掲げる。英語学習プログラムの充実と共に英語能力診断基準として「VERSANT」を採用した。">
+  <title>日本触媒 導入事例｜Versant（ヴァ―サント）【法人版】</title>
+  <meta name="description" content="紙おむつに使われる高吸水性樹脂（SAP）に強みを持ち、エネルギー事業、エレクトロニクス事業、ライフサイエンス事業等にも優れた高機能製品・ソリューションを提供する日本触媒。2022年度に人事制度と人財開発方針を刷新し、自律的なキャリア形成を支援する施策の1つとして「グローバルに活躍できる人財」の育成強化を掲げる。英語学習プログラムの充実と共に英語能力診断基準として「Versant」を採用した。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
 
@@ -60,11 +60,11 @@
 
   <meta name="robots" content="noarchive"/>
   <meta property="og:type" content="article">
-  <meta property="og:title" content="日本触媒 導入事例｜VERSANT（ヴァ―サント）【法人版】">
+  <meta property="og:title" content="日本触媒 導入事例｜Versant（ヴァ―サント）【法人版】">
   <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/casestudy/08/index.html">
-  <meta property="og:description" content="紙おむつに使われる高吸水性樹脂（SAP）に強みを持ち、エネルギー事業、エレクトロニクス事業、ライフサイエンス事業等にも優れた高機能製品・ソリューションを提供する日本触媒。2022年度に人事制度と人財開発方針を刷新し、自律的なキャリア形成を支援する施策の1つとして「グローバルに活躍できる人財」の育成強化を掲げる。英語学習プログラムの充実と共に英語能力診断基準として「VERSANT」を採用した。">
+  <meta property="og:description" content="紙おむつに使われる高吸水性樹脂（SAP）に強みを持ち、エネルギー事業、エレクトロニクス事業、ライフサイエンス事業等にも優れた高機能製品・ソリューションを提供する日本触媒。2022年度に人事制度と人財開発方針を刷新し、自律的なキャリア形成を支援する施策の1つとして「グローバルに活躍できる人財」の育成強化を掲げる。英語学習プログラムの充実と共に英語能力診断基準として「Versant」を採用した。">
   <meta property="og:image" content="https://school.nikkei.co.jp/nn/feature/hr/assets/img/ogp_nbs_logo.jpg">
-  <meta property="og:site_name" content="日本触媒 導入事例｜VERSANT（ヴァ―サント）【法人版】">
+  <meta property="og:site_name" content="日本触媒 導入事例｜Versant（ヴァ―サント）【法人版】">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="135452203504570">
   <link rel="shortcut icon" href="https://school.nikkei.co.jp/nn/parts/school2016/images/favicon.ico" type="image/vnd.microsoft.icon">
@@ -87,7 +87,7 @@
 <header class="l-header">
   <div class="l-header__cnt">
     <a href="../../index.html">
-      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ" class="l-header__logo">
+      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="Versant&trade; ロゴ" class="l-header__logo">
     </a>
     <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
     <label for="nav-toggle" class="l-header__nav-toggle">
@@ -129,7 +129,7 @@
     <section class="p-casestudy-article__lead l-bg__gray">
       <div class="l-inner">
         <div class="l-article__lead is__white">
-          <p>紙おむつに使われる高吸水性樹脂（SAP）に強みを持ち、エネルギー事業、エレクトロニクス事業、ライフサイエンス事業等にも優れた高機能製品・ソリューションを提供する日本触媒。<br>2022年度に人事制度と人財開発方針を刷新し、自律的なキャリア形成を支援する施策の1つとして「グローバルに活躍できる人財」の育成強化を掲げる。英語学習プログラムの充実と共に英語能力診断基準として「VERSANT」を採用した。</p>
+          <p>紙おむつに使われる高吸水性樹脂（SAP）に強みを持ち、エネルギー事業、エレクトロニクス事業、ライフサイエンス事業等にも優れた高機能製品・ソリューションを提供する日本触媒。<br>2022年度に人事制度と人財開発方針を刷新し、自律的なキャリア形成を支援する施策の1つとして「グローバルに活躍できる人財」の育成強化を掲げる。英語学習プログラムの充実と共に英語能力診断基準として「Versant」を採用した。</p>
         </div>
 
         <div class="p-casestudy-article__summary">
@@ -137,7 +137,7 @@
 
           <div class="p-casestudy-article__summary_cnt">
             <h3 class="summary_badge">活用内容</h3>
-            <p>22年度に刷新した人財開発方針の自律型学習プログラムのなかで、「グローバルに活躍できる人財」の育成を重要課題とし、様々な英語研修プログラムを実施してキャリア形成を支援する。ビジネスの現場で使える英語運用力を重視し、その向上を測定する手段として「VERSANT」を年に2回活用し、毎年約200人が受験する。</p>
+            <p>22年度に刷新した人財開発方針の自律型学習プログラムのなかで、「グローバルに活躍できる人財」の育成を重要課題とし、様々な英語研修プログラムを実施してキャリア形成を支援する。ビジネスの現場で使える英語運用力を重視し、その向上を測定する手段として「Versant」を年に2回活用し、毎年約200人が受験する。</p>
           </div>
 
           <div class="p-casestudy-article__summary_cnt">
@@ -178,28 +178,28 @@
             <span class="o-textline">「世界標準」「国際基準」を理解することが</span><br>
             <span class="o-textline">グローバルビジネスにおける効果的な</span><br>
             <span class="o-textline">コミュニケーションには重要と考え、</span><br>
-            <span class="o-textline">世界標準の英語テストである「VERSANT」を選びました。</span>
+            <span class="o-textline">世界標準の英語テストである「Versant」を選びました。</span>
           </h4>
           <h4 class="p-casestudy-article__section_head visible_to_m">
             <span class="o-textline">「世界標準」「国際基準」を理解</span><br>
             <span class="o-textline">することがグローバルビジネスに</span><br>
             <span class="o-textline">おける効果的なコミュニケーション</span><br>
             <span class="o-textline">には重要と考え、世界標準の英語</span><br>
-            <span class="o-textline">テストである「VERSANT」を</span>
+            <span class="o-textline">テストである「Versant」を</span>
             <span class="o-textline">選びました。</span>
           </h4>
         </div>
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            新しい人財開発方針の概要と「VERSANT」採用の理由について教えてください。
+            新しい人財開発方針の概要と「Versant」採用の理由について教えてください。
           </p>
           <p class="l-article__section_interview_answer">
             2030年の目指す姿を描いた長期ビジョン「TechnoAmenity for the future」に定めた３つの変革「事業の変革」「環境対応への変革」「組織の変革」を推進しており、組織の変革において自律型人財を育成することが大きなテーマになりました。そこで自律的なキャリア形成を支援するために、様々な研修メニューや学習プログラムを用意しました。その中でも「グローバルに活躍できる人財」の育成施策の強化は重視したポイントです。「異文化理解・対応力」「自ら考え、チャレンジ精神をもって行動できる考動力」「コミュニケーション能力」の3つを定義し、それらを獲得するための具体的なロードマップも自分たちで作りました。
           </p>
           <p class="l-article__section_interview_answer">
-            そのベースとなる英語運用力を身につけるために、従来のテストを見直し、「英語を聞いて即座に英語で応答できる能力」を測定する「VERSANT」を新たに採用しました。<br>
-            採用の際に議論に上がったのが、ただ英語の読み書きができることではなく、海外ビジネスにおける高度なコミュニケーション力や異文化への理解を重視することでした。当社の海外売上収益比率は5割を超えており、やはり「世界標準」「国際基準」を理解することが効果的なコミュニケーションには重要です。「VERSANT」が世界標準の英語テストであることも採用した理由の一つです。
+            そのベースとなる英語運用力を身につけるために、従来のテストを見直し、「英語を聞いて即座に英語で応答できる能力」を測定する「Versant」を新たに採用しました。<br>
+            採用の際に議論に上がったのが、ただ英語の読み書きができることではなく、海外ビジネスにおける高度なコミュニケーション力や異文化への理解を重視することでした。当社の海外売上収益比率は5割を超えており、やはり「世界標準」「国際基準」を理解することが効果的なコミュニケーションには重要です。「Versant」が世界標準の英語テストであることも採用した理由の一つです。
           </p>
           <p class="l-article__section_interview_answer">
             どの部署においても英語が不得意であることによる機会損失は見逃せません。情報の早期取得やスピード感ある交渉だけでなく、安全面や品質保証においても世界標準のルールなどを理解しておく必要があります。ですから海外赴任者や海外向け営業担当など、業務で英語を使用する従業員だけでなく、あらゆる部門で世界標準を体現できる人財の育成を目指しています。
@@ -233,14 +233,14 @@
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            どのような職種の人が「VERSANT」を受験されていますか。<br>また、受験者の反応はいかがですか。
+            どのような職種の人が「Versant」を受験されていますか。<br>また、受験者の反応はいかがですか。
           </p>
           <p class="l-article__section_interview_answer">
-            全社員を対象に公募形式で年に2回の機会を設けており、1年間で約200人が受験しています。英語学習のプログラムを充実させたので、自己能力の定点観測を求める需要もあり、英語習得の意欲が各部署で高まっています。世界標準の評価基準であるCEFR（セファール）に対応した「VERSANT」を導入することで、個人のレベルアップをきちんと観測することを推奨しています。<br>
-            現時点では、英語習得の緊急度が高い営業や研究、技術部門に所属する社員が中心的に「VERSANT」を受験しています。今後、様々な部門へと少しずつ裾野を広げていきたいと考えています。これまでは英語が得意な人に海外に関する業務が回ってくることが多くありましたが、やはり直接的な関係者が交渉や情報収集することで、ビジネスチャンスは格段に広がります。
+            全社員を対象に公募形式で年に2回の機会を設けており、1年間で約200人が受験しています。英語学習のプログラムを充実させたので、自己能力の定点観測を求める需要もあり、英語習得の意欲が各部署で高まっています。世界標準の評価基準であるCEFR（セファール）に対応した「Versant」を導入することで、個人のレベルアップをきちんと観測することを推奨しています。<br>
+            現時点では、英語習得の緊急度が高い営業や研究、技術部門に所属する社員が中心的に「Versant」を受験しています。今後、様々な部門へと少しずつ裾野を広げていきたいと考えています。これまでは英語が得意な人に海外に関する業務が回ってくることが多くありましたが、やはり直接的な関係者が交渉や情報収集することで、ビジネスチャンスは格段に広がります。
           </p>
           <p class="l-article__section_interview_answer">
-            受験者の多くはリアルな会話と自己の能力のギャップに驚きますが、それをバネに積極的にプログラムに取り組んでいます。必ずしも海外赴任経験者が高得点を取るとは限らず、各個人が自身の英語運用力を客観的に把握することで、適切な能力伸長を図ることができると感じました。海外関係会社へ派遣する海外トレーニープログラムでは、CEFRで一定レベル以上をクリアすると選抜されるチャンスも広がるため、「VERSANT」の受験に向けて、日々レベルアップに取り組んでいる社員もいます。
+            受験者の多くはリアルな会話と自己の能力のギャップに驚きますが、それをバネに積極的にプログラムに取り組んでいます。必ずしも海外赴任経験者が高得点を取るとは限らず、各個人が自身の英語運用力を客観的に把握することで、適切な能力伸長を図ることができると感じました。海外関係会社へ派遣する海外トレーニープログラムでは、CEFRで一定レベル以上をクリアすると選抜されるチャンスも広がるため、「Versant」の受験に向けて、日々レベルアップに取り組んでいる社員もいます。
           </p>
           
         </div>
@@ -272,14 +272,14 @@
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            「VERSANT」を活用したグローバル人財の育成において、今後の展望をお聞かせください。
+            「Versant」を活用したグローバル人財の育成において、今後の展望をお聞かせください。
           </p>
           <p class="l-article__section_interview_answer">
             グローバル人財の先にはグローバルリーダーの育成があります。グローバル人財のステップとして、英語のやり取りで簡単な英会話や英文でコミュニケーションできる基礎的な伝達力から異文化の中で協業できる対応力へ、そして海外関係会社やその国の地域社会を動かすイノベーション創出力を備えることがグローバルリーダーに求める資質です。その指標として「CEFR B1以上」を掲げています。
           </p>
           <p class="l-article__section_interview_answer">
             社員がこうした基準を次々とクリアしていくことで組織全体がグローバル化し、国際基準やルール、理念、システムなどを踏まえた世界標準のビジネスが推進できると考えています。<br>
-            私もベルギーに赴任し、海外でのビジネスを経験しましたが、相互理解のない中で仕事を前に進めることは困難です。一方で、信頼関係があれば英語が曖昧でよいわけでもありません。例えば、大きな契約交渉時には現地の弁護士へ相談しますが、法律用語も含めた詳細な理解が必要です。交渉先との交渉を優位に進められずに不利な条件を飲まざるを得なくなれば会社に大きな損失を及ぼす可能性もあります。そうした責任感やリスクテイクのスキルを一人ひとりが身に付けてグローバル化することが重要です。その点では、やはり英語運用力を高めることを重視し、「VERSANT」により定点観測を行うことは有益なことだと思います。
+            私もベルギーに赴任し、海外でのビジネスを経験しましたが、相互理解のない中で仕事を前に進めることは困難です。一方で、信頼関係があれば英語が曖昧でよいわけでもありません。例えば、大きな契約交渉時には現地の弁護士へ相談しますが、法律用語も含めた詳細な理解が必要です。交渉先との交渉を優位に進められずに不利な条件を飲まざるを得なくなれば会社に大きな損失を及ぼす可能性もあります。そうした責任感やリスクテイクのスキルを一人ひとりが身に付けてグローバル化することが重要です。その点では、やはり英語運用力を高めることを重視し、「Versant」により定点観測を行うことは有益なことだと思います。
           </p>
           <p class="l-article__section_interview_answer">
             欧米・アジアに生産・営業拠点を有し、グローバルにビジネスを展開している当社では社員の活躍の場はまさに世界が舞台になっています。特にこの数年はコロナ禍やロシアのウクライナ侵攻など、サプライチェーンの再構築や社会情勢の変化に合わせたスピーディーな交渉が必要ですので、様々な部門でグローバル人財の必要性は高まっています。これからも人事的な側面から高いレベルのグローバル人財とグローバルリーダーの育成を推進していきたいと考えています。
@@ -311,7 +311,7 @@
           <p class="l-footer__info_head">お問合せ窓口</p>
           <div class="l-footer__info_txt"><span>Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793</a> (平日10:00〜17:00)</div>
           <div class="l-footer__info_txt"><span>Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
+          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">Versant法人利用規約</a>
       </address>  
       
       <div class="l-footer__lnk_box">
