--- a/casestudy/09/index.html
+++ b/casestudy/09/index.html
@@ -2,8 +2,8 @@
   
 
 <!--Header Options
-<SEOTitle>日本酸素ホールディングス 導入事例｜VERSANT（ヴァ―サント）【法人版】</SEOTitle>
-<SEODescription>日本酸素ホールディングスは2020年、米国・欧州・豪州・アジアへの海外売上高比率の高まりとともに、さらなる成長のために日本事業を中心とした経営から、グローバル運営体制を構築すべく、純粋持株会社が各事業会社を管理するいわゆるホールディングス体制となった。ホールディングス体制への移行に伴い、グローバルカンパニーとして海外の各事業会社と共通言語となり得る英語によるコミュニケーションとグローバルネットワーキングの構築を図ることが必須となり、英語学習の機会を促進推進する。 社員の英語能力研修受講者のレベルアップ確認や海外駐在員の学習意欲をサポートするために「VERSANT」を活用する。</SEODescription>
+<SEOTitle>日本酸素ホールディングス 導入事例｜Versant（ヴァ―サント）【法人版】</SEOTitle>
+<SEODescription>日本酸素ホールディングスは2020年、米国・欧州・豪州・アジアへの海外売上高比率の高まりとともに、さらなる成長のために日本事業を中心とした経営から、グローバル運営体制を構築すべく、純粋持株会社が各事業会社を管理するいわゆるホールディングス体制となった。ホールディングス体制への移行に伴い、グローバルカンパニーとして海外の各事業会社と共通言語となり得る英語によるコミュニケーションとグローバルネットワーキングの構築を図ることが必須となり、英語学習の機会を促進推進する。 社員の英語能力研修受講者のレベルアップ確認や海外駐在員の学習意欲をサポートするために「Versant」を活用する。</SEODescription>
 <SEOrobots>noarchive</SEOrobots>
 <SEOcanonical>/nn/special/versant/</SEOcanonical>
 <OGType>article</OGType>
@@ -51,8 +51,8 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>日本酸素ホールディングス 導入事例｜VERSANT（ヴァ―サント）【法人版】</title>
-  <meta name="description" content="日本酸素ホールディングスは2020年、米国・欧州・豪州・アジアへの海外売上高比率の高まりとともに、さらなる成長のために日本事業を中心とした経営から、グローバル運営体制を構築すべく、純粋持株会社が各事業会社を管理するいわゆるホールディングス体制となった。ホールディングス体制への移行に伴い、グローバルカンパニーとして海外の各事業会社と共通言語となり得る英語によるコミュニケーションとグローバルネットワーキングの構築を図ることが必須となり、英語学習の機会を促進推進する。 社員の英語能力研修受講者のレベルアップ確認や海外駐在員の学習意欲をサポートするために「VERSANT」を活用する。">
+  <title>日本酸素ホールディングス 導入事例｜Versant（ヴァ―サント）【法人版】</title>
+  <meta name="description" content="日本酸素ホールディングスは2020年、米国・欧州・豪州・アジアへの海外売上高比率の高まりとともに、さらなる成長のために日本事業を中心とした経営から、グローバル運営体制を構築すべく、純粋持株会社が各事業会社を管理するいわゆるホールディングス体制となった。ホールディングス体制への移行に伴い、グローバルカンパニーとして海外の各事業会社と共通言語となり得る英語によるコミュニケーションとグローバルネットワーキングの構築を図ることが必須となり、英語学習の機会を促進推進する。 社員の英語能力研修受講者のレベルアップ確認や海外駐在員の学習意欲をサポートするために「Versant」を活用する。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
 
@@ -60,11 +60,11 @@
 
   <meta name="robots" content="noarchive"/>
   <meta property="og:type" content="article">
-  <meta property="og:title" content="日本酸素ホールディングス 導入事例｜VERSANT（ヴァ―サント）【法人版】">
+  <meta property="og:title" content="日本酸素ホールディングス 導入事例｜Versant（ヴァ―サント）【法人版】">
   <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/casestudy/09/index.html">
-  <meta property="og:description" content="日本酸素ホールディングスは2020年、米国・欧州・豪州・アジアへの海外売上高比率の高まりとともに、さらなる成長のために日本事業を中心とした経営から、グローバル運営体制を構築すべく、純粋持株会社が各事業会社を管理するいわゆるホールディングス体制となった。ホールディングス体制への移行に伴い、グローバルカンパニーとして海外の各事業会社と共通言語となり得る英語によるコミュニケーションとグローバルネットワーキングの構築を図ることが必須となり、英語学習の機会を促進推進する。 社員の英語能力研修受講者のレベルアップ確認や海外駐在員の学習意欲をサポートするために「VERSANT」を活用する。">
+  <meta property="og:description" content="日本酸素ホールディングスは2020年、米国・欧州・豪州・アジアへの海外売上高比率の高まりとともに、さらなる成長のために日本事業を中心とした経営から、グローバル運営体制を構築すべく、純粋持株会社が各事業会社を管理するいわゆるホールディングス体制となった。ホールディングス体制への移行に伴い、グローバルカンパニーとして海外の各事業会社と共通言語となり得る英語によるコミュニケーションとグローバルネットワーキングの構築を図ることが必須となり、英語学習の機会を促進推進する。 社員の英語能力研修受講者のレベルアップ確認や海外駐在員の学習意欲をサポートするために「Versant」を活用する。">
   <meta property="og:image" content="https://school.nikkei.co.jp/nn/feature/hr/assets/img/ogp_nbs_logo.jpg">
-  <meta property="og:site_name" content="日本酸素ホールディングス 導入事例｜VERSANT（ヴァ―サント）【法人版】">
+  <meta property="og:site_name" content="日本酸素ホールディングス 導入事例｜Versant（ヴァ―サント）【法人版】">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="135452203504570">
   <link rel="shortcut icon" href="https://school.nikkei.co.jp/nn/parts/school2016/images/favicon.ico" type="image/vnd.microsoft.icon">
@@ -87,7 +87,7 @@
 <header class="l-header">
   <div class="l-header__cnt">
     <a href="../../index.html">
-      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ" class="l-header__logo">
+      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="Versant&trade; ロゴ" class="l-header__logo">
     </a>
     <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
     <label for="nav-toggle" class="l-header__nav-toggle">
@@ -133,7 +133,7 @@
         <div class="l-article__lead is__white">
           <p>
             日本酸素ホールディングスは2020年、米国・欧州・豪州・アジアへの海外売上高比率の高まりとともに、さらなる成長のために日本事業を中心とした経営から、グローバル運営体制を構築すべく、純粋持株会社が各事業会社を管理するいわゆるホールディングス体制となった。<br>
-            ホールディングス体制への移行に伴い、グローバルカンパニーとして海外の各事業会社と共通言語となり得る英語によるコミュニケーションとグローバルネットワーキングの構築を図ることが必須となり、英語学習の機会を促進する。 社員の英語能力のレベルアップ確認や海外駐在員の学習意欲をサポートするために「VERSANT」を活用する。
+            ホールディングス体制への移行に伴い、グローバルカンパニーとして海外の各事業会社と共通言語となり得る英語によるコミュニケーションとグローバルネットワーキングの構築を図ることが必須となり、英語学習の機会を促進する。 社員の英語能力のレベルアップ確認や海外駐在員の学習意欲をサポートするために「Versant」を活用する。
           </p>
         </div>
 
@@ -142,11 +142,11 @@
 
           <div class="p-casestudy-article__summary_cnt">
             <h3 class="summary_badge">活用内容</h3>
-            <p>世界各地で働く社員たちのエンゲージメントを推進する施策として「人財交流プログラムの推進」「ダイバーシティ＆インクルージョン」を掲げ、2021年より「VERSANT」を取り入れた語学力向上プログラムを導入。毎年、ホールディングスから約70人と海外駐在員約60人が「VERSANT」を受験する。</p>
+            <p>世界各地で働く社員たちのエンゲージメントを推進する施策として「人財交流プログラムの推進」「ダイバーシティ＆インクルージョン」を掲げ、2021年より「Versant」を取り入れた語学力向上プログラムを導入。毎年、ホールディングスから約70人と海外駐在員約60人が「Versant」を受験する。</p>
           </div>
 
           <div class="p-casestudy-article__summary_cnt">
-            <h3 class="summary_badge">英会話研修およびVERSANT導入の目的</h3>
+            <h3 class="summary_badge">英会話研修およびVersant導入の目的</h3>
             <ul>
               <li>実践的な英語力を備える人材の育成</li>
               <li>グローバルネットワーキングの構築</li>
@@ -193,11 +193,11 @@
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            まず、「VERSANT」を活用いただく背景について教えてください。
+            まず、「Versant」を活用いただく背景について教えてください。
           </p>
           <p class="l-article__section_interview_answer">
             <span class="is-bold pr1em">柴田</span>
-            2020年にホールディングス体制になり、グローバルカンパニーとしてふさわしい組織や制度の構築を進めるなか、世界各地で働く社員たちのエンゲージメント向上や親密なネットワークが大きなミッションとなりました。特にホールディングスではグローバルコミュニケーション能力が必要不可欠で、仕事に直結した英語研修プログラムをスタートさせました。コミュニケーション力を上げることを主眼とし、スピーキング力を測る目的で「VERSANT」の採用を決定しました。実践で使える英語力を測るには「VERSANT」が最適です。
+            2020年にホールディングス体制になり、グローバルカンパニーとしてふさわしい組織や制度の構築を進めるなか、世界各地で働く社員たちのエンゲージメント向上や親密なネットワークが大きなミッションとなりました。特にホールディングスではグローバルコミュニケーション能力が必要不可欠で、仕事に直結した英語研修プログラムをスタートさせました。コミュニケーション力を上げることを主眼とし、スピーキング力を測る目的で「Versant」の採用を決定しました。実践で使える英語力を測るには「Versant」が最適です。
           </p>
           <p class="l-article__section_interview_answer">
             当社の主力である産業ガスのビジネスは現地で完結する消費地立地型ビジネスで、これまで他国との交流や情報交換などは活発ではありませんでした。ホールディングス体制になり、各地域のベストプラクティスを共有することでグループ総合力を発揮し、さらなる成長を目指すことができます。具体的には、事業を取り巻くリスクと機会を様々な視点で議論し、各社の成功事例を共有する「オペレーショナル・エクセレンス」を始動しています。四半期ごとに各エリアで定例ミーティングを行い、年に1回は全世界のグループ企業代表がオンライン上に集い、成功事例をプレゼンテーションします。
@@ -234,11 +234,11 @@
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            「VERSANT」はグローバル人材育成にどのように貢献していますか。
+            「Versant」はグローバル人材育成にどのように貢献していますか。
           </p>
           <p class="l-article__section_interview_answer">
             <span class="is-bold pr1em">柴田</span>
-            「VERSANT」は年2回の受験を推奨しています。まずは現状の実力を正しく理解してもらい、オンライン英会話レッスンでサポートしながらスコア47点（GSE 43）を目指してもらいます。このスコアを１つの基準に据え、次のレベルへ進むか、同じレベルのレッスンを継続するかを判断してもらうようにしています。
+            「Versant」は年2回の受験を推奨しています。まずは現状の実力を正しく理解してもらい、オンライン英会話レッスンでサポートしながらスコア47点（GSE 43）を目指してもらいます。このスコアを１つの基準に据え、次のレベルへ進むか、同じレベルのレッスンを継続するかを判断してもらうようにしています。
           </p>
           <p class="l-article__section_interview_answer">
             <span class="is-bold pr1em">川野</span>
@@ -252,16 +252,16 @@
           </p>
           <p class="l-article__section_interview_answer">
             <span class="is-bold pr1em">柴田</span>
-            海外事業会社との業務上の連携がある部署では一定以上の語学力が求められます。例えば、国内外が連携するITインフラに関わるプロジェクトでは、メールやオンライン会議ベースでの英語コミュニケーションスキルが必要です。また、品質保安での連携では、日本の安全基準に関するベストプラクティスの紹介・推進のために、海外メンバーとのオンライン会議や現地でのミーティングなどがあります。そのほか、海外展示会に出展する機会には、準備段階で海外事業会社や海外イベント会社との折衝、展示会の期間中には来場者に英語で直接説明しなければなりません。英語で聞いて、理解して即時に反応する、「VERSANT」が測定する力が問われています。
+            海外事業会社との業務上の連携がある部署では一定以上の語学力が求められます。例えば、国内外が連携するITインフラに関わるプロジェクトでは、メールやオンライン会議ベースでの英語コミュニケーションスキルが必要です。また、品質保安での連携では、日本の安全基準に関するベストプラクティスの紹介・推進のために、海外メンバーとのオンライン会議や現地でのミーティングなどがあります。そのほか、海外展示会に出展する機会には、準備段階で海外事業会社や海外イベント会社との折衝、展示会の期間中には来場者に英語で直接説明しなければなりません。英語で聞いて、理解して即時に反応する、「Versant」が測定する力が問われています。
           </p>
           <p class="l-article__section_interview_answer">
-            英語でのコミュニケーション力向上を目指す従業員の中で、VERSANTスコアを指標の一つとしたレベル別の人事部主催英会話ワークショップを2コース設けて実施しています。
+            英語でのコミュニケーション力向上を目指す従業員の中で、Versantスコアを指標の一つとしたレベル別の人事部主催英会話ワークショップを2コース設けて実施しています。
           </p>
           <p class="l-article__section_interview_answer">
             日々の英会話オンライン研修は「練習」で、英語を使った業務（英語会議や出張など）を「試合」とみなした場合、ワークショップは練習試合の役割を担います。
           </p>
           <p class="l-article__section_interview_answer">
-            オンライン英会話学習の各人習得効果を測る方法の一つとして「VERSANT」を受験しており、そこで見つけた自身の弱点や課題を認識してもらうことが重要です。弱点や課題が明確になれば、そこにフォーカスしてオンライン英会話学習に役立てて欲しいと、人事部からも声掛けをしています。
+            オンライン英会話学習の各人習得効果を測る方法の一つとして「Versant」を受験しており、そこで見つけた自身の弱点や課題を認識してもらうことが重要です。弱点や課題が明確になれば、そこにフォーカスしてオンライン英会話学習に役立てて欲しいと、人事部からも声掛けをしています。
           </p>
         </div>
         
@@ -328,7 +328,7 @@
           <p class="l-footer__info_head">お問合せ窓口</p>
           <div class="l-footer__info_txt"><span>Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793</a> (平日10:00〜17:00)</div>
           <div class="l-footer__info_txt"><span>Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
+          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">Versant法人利用規約</a>
       </address>  
       
       <div class="l-footer__lnk_box">
