--- a/column/01/index.html
+++ b/column/01/index.html
@@ -2,7 +2,7 @@
   
 
 <!--Header Options
-<SEOTitle>経営課題は国際基準の英語力、対応急げ｜VERSANT（ヴァーサント）【法人版】</SEOTitle>
+<SEOTitle>経営課題は国際基準の英語力、対応急げ｜Versant（ヴァーサント）【法人版】</SEOTitle>
 <SEODescription>グローバル展開する企業が増えるなか、企業の成長の足かせとなっているのは、社員の英語力の低迷。その原因は企業側の「基準」にあるかもしれない。言語学・外国語教育を研究分野とする投野由紀夫教授、英語スクール「TORAIZ（トライズ）」を主宰する三木雄信氏のおふたりの対談を通して、英語テストの課題・潮流・解決策に迫る。</SEODescription>
 <SEOrobots>noarchive</SEOrobots>
 <SEOcanonical>/nn/special/versant/</SEOcanonical>
@@ -51,7 +51,7 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>経営課題は国際基準の英語力、対応急げ｜VERSANT（ヴァーサント）【法人版】</title>
+  <title>経営課題は国際基準の英語力、対応急げ｜Versant（ヴァーサント）【法人版】</title>
   <meta name="description" content="グローバル展開する企業が増えるなか、企業の成長の足かせとなっているのは、社員の英語力の低迷。その原因は企業側の「基準」にあるかもしれない。言語学・外国語教育を研究分野とする投野由紀夫教授、英語スクール「TORAIZ（トライズ）」を主宰する三木雄信氏のおふたりの対談を通して、英語テストの課題・潮流・解決策に迫る。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
@@ -60,11 +60,11 @@
 
   <meta name="robots" content="noarchive"/>
   <meta property="og:type" content="article">
-  <meta property="og:title" content="経営課題は国際基準の英語力、対応急げ｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:title" content="経営課題は国際基準の英語力、対応急げ｜Versant（ヴァーサント）【法人版】">
   <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/column/01/index.html">
   <meta property="og:description" content="グローバル展開する企業が増えるなか、企業の成長の足かせとなっているのは、社員の英語力の低迷。その原因は企業側の「基準」にあるかもしれない。言語学・外国語教育を研究分野とする投野由紀夫教授、英語スクール「TORAIZ（トライズ）」を主宰する三木雄信氏のおふたりの対談を通して、英語テストの課題・潮流・解決策に迫る。">
   <meta property="og:image" content="https://school.nikkei.co.jp/nn/feature/hr/assets/img/ogp_nbs_logo.jpg">
-  <meta property="og:site_name" content="経営課題は国際基準の英語力、対応急げ｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:site_name" content="経営課題は国際基準の英語力、対応急げ｜Versant（ヴァーサント）【法人版】">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="135452203504570">
   <link rel="shortcut icon" href="https://school.nikkei.co.jp/nn/parts/school2016/images/favicon.ico" type="image/vnd.microsoft.icon">
@@ -87,7 +87,7 @@
 <header class="l-header">
   <div class="l-header__cnt">
     <a href="../../index.html">
-      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ" class="l-header__logo">
+      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="Versant&trade; ロゴ" class="l-header__logo">
     </a>
     <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
     <label for="nav-toggle" class="l-header__nav-toggle">
@@ -228,26 +228,26 @@
 
         <div class="l-article__section_interview">
           <h3 class="l-article__section_interview_question">
-            ──数あるテストの中で、三木さんの主宰する英語スクール「トライズ」は「VERSANT」を採用しています。その魅力とは？
+            ──数あるテストの中で、三木さんの主宰する英語スクール「トライズ」は「Versant」を採用しています。その魅力とは？
           </h3>
           <p class="l-article__section_interview_answer">
             <span class="bold pr1em">三木</span>
-            英語のコーチングを考える上では、ゴールに合わせた尺度を測るためにテストが必要です。話せる英語をビジネスパーソンが学ぶという観点であらゆるテストを調べた結果、VERSANTを選びました。最新のAIを活用した英語4技能テストが提供されており、低コストで時間を選ばず受けることができます。<br>
+            英語のコーチングを考える上では、ゴールに合わせた尺度を測るためにテストが必要です。話せる英語をビジネスパーソンが学ぶという観点であらゆるテストを調べた結果、Versantを選びました。最新のAIを活用した英語4技能テストが提供されており、低コストで時間を選ばず受けることができます。<br>
             テストを学習の品質管理に活用するなら、やはり月1回ぐらいの頻度で受けて、学習方法の軌道修正をしたいですから。
           </p>
         </div>
 
         <div class="l-article__section_interview">
           <h3 class="l-article__section_interview_question">
-            ──学習の品質管理に活用できるという「VERSANT」の特徴はどんなところでしょう？
+            ──学習の品質管理に活用できるという「Versant」の特徴はどんなところでしょう？
           </h3>
           <p class="l-article__section_interview_answer">
             <span class="bold pr1em">投野</span>
-            英語力を測る“スケール”が細かいことですね。CEFRではA1からC2までの6段階のスケールになっていますが、これを英語に最適化した「グローバル・スケール・オブ・イングリッシュ（GSE）」という10から90に精密化した非常に面白いスケールがあり、「VERSANT」のスコアはそのスケールにおける自分の位置を示しているんです。このスコアごとに対応するCAN-DOリストがあり、その時点までに身につけているべき語彙や文法などを一覧表で見ることができて、個人のレベルが細かく把握できます。
+            英語力を測る“スケール”が細かいことですね。CEFRではA1からC2までの6段階のスケールになっていますが、これを英語に最適化した「グローバル・スケール・オブ・イングリッシュ（GSE）」という10から90に精密化した非常に面白いスケールがあり、「Versant」のスコアはそのスケールにおける自分の位置を示しているんです。このスコアごとに対応するCAN-DOリストがあり、その時点までに身につけているべき語彙や文法などを一覧表で見ることができて、個人のレベルが細かく把握できます。
           </p>
           <p class="l-article__section_interview_answer">
             <span class="bold pr1em">三木</span>
-            学ぶモチベーションとしては、1点刻みのスコアはいいですね。身長や体重の変化も計測しないと自分では分かりづらいように、英語力の成長も自分では分からない。それが「VERSANT」では数値化され、上がった部分が細かく目に見えるので「話せるようになった」と自信にもつながるんです。
+            学ぶモチベーションとしては、1点刻みのスコアはいいですね。身長や体重の変化も計測しないと自分では分かりづらいように、英語力の成長も自分では分からない。それが「Versant」では数値化され、上がった部分が細かく目に見えるので「話せるようになった」と自信にもつながるんです。
           </p>
         </div>
         
@@ -277,9 +277,9 @@
 
   <section class="p-column__bnr_report__wrp" id="document_form">
     <div class="p-column__bnr_report" >
-      <p class="p-column__bnr_report_ttl">【大人気のレポート】<br>VERSANT1万人分析で見えた日本人の英語力に関する驚きの事実とは？</p>
+      <p class="p-column__bnr_report_ttl">【大人気のレポート】<br>Versant1万人分析で見えた日本人の英語力に関する驚きの事実とは？</p>
       <div class="p-column__bnr_report_img">
-        <img loading="lazy" id="" src="../../assets/img/column_01/report_bnr_01.png" alt="VERSANT資料イメージ" class="" height="290" width="280" role="presentation" data-retry="0">
+        <img loading="lazy" id="" src="../../assets/img/column_01/report_bnr_01.png" alt="Versant資料イメージ" class="" height="290" width="280" role="presentation" data-retry="0">
       </div>
       <ul class="p-column__bnr_report_list">
         <li>CEFRとの相関関係「企業別平均で47点を超えたのは〇〇%」</li>
@@ -325,7 +325,7 @@
           <p class="l-footer__info_head">お問合せ窓口</p>
           <div class="l-footer__info_txt"><span>Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793</a> (平日10:00〜17:00)</div>
           <div class="l-footer__info_txt"><span>Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
+          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">Versant法人利用規約</a>
       </address>  
       
       <div class="l-footer__lnk_box">
