--- a/column/03/index.html
+++ b/column/03/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href=stylesheet.css>
     <link rel="canonical" href="https://school.nikkei.co.jp/nn/special/versant/column/03/index.html">
-    <title>グローバル人材育成の課題とは？人事に求められる取り組みや役割を解説｜VERSANT（ヴァーサント）【法人版】</title>
+    <title>グローバル人材育成の課題とは？人事に求められる取り組みや役割を解説｜Versant（ヴァーサント）【法人版】</title>
     <meta name="description" content="グローバル化したビジネス環境において日本企業が勝ち抜くための人材育成が大きな経営課題になっています。その中で人事に求められる取り組みや役割について人材育成領域のプロフェッショナルでHRファーブラ代表取締役の山本紳也さんが解説。">
-    <meta property="og:title" content="グローバル人材育成の課題とは？人事に求められる取り組みや役割を解説｜VERSANT（ヴァーサント）【法人版】">
+    <meta property="og:title" content="グローバル人材育成の課題とは？人事に求められる取り組みや役割を解説｜Versant（ヴァーサント）【法人版】">
     <meta property="og:description" content="グローバル化したビジネス環境において日本企業が勝ち抜くための人材育成が大きな経営課題になっています。その中で人事に求められる取り組みや役割について人材育成領域のプロフェッショナルでHRファーブラ代表取締役の山本紳也さんが解説。">
     <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/column/03/index.html">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,7 +14,7 @@
       {
           "@context": "https://schema.org",
           "@type": "WebPage",
-          "headline": "グローバル人材育成の課題とは？人事に求められる取り組みや役割を解説｜VERSANT（ヴァーサント）【法人版】",
+          "headline": "グローバル人材育成の課題とは？人事に求められる取り組みや役割を解説｜Versant（ヴァーサント）【法人版】",
           "image": [
               "column/03/20240911-photo/20240911-01.jpg",
               "column/03/20240911-photo/20240911-02.jpg",
@@ -35,7 +35,7 @@
           "itemListElement": [{
             "@type": "ListItem",
             "position": 1,
-            "name": "VERSANT TOP",
+            "name": "Versant TOP",
             "item": "https://school.nikkei.co.jp/nn/special/versant/index.html"
           },{
             "@type": "ListItem",
@@ -54,7 +54,7 @@
 <body>
     <header class="l-header">
           <a href="../../index.html">
-            <img class="logo" src="logo/header_logo.png" alt="VERSANT&trade; ロゴ">
+            <img class="logo" src="logo/header_logo.png" alt="Versant&trade; ロゴ">
           </a>
           <input id="toggle" type="checkbox"></input>
 
@@ -91,7 +91,7 @@
       <div>
         <div class="header">
           <div class="breadcrumb">
-            <a class="breadcrumb-item" href="../../index.html">VERSANT TOP</a>
+            <a class="breadcrumb-item" href="../../index.html">Versant TOP</a>
             <span>></span>
             <a class="breadcrumb-item" href="../../casestudy/index.html">導入事例/コラム</a>
             <span>></span>
@@ -217,7 +217,7 @@
             <div class="column-report">
               <p class="column-title">【特別レポート】<br>英語研修を見直す<br>８つのチェックリスト</p>
               </ul>
-              <img class="img-ad" src="pic/5472c48467e9d27b565819dd5631abd9.png" alt="VERSANT資料イメージ">
+              <img class="img-ad" src="pic/5472c48467e9d27b565819dd5631abd9.png" alt="Versant資料イメージ">
               <ul class="p-column-list">
                 <li>グローバル人材プログラムの新たな動き</li>
                 <li>研修見直しのチェック項目</li>
@@ -263,7 +263,7 @@
                 <p class="footer-head">お問合せ窓口</p>
                 <div class="l-footer__info_txt"><span class="text-s">Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793 (平日10:00〜17:00)</a> </div>
                 <div class="l-footer__info_txt"><span class="text-s">Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-                <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
+                <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">Versant法人利用規約</a>
           </div>  
           </div>   
           <div class="link-box">
