--- a/faq/index.html
+++ b/faq/index.html
@@ -1,6 +1,6 @@
 <!--Header Options
-<SEOTitle>資料請求・トライアル｜VERSANT（ヴァーサント）【法人版】</SEOTitle>
-<SEODescription>定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、VERSANT（ヴァーサント）についてより詳しく知りたい、トライアルしたいという方はこちらをご確認ください。</SEODescription>
+<SEOTitle>資料請求・トライアル｜Versant（ヴァーサント）【法人版】</SEOTitle>
+<SEODescription>定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、Versant（ヴァーサント）についてより詳しく知りたい、トライアルしたいという方はこちらをご確認ください。</SEODescription>
 <SEOrobots>noarchive</SEOrobots>
 <SEOcanonical>/nn/special/versant/</SEOcanonical>
 <OGType>article</OGType>
@@ -51,9 +51,9 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>FAQ・よくある質問｜VERSANT（ヴァーサント）【法人版】</title>
+  <title>FAQ・よくある質問｜Versant（ヴァーサント）【法人版】</title>
   <meta name="description"
-    content="定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、VERSANT（ヴァーサント）についてより詳しく知りたい、トライアルしたいという方はこちらをご確認ください。">
+    content="定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、Versant（ヴァーサント）についてより詳しく知りたい、トライアルしたいという方はこちらをご確認ください。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
 
@@ -61,12 +61,12 @@
 
   <meta name="robots" content="noarchive" />
   <meta property="og:type" content="article">
-  <meta property="og:title" content="FAQ・よくある質問｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:title" content="FAQ・よくある質問｜Versant（ヴァーサント）【法人版】">
   <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/faq/index.html">
   <meta property="og:description"
-    content="定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、VERSANT（ヴァーサント）についてより詳しく知りたい、トライアルしたいという方はこちらをご確認ください。">
+    content="定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、Versant（ヴァーサント）についてより詳しく知りたい、トライアルしたいという方はこちらをご確認ください。">
   <meta property="og:image" content="https://school.nikkei.co.jp/nn/feature/hr/assets/img/ogp_nbs_logo.jpg">
-  <meta property="og:site_name" content="FAQ・よくある質問｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:site_name" content="FAQ・よくある質問｜Versant（ヴァーサント）【法人版】">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="135452203504570">
   <link rel="shortcut icon" href="https://school.nikkei.co.jp/nn/parts/school2016/images/favicon.ico"
@@ -91,7 +91,7 @@
   <header class="l-header">
     <div class="l-header__cnt">
       <a href="../index.html">
-        <img src="../assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ"
+        <img src="../assets/img/index/header_logo.png" width="206" height="38.95" alt="Versant&trade; ロゴ"
           class="l-header__logo">
       </a>
       <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
@@ -170,7 +170,7 @@
           <div class="l-footer__info_txt"><span>Mail</span> : <a
               href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
           <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank"
-            class="text_link">VERSANT法人利用規約</a>
+            class="text_link">Versant法人利用規約</a>
         </address>
         <div class="l-footer__lnk_box">
           <p class="l-footer__lnk_ttl">このサイトについて</p>
