--- a/feature/index.html
+++ b/feature/index.html
@@ -1,6 +1,6 @@
 <!--Header Options
-<SEOTitle>機能紹介・他社比較｜VERSANT（ヴァーサント）【法人版】</SEOTitle>
-<SEODescription>定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、VERSANT（ヴァーサント）についてより詳しく知りたい、トライアルしたいという方はこちらをご確認ください。</SEODescription>
+<SEOTitle>機能紹介・他社比較｜Versant（ヴァーサント）【法人版】</SEOTitle>
+<SEODescription>定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、Versant（ヴァーサント）についてより詳しく知りたい、トライアルしたいという方はこちらをご確認ください。</SEODescription>
 <SEOrobots>noarchive</SEOrobots>
 <SEOcanonical>/nn/special/versant/</SEOcanonical>
 <OGType>article</OGType>
@@ -51,9 +51,9 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>機能紹介・他社比較｜VERSANT（ヴァーサント）【法人版】</title>
+  <title>機能紹介・他社比較｜Versant（ヴァーサント）【法人版】</title>
   <meta name="description"
-    content="定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、VERSANT（ヴァーサント）についてより詳しく知りたい、トライアルしたいという方はこちらをご確認ください。">
+    content="定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、Versant（ヴァーサント）についてより詳しく知りたい、トライアルしたいという方はこちらをご確認ください。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
 
@@ -61,12 +61,12 @@
 
   <meta name="robots" content="noarchive" />
   <meta property="og:type" content="article">
-  <meta property="og:title" content="機能紹介・他社比較｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:title" content="機能紹介・他社比較｜Versant（ヴァーサント）【法人版】">
   <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/feature/index.html">
   <meta property="og:description"
-    content="定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、VERSANT（ヴァーサント）についてより詳しく知りたい、トライアルしたいという方はこちらをご確認ください。">
+    content="定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、Versant（ヴァーサント）についてより詳しく知りたい、トライアルしたいという方はこちらをご確認ください。">
   <meta property="og:image" content="https://school.nikkei.co.jp/nn/feature/hr/assets/img/ogp_nbs_logo.jpg">
-  <meta property="og:site_name" content="機能紹介・他社比較｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:site_name" content="機能紹介・他社比較｜Versant（ヴァーサント）【法人版】">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="135452203504570">
   <link rel="shortcut icon" href="https://school.nikkei.co.jp/nn/parts/school2016/images/favicon.ico"
@@ -91,7 +91,7 @@
   <header class="l-header">
     <div class="l-header__cnt">
       <a href="../index.html">
-        <img src="../assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ"
+        <img src="../assets/img/index/header_logo.png" width="206" height="38.95" alt="Versant&trade; ロゴ"
           class="l-header__logo">
       </a>
       <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
@@ -117,7 +117,7 @@
   <main class="p-index">
   <section class="p-index__feature l-bg__gray is__earth">
     <div class="l-inner">
-      <h2 class="o-ttl is__medium">VERSANTを理解する<br class="visible_m">9つの特徴</h2>
+      <h2 class="o-ttl is__medium">Versantを理解する<br class="visible_m">9つの特徴</h2>
   
       <div class="p-index__feature_cnt">
   
@@ -234,13 +234,13 @@
   
   <section class="p-index__comparison l-bg__city">
     <div class="l-inner">
-      <h2 class="o-ttl">比較で見るVERSANT</h2>
+      <h2 class="o-ttl">比較で見るVersant</h2>
   
       <div class="table_wrap">
         <table>
           <tr class="comparison_test_head">
             <th></th>
-            <th>VERSANT</th>
+            <th>Versant</th>
             <th>A社英語テスト</th>
             <th>B社英語テスト</th>
             <th>C社英語テスト</th>
@@ -373,12 +373,12 @@
   <section class="p-index__tool l-bg__light_gray">
     <div class="l-inner">
       <h3 class="o-headline">管理者向けツール</h3>
-      <p class="o-headline__lead">VERSANTを効果的に運用するためのサポートツールをご用意しています</p>
+      <p class="o-headline__lead">Versantを効果的に運用するためのサポートツールをご用意しています</p>
   
       <div class="p-index__tool_cnt">
         <div class="p-index__tool_cnt_txt">
           <h4 class="head">スコア管理ツール 「Score Keeper」</h4>
-          <p>VERSANTテスト受験に付随する管理者ツールです。<br class="visible_m">
+          <p>Versantテスト受験に付随する管理者ツールです。<br class="visible_m">
             データに基づく人材戦略の意思決定を支援します。<br>
             テストの配信から、受験者のスコアデータ管理、<br class="visible_m">レポート作成を容易に行うことができ、多くの業務を抱えるテスト管理者様の負担を軽減します。</p>
         </div>
@@ -389,8 +389,8 @@
           <h4 class="head">リモートモニタリング機能</h4>
           <p>受験者のデバイスのカメラで受験中の状況を撮影できるモニタリング機能をオプションで追加することができます。受験者の回答内容の確認のほか、受験の不正防止にご活用いただけます。</p>
           <div class="p-index__tool_cnt_detail">
-            <p>対象プロダクト：<br>VERSANT English Speaking Test<br>
-              VERSANT English Speaking & Listening Test<br>
+            <p>対象プロダクト：<br>Versant English Speaking Test<br>
+              Versant English Speaking & Listening Test<br>
               （他テストにつきましては2024年後半以降での対応予定です）</p>
             <p>料金<br>キャンペーン特別価格※　1,100円（税込）<br>定価：2,200円（税込）<br>※キャンペーン期間は2024年9月末まで</p>
           </div>
@@ -416,7 +416,7 @@
           <div class="l-footer__info_txt"><span>Mail</span> : <a
               href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
           <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank"
-            class="text_link">VERSANT法人利用規約</a>
+            class="text_link">Versant法人利用規約</a>
         </address>
 
         <div class="l-footer__lnk_box">
