--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   
 
 <!--Header Options
-<SEOTitle>VERSANT（ヴァーサント）【法人用】｜日経ビジネススクール</SEOTitle>
-<SEODescription>VERSANTは、ビジネスで使える英語力を正確かつスピーディーに測定・分析する世界標準の英語テストです。世界最大規模の教育機関であるPearson社が開発し、日本経済新聞社が国内独占販売権を保持しています。</SEODescription>
+<SEOTitle>Versant（ヴァーサント）【法人用】｜日経ビジネススクール</SEOTitle>
+<SEODescription>Versantは、ビジネスで使える英語力を正確かつスピーディーに測定・分析する世界標準の英語テストです。世界最大規模の教育機関であるPearson社が開発し、日本経済新聞社が国内独占販売権を保持しています。</SEODescription>
 <SEOrobots>noarchive</SEOrobots>
 <SEOcanonical>/nn/special/versant/</SEOcanonical>
 <OGType>article</OGType>
@@ -51,8 +51,8 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>VERSANT（ヴァーサント）【法人用】｜日経ビジネススクール</title>
-  <meta name="description" content="VERSANTは、ビジネスで使える英語力を正確かつスピーディーに測定・分析する世界標準の英語テストです。世界最大規模の教育機関であるPearson社が開発し、日本経済新聞社が国内独占販売権を保持しています。">
+  <title>Versant（ヴァーサント）【法人用】｜日経ビジネススクール</title>
+  <meta name="description" content="Versantは、ビジネスで使える英語力を正確かつスピーディーに測定・分析する世界標準の英語テストです。世界最大規模の教育機関であるPearson社が開発し、日本経済新聞社が国内独占販売権を保持しています。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
 
@@ -60,11 +60,11 @@
 
   <meta name="robots" content="noarchive"/>
   <meta property="og:type" content="article">
-  <meta property="og:title" content="VERSANT（ヴァーサント）【法人用】｜日経ビジネススクール">
+  <meta property="og:title" content="Versant（ヴァーサント）【法人用】｜日経ビジネススクール">
   <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/index.html">
-  <meta property="og:description" content="VERSANTは、ビジネスで使える英語力を正確かつスピーディーに測定・分析する世界標準の英語テストです。世界最大規模の教育機関であるPearson社が開発し、日本経済新聞社が国内独占販売権を保持しています。">
+  <meta property="og:description" content="Versantは、ビジネスで使える英語力を正確かつスピーディーに測定・分析する世界標準の英語テストです。世界最大規模の教育機関であるPearson社が開発し、日本経済新聞社が国内独占販売権を保持しています。">
   <meta property="og:image" content="https://school.nikkei.co.jp/nn/feature/hr/assets/img/ogp_nbs_logo.jpg">
-  <meta property="og:site_name" content="VERSANT（ヴァーサント）【法人用】｜日経ビジネススクール">
+  <meta property="og:site_name" content="Versant（ヴァーサント）【法人用】｜日経ビジネススクール">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="135452203504570">
   <link rel="shortcut icon" href="https://school.nikkei.co.jp/nn/parts/school2016/images/favicon.ico" type="image/vnd.microsoft.icon">
@@ -90,7 +90,7 @@
 <header class="l-header">
   <div class="l-header__cnt">
     <a href="./index.html">
-      <img src="./assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ" class="l-header__logo">
+      <img src="./assets/img/index/header_logo.png" width="206" height="38.95" alt="Versant&trade; ロゴ" class="l-header__logo">
     </a>
     <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
     <label for="nav-toggle" class="l-header__nav-toggle">
@@ -118,7 +118,7 @@
     <div class="l-inner">
       <p class="p-index__kv_copy"><img src="./assets/img/index/kv_copy.png"  alt="世界標準の英語テスト"></p>
       <div class="p-index__kv_cnt">
-        <h1  class="p-index__kv_ttl"><img src="./assets/img/index/kv_logo.png"  alt="ヴァーサント VERSANT&trade; by Pearson" width="472" height="223.38"></h1>
+        <h1  class="p-index__kv_ttl"><img src="./assets/img/index/kv_logo.png"  alt="ヴァーサント Versant&trade; by Pearson" width="472" height="223.38"></h1>
         <ul class="p-index__kv_skilllist">
           <li>Speaking</li>
           <li>Listening</li>
@@ -134,7 +134,7 @@
 
   <section class="p-index__about">
     <div class="l-inner">
-      <h2 class="o-ttl">VERSANTとは</h2>
+      <h2 class="o-ttl">Versantとは</h2>
       <p class="o-ttl__copy">
         最新のAI技術を活用し、正確で高精度な採点結果を即座に提供。<br class="visible_m">発信力も含む実践的な英語力を測る世界標準の英語テストです。
       </p>
@@ -143,7 +143,7 @@
         <div class="p-index__about_cnt_img">
           <picture>
             <source srcset="./assets/img/index/about_img.png" media="(max-width:768px)">
-            <img src="./assets/img/index/about_img.png" alt="VERSANT partnership 解説イメージ画像">
+            <img src="./assets/img/index/about_img.png" alt="Versant partnership 解説イメージ画像">
           </picture>
           <p>世界最大規模の教育機関であるPearson社が開発<br>日本経済新聞社が国内独占販売権を保持</p>
         </div>
@@ -156,7 +156,7 @@
       </div>
 
       <div class="p-index__about_company">
-        <h3 class="p-index__about_company_head">国内約500の企業・教育機関が<br class="visible_to_m">VERSANTを導入</h3>
+        <h3 class="p-index__about_company_head">国内約500の企業・教育機関が<br class="visible_to_m">Versantを導入</h3>
         <ul class="p-index__about_company_list">
           <li><img src="./assets/img/index/logo_23.png" alt="abbvie"></li>
           <li><img src="./assets/img/index/logo_04.png" alt="ABLIC"></li> 
@@ -238,7 +238,7 @@
                   <li>
                     <a href="./casestudy/07/index.html" class="o-case-thumbnail is__07">
                       <span class="o-case-thumbnail_number">Case07</span>
-                      <h4 class="o-case-thumbnail_copy is__small">VERSANTの分析が<br>コンサルティングを<br>深化</h4>
+                      <h4 class="o-case-thumbnail_copy is__small">Versantの分析が<br>コンサルティングを<br>深化</h4>
                       <p class="o-case-thumbnail_company">プログリット</p>
                       <img src="./assets/img/index/case07_logo.png" alt="プログリット ロゴ" class="o-case-thumbnail_logo">
                     </a>
@@ -318,7 +318,7 @@
                   <li>
                     <a href="./casestudy/07/index.html" class="o-case-thumbnail is__07">
                       <span class="o-case-thumbnail_number">Case07</span>
-                      <h4 class="o-case-thumbnail_copy is__small">VERSANTの分析が<br>コンサルティングを<br>深化</h4>
+                      <h4 class="o-case-thumbnail_copy is__small">Versantの分析が<br>コンサルティングを<br>深化</h4>
                       <p class="o-case-thumbnail_company">プログリット</p>
                       <img src="./assets/img/index/case07_logo.png" alt="プログリット ロゴ" class="o-case-thumbnail_logo">
                     </a>
@@ -393,7 +393,7 @@
             <a href="column/02/index.html" class="p-index__column_link">
               <img src="assets/img/index/column_02.jpg" alt="コラムサムネイル">
               <div class="p-index__column_link_info">
-                <h5 class="column_head">社員の英語スピーキング力をVERSANTで可視化しませんか</h5>
+                <h5 class="column_head">社員の英語スピーキング力をVersantで可視化しませんか</h5>
                 <p class="column_date">2024/09/09</p>
               </div>
             </a>
@@ -431,8 +431,8 @@
         <section class="p-index__news">
           <h5 class="p-index__news_ttl">お知らせ</h5>
           <div>
-            <p><a href="https://www.versant.jp/_common/_js/pdfjs/web/viewer.html?file=/pdf/info20240115.pdf?20240326" target="_blank" class="text_link">新テスト「VERSANT Speaking ＆Listening Test」内容を刷新！無料トライアル受験、受付中！</a></p>
-            <p><a href="https://versant.jp/_common/_js/pdfjs/web/viewer.html?file=/pdf/info20241001.pdf" target="_blank" class="text_link">VERSANT English Speaking Test販売終了のお知らせ</a></p>
+            <p><a href="https://www.versant.jp/_common/_js/pdfjs/web/viewer.html?file=/pdf/info20240115.pdf?20240326" target="_blank" class="text_link">新テスト「Versant Speaking ＆Listening Test」内容を刷新！無料トライアル受験、受付中！</a></p>
+            <p><a href="https://versant.jp/_common/_js/pdfjs/web/viewer.html?file=/pdf/info20241001.pdf" target="_blank" class="text_link">Versant English Speaking Test販売終了のお知らせ</a></p>
           </div>
         </section>
       </div>
@@ -450,7 +450,7 @@
           <p class="l-footer__info_head">お問合せ窓口</p>
           <div class="l-footer__info_txt"><span>Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793</a> (平日10:00〜17:00)</div>
           <div class="l-footer__info_txt"><span>Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
+          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">Versant法人利用規約</a>
       </address>  
       
       <div class="l-footer__lnk_box">
