--- a/score/index.html
+++ b/score/index.html
@@ -2,8 +2,8 @@
 
   
 <!--Header Options
-<SEOTitle>スコアについて/GSEを解説｜VERSANT（ヴァーサント）【法人版】</SEOTitle>
-<SEODescription>VERSANTのスコアは、CEFR（ヨーロッパ言語共通参照）に準拠したGSE（Global Scale of English）という指標を採用しています。CEFRとは世界中の英語教育機関で採用されている国際的な指標で、GSEはCEFRレベルをより細分化したものです。GSEのスケールを使えば、学習者の英語力を正確に把握することができ、キャリア開発にも役立ちます。</SEODescription>
+<SEOTitle>スコアについて/GSEを解説｜Versant（ヴァーサント）【法人版】</SEOTitle>
+<SEODescription>Versantのスコアは、CEFR（ヨーロッパ言語共通参照）に準拠したGSE（Global Scale of English）という指標を採用しています。CEFRとは世界中の英語教育機関で採用されている国際的な指標で、GSEはCEFRレベルをより細分化したものです。GSEのスケールを使えば、学習者の英語力を正確に把握することができ、キャリア開発にも役立ちます。</SEODescription>
 <SEOrobots>noarchive</SEOrobots>
 <SEOcanonical>/nn/special/versant/</SEOcanonical>
 <OGType>article</OGType>
@@ -51,8 +51,8 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>スコアについて/GSEを解説｜VERSANT（ヴァーサント）【法人版】</title>
-  <meta name="description" content="VERSANTのスコアは、CEFR（ヨーロッパ言語共通参照）に準拠したGSE（Global Scale of English）という指標を採用しています。CEFRとは世界中の英語教育機関で採用されている国際的な指標で、GSEはCEFRレベルをより細分化したものです。GSEのスケールを使えば、学習者の英語力を正確に把握することができ、キャリア開発にも役立ちます。">
+  <title>スコアについて/GSEを解説｜Versant（ヴァーサント）【法人版】</title>
+  <meta name="description" content="Versantのスコアは、CEFR（ヨーロッパ言語共通参照）に準拠したGSE（Global Scale of English）という指標を採用しています。CEFRとは世界中の英語教育機関で採用されている国際的な指標で、GSEはCEFRレベルをより細分化したものです。GSEのスケールを使えば、学習者の英語力を正確に把握することができ、キャリア開発にも役立ちます。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
 
@@ -60,11 +60,11 @@
 
   <meta name="robots" content="noarchive"/>
   <meta property="og:type" content="article">
-  <meta property="og:title" content="スコアについて/GSEを解説｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:title" content="スコアについて/GSEを解説｜Versant（ヴァーサント）【法人版】">
   <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/score/index.html">
-  <meta property="og:description" content="VERSANTのスコアは、CEFR（ヨーロッパ言語共通参照）に準拠したGSE（Global Scale of English）という指標を採用しています。CEFRとは世界中の英語教育機関で採用されている国際的な指標で、GSEはCEFRレベルをより細分化したものです。GSEのスケールを使えば、学習者の英語力を正確に把握することができ、キャリア開発にも役立ちます。">
+  <meta property="og:description" content="Versantのスコアは、CEFR（ヨーロッパ言語共通参照）に準拠したGSE（Global Scale of English）という指標を採用しています。CEFRとは世界中の英語教育機関で採用されている国際的な指標で、GSEはCEFRレベルをより細分化したものです。GSEのスケールを使えば、学習者の英語力を正確に把握することができ、キャリア開発にも役立ちます。">
   <meta property="og:image" content="https://school.nikkei.co.jp/nn/feature/hr/assets/img/ogp_nbs_logo.jpg">
-  <meta property="og:site_name" content="スコアについて/GSEを解説｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:site_name" content="スコアについて/GSEを解説｜Versant（ヴァーサント）【法人版】">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="135452203504570">
   <link rel="shortcut icon" href="https://school.nikkei.co.jp/nn/parts/school2016/images/favicon.ico" type="image/vnd.microsoft.icon">
@@ -87,7 +87,7 @@
 <header class="l-header">
   <div class="l-header__cnt">
     <a href="../index.html">
-      <img src="../assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ" class="l-header__logo">
+      <img src="../assets/img/index/header_logo.png" width="206" height="38.95" alt="Versant&trade; ロゴ" class="l-header__logo">
     </a>
     <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
     <label for="nav-toggle" class="l-header__nav-toggle">
@@ -118,8 +118,8 @@
         </div>
       </div>
       <div class="l-inner-a">
-        <h2>VERSANTのスコアとは</h2>
-        <p>VERSANTの総合スコアは10～90点で採点されます。GSE（Global Scale of English）※と相関があり、スコアごとに「英語でできること」を詳細に把握することができます。グローバル人材の採用や選抜、研修のゴール 設定や効果測定に役立ちます。</p>
+        <h2>Versantのスコアとは</h2>
+        <p>Versantの総合スコアは10～90点で採点されます。GSE（Global Scale of English）※と相関があり、スコアごとに「英語でできること」を詳細に把握することができます。グローバル人材の採用や選抜、研修のゴール 設定や効果測定に役立ちます。</p>
       </div>
       <section class="p-score__data">
         <div class="l-inner">
@@ -167,7 +167,7 @@
     </div>  
       <section class="p-score__guide l-bg__light_gray">
         <div class="l-inner">
-          <h2>VERSANTスコアは<br class="sp_only">国際基準に準拠</h2>
+          <h2>Versantスコアは<br class="sp_only">国際基準に準拠</h2>
           <div class="p-score__guide__gse">
             <h3>GSEの活用法</h3>
             <p>GSE<sup>※</sup> Job Mapping は、職種や職務に応じて必要な英語の Can-do リスト（4 技能別）を紐づけしたものです。
@@ -201,7 +201,7 @@
 
       <section class="p-score__howto">
         <div class="l-inner">
-          <h2>VERSANTスコアの見方</h2>
+          <h2>Versantスコアの見方</h2>
           <div class="p-score__howto__images">
             <picture>
               <source media="(min-width:768px)" srcset="../assets/img/score/score-check-pc.jpg">
@@ -223,7 +223,7 @@
         <h2>スコア活用BOOK</h2>
         <div class="p-score__book__contents">
           <div class="p-score__book__links">
-            <p>上記内容やスコア別スキル向上のヒントなど、<br>VERSANTスコア活用法が、小冊子になりました。</p>
+            <p>上記内容やスコア別スキル向上のヒントなど、<br>Versantスコア活用法が、小冊子になりました。</p>
             <img src="../assets/img/score/score-book.png" alt="" class="sp_only">
             <a href="https://school.nikkei.co.jp/feature/hr/contents/knowhow/15?b_cid=nbs_hr_knowhow" class="o-btn__square" target="_blank" data-hu-event="資料ダウンロード" data-hu-actiontype="click">スコア活用BOOKのダウンロード</a>
             <a href="../library/index.html" class="o-btn__square">その他のお役立ち資料一覧はこちら</a>
@@ -245,7 +245,7 @@
           <p class="l-footer__info_head">お問合せ窓口</p>
           <div class="l-footer__info_txt"><span>Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793</a> (平日10:00〜17:00)</div>
           <div class="l-footer__info_txt"><span>Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
+          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">Versant法人利用規約</a>
       </address>  
       
       <div class="l-footer__lnk_box">
