--- a/casestudy/02/index.html
+++ b/casestudy/02/index.html
@@ -2,8 +2,8 @@
   
 
 <!--Header Options
-<SEOTitle>日本政策投資銀行（DBJ） 導入事例｜VERSANT（ヴァーサント）【法人版】</SEOTitle>
-<SEODescription>2008年に株式会社となって以降、投融資一体型のユニークなビジネスモデルを追求し、国内はもとより海外ビジネスを拡大している日本政策投資銀行（DBJ）。日本企業が進出する欧米やアジアなどを中心に、サプライチェーン強靭化やイノベーション創出を支援する。海外ビジネスが日常化するなか、「国際統括部」を廃止。すべての職員が英語でのコミュニケーションや交渉ができる体制を目指し、各自が定期的に自己レベルを確認するために「VERSANT」を活用する。</SEODescription>
+<SEOTitle>日本政策投資銀行（DBJ） 導入事例｜Versant（ヴァーサント）【法人版】</SEOTitle>
+<SEODescription>2008年に株式会社となって以降、投融資一体型のユニークなビジネスモデルを追求し、国内はもとより海外ビジネスを拡大している日本政策投資銀行（DBJ）。日本企業が進出する欧米やアジアなどを中心に、サプライチェーン強靭化やイノベーション創出を支援する。海外ビジネスが日常化するなか、「国際統括部」を廃止。すべての職員が英語でのコミュニケーションや交渉ができる体制を目指し、各自が定期的に自己レベルを確認するために「Versant」を活用する。</SEODescription>
 <SEOrobots>noarchive</SEOrobots>
 <SEOcanonical>/nn/special/versant/</SEOcanonical>
 <OGType>article</OGType>
@@ -51,8 +51,8 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>日本政策投資銀行（DBJ） 導入事例｜VERSANT（ヴァーサント）【法人版】</title>
-  <meta name="description" content="2008年に株式会社となって以降、投融資一体型のユニークなビジネスモデルを追求し、国内はもとより海外ビジネスを拡大している日本政策投資銀行（DBJ）。日本企業が進出する欧米やアジアなどを中心に、サプライチェーン強靭化やイノベーション創出を支援する。海外ビジネスが日常化するなか、「国際統括部」を廃止。すべての職員が英語でのコミュニケーションや交渉ができる体制を目指し、各自が定期的に自己レベルを確認するために「VERSANT」を活用する。">
+  <title>日本政策投資銀行（DBJ） 導入事例｜Versant（ヴァーサント）【法人版】</title>
+  <meta name="description" content="2008年に株式会社となって以降、投融資一体型のユニークなビジネスモデルを追求し、国内はもとより海外ビジネスを拡大している日本政策投資銀行（DBJ）。日本企業が進出する欧米やアジアなどを中心に、サプライチェーン強靭化やイノベーション創出を支援する。海外ビジネスが日常化するなか、「国際統括部」を廃止。すべての職員が英語でのコミュニケーションや交渉ができる体制を目指し、各自が定期的に自己レベルを確認するために「Versant」を活用する。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
 
@@ -60,11 +60,11 @@
 
   <meta name="robots" content="noarchive"/>
   <meta property="og:type" content="article">
-  <meta property="og:title" content="日本政策投資銀行（DBJ） 導入事例｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:title" content="日本政策投資銀行（DBJ） 導入事例｜Versant（ヴァーサント）【法人版】">
   <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/casestudy/02/index.html">
-  <meta property="og:description" content="2008年に株式会社となって以降、投融資一体型のユニークなビジネスモデルを追求し、国内はもとより海外ビジネスを拡大している日本政策投資銀行（DBJ）。日本企業が進出する欧米やアジアなどを中心に、サプライチェーン強靭化やイノベーション創出を支援する。海外ビジネスが日常化するなか、「国際統括部」を廃止。すべての職員が英語でのコミュニケーションや交渉ができる体制を目指し、各自が定期的に自己レベルを確認するために「VERSANT」を活用する。">
+  <meta property="og:description" content="2008年に株式会社となって以降、投融資一体型のユニークなビジネスモデルを追求し、国内はもとより海外ビジネスを拡大している日本政策投資銀行（DBJ）。日本企業が進出する欧米やアジアなどを中心に、サプライチェーン強靭化やイノベーション創出を支援する。海外ビジネスが日常化するなか、「国際統括部」を廃止。すべての職員が英語でのコミュニケーションや交渉ができる体制を目指し、各自が定期的に自己レベルを確認するために「Versant」を活用する。">
   <meta property="og:image" content="https://school.nikkei.co.jp/nn/feature/hr/assets/img/ogp_nbs_logo.jpg">
-  <meta property="og:site_name" content="日本政策投資銀行（DBJ） 導入事例｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:site_name" content="日本政策投資銀行（DBJ） 導入事例｜Versant（ヴァーサント）【法人版】">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="135452203504570">
   <link rel="shortcut icon" href="https://school.nikkei.co.jp/nn/parts/school2016/images/favicon.ico" type="image/vnd.microsoft.icon">
@@ -87,7 +87,7 @@
 <header class="l-header">
   <div class="l-header__cnt">
     <a href="../../index.html">
-      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ" class="l-header__logo">
+      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="Versant&trade; ロゴ" class="l-header__logo">
     </a>
     <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
     <label for="nav-toggle" class="l-header__nav-toggle">
@@ -129,7 +129,7 @@
     <section class="p-casestudy-article__lead l-bg__gray">
       <div class="l-inner">
         <div class="l-article__lead is__white">
-          <p>2008年に株式会社となって以降、投融資一体型のユニークなビジネスモデルを追求し、国内はもとより海外ビジネスを拡大している日本政策投資銀行（DBJ）。日本企業が進出する欧米やアジアなどを中心に、サプライチェーン強靭化やイノベーション創出を支援する。海外ビジネスが日常化するなか、「国際統括部」を廃止。すべての職員が英語でのコミュニケーションや交渉ができる体制を目指し、各自が定期的に自己レベルを確認するために「VERSANT」を活用する。</p>
+          <p>2008年に株式会社となって以降、投融資一体型のユニークなビジネスモデルを追求し、国内はもとより海外ビジネスを拡大している日本政策投資銀行（DBJ）。日本企業が進出する欧米やアジアなどを中心に、サプライチェーン強靭化やイノベーション創出を支援する。海外ビジネスが日常化するなか、「国際統括部」を廃止。すべての職員が英語でのコミュニケーションや交渉ができる体制を目指し、各自が定期的に自己レベルを確認するために「Versant」を活用する。</p>
         </div>
 
         <div class="p-casestudy-article__summary">
@@ -137,7 +137,7 @@
 
           <div class="p-casestudy-article__summary_cnt">
             <h3 class="summary_badge">活用内容</h3>
-            <p>新人研修のなかで英語力を測る際、実践でのスピーキング力を重視することになり、2020年から「VERSANT」を選択。同時期に入行から数年経った職員の研修もスタートし、そこでは英語力向上の意識付けとそのレベルを受験者個人が定点観測できる環境を提供するために「VERSANT」を活用している。</p>
+            <p>新人研修のなかで英語力を測る際、実践でのスピーキング力を重視することになり、2020年から「Versant」を選択。同時期に入行から数年経った職員の研修もスタートし、そこでは英語力向上の意識付けとそのレベルを受験者個人が定点観測できる環境を提供するために「Versant」を活用している。</p>
           </div>
 
           <div class="p-casestudy-article__summary_cnt">
@@ -189,7 +189,7 @@
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            政府系金融機関であるDBJの業務において、<br>英語が重要視される背景と「VERSANT」を導入した理由について教えてください。 
+            政府系金融機関であるDBJの業務において、<br>英語が重要視される背景と「Versant」を導入した理由について教えてください。 
           </p>
           <p class="l-article__section_interview_answer">
             <span class="is-bold pr1em">村尾</span>
@@ -198,7 +198,7 @@
           </p>
           <p class="l-article__section_interview_answer">
             <span class="is-bold pr1em">小川</span>
-            従来より新入職員への研修の際に英語力を測定していましたが、これまでのテストではスピーキング力の測定が不明瞭でした。スピーキング技能を測定する体制を整備することで、個々の職員による学習計画の策定に役立ててもらうべく、2020年から「VERSANT」を追加し、新人職員向けの研修のみならずミドル層手前の職員対象の研修プログラムにも採用しました。<br>
+            従来より新入職員への研修の際に英語力を測定していましたが、これまでのテストではスピーキング力の測定が不明瞭でした。スピーキング技能を測定する体制を整備することで、個々の職員による学習計画の策定に役立ててもらうべく、2020年から「Versant」を追加し、新人職員向けの研修のみならずミドル層手前の職員対象の研修プログラムにも採用しました。<br>
             導入検討時には他社サービスも候補には挙がりましたが、以下の点を踏まえて決定しました。
           </p>
           <ol>
@@ -240,7 +240,7 @@
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            グルーバル人材育成に向けた施策と「VERSANT」の活用方法について教えてください。
+            グルーバル人材育成に向けた施策と「Versant」の活用方法について教えてください。
           </p>
           <p class="l-article__section_interview_answer">
             <span class="is-bold pr1em">村尾</span>
@@ -250,13 +250,13 @@
           </p>
           <p class="l-article__section_interview_answer">
             <span class="is-bold pr1em">小川</span>
-            基本的には英語トレーニングは新人も含めたすべての職員が自ら英会話スクールや教材を選択し、自己管理で勉強してもらい、その費用を会社が制度として補助しています。「VERSANT」の活用目的も人事部や経営陣が職員の能力を定点観測するというよりは、個人が主体的に自己の欠点や意思疎通に必要な表現に気付き、今後のトレーニングの計画を立てたり、成長へのモチベーションの指標として活用してもらうことに重点を置いています。職員からは「会話が成立していると自負していても、実はあいまいな表現だったことに気付ける」「自分では分からなかった改善点が明確になった」という声も聞こえています。何よりグローバルに展開されているスコアの評価基準が、DBJの目指すグローバル化に必要とされる英語力の目線と合致しているので、受験者たちのモチベーション維持の支えとなっていると思います。 
+            基本的には英語トレーニングは新人も含めたすべての職員が自ら英会話スクールや教材を選択し、自己管理で勉強してもらい、その費用を会社が制度として補助しています。「Versant」の活用目的も人事部や経営陣が職員の能力を定点観測するというよりは、個人が主体的に自己の欠点や意思疎通に必要な表現に気付き、今後のトレーニングの計画を立てたり、成長へのモチベーションの指標として活用してもらうことに重点を置いています。職員からは「会話が成立していると自負していても、実はあいまいな表現だったことに気付ける」「自分では分からなかった改善点が明確になった」という声も聞こえています。何よりグローバルに展開されているスコアの評価基準が、DBJの目指すグローバル化に必要とされる英語力の目線と合致しているので、受験者たちのモチベーション維持の支えとなっていると思います。 
           </p>
         </div>
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            「VERSANT」のスピーキングテストは24年1月にアップグレードしました。<br class="visible_m">どのように評価されていますか。
+            「Versant」のスピーキングテストは24年1月にアップグレードしました。<br class="visible_m">どのように評価されていますか。
           </p>
           <p class="l-article__section_interview_answer">
             <span class="is-bold pr1em">村尾</span>
@@ -333,7 +333,7 @@
           <p class="l-footer__info_head">お問合せ窓口</p>
           <div class="l-footer__info_txt"><span>Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793</a> (平日10:00〜17:00)</div>
           <div class="l-footer__info_txt"><span>Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
+          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">Versant法人利用規約</a>
       </address>  
       
       <div class="l-footer__lnk_box">
