--- a/casestudy/07/index.html
+++ b/casestudy/07/index.html
@@ -2,8 +2,8 @@
   
 
 <!--Header Options
-<SEOTitle>PROGRIT 導入事例｜VERSANT（ヴァ―サント）【法人版】</SEOTitle>
-<SEODescription>社会人を中心に英語学習のコーチングを提供するプログリットでは、専任のコンサルタントが、一人ひとりの課題や目標に合わせた最適な学習カリキュラムで、「良質×大量」の学習環境による英語力向上の最大化を目指している。累計受講者数は2万人以上、法人導入社数は270社を超える。メインのビジネス英会話コースで「VERSANT」を活用する。</SEODescription>
+<SEOTitle>PROGRIT 導入事例｜Versant（ヴァ―サント）【法人版】</SEOTitle>
+<SEODescription>社会人を中心に英語学習のコーチングを提供するプログリットでは、専任のコンサルタントが、一人ひとりの課題や目標に合わせた最適な学習カリキュラムで、「良質×大量」の学習環境による英語力向上の最大化を目指している。累計受講者数は2万人以上、法人導入社数は270社を超える。メインのビジネス英会話コースで「Versant」を活用する。</SEODescription>
 <SEOrobots>noarchive</SEOrobots>
 <SEOcanonical>/nn/special/versant/</SEOcanonical>
 <OGType>article</OGType>
@@ -51,8 +51,8 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>PROGRIT 導入事例｜VERSANT（ヴァ―サント）【法人版】</title>
-  <meta name="description" content="社会人を中心に英語学習のコーチングを提供するプログリットでは、専任のコンサルタントが、一人ひとりの課題や目標に合わせた最適な学習カリキュラムで、「良質×大量」の学習環境による英語力向上の最大化を目指している。累計受講者数は2万人以上、法人導入社数は270社を超える。メインのビジネス英会話コースで「VERSANT」を活用する。">
+  <title>PROGRIT 導入事例｜Versant（ヴァ―サント）【法人版】</title>
+  <meta name="description" content="社会人を中心に英語学習のコーチングを提供するプログリットでは、専任のコンサルタントが、一人ひとりの課題や目標に合わせた最適な学習カリキュラムで、「良質×大量」の学習環境による英語力向上の最大化を目指している。累計受講者数は2万人以上、法人導入社数は270社を超える。メインのビジネス英会話コースで「Versant」を活用する。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
 
@@ -60,11 +60,11 @@
 
   <meta name="robots" content="noarchive"/>
   <meta property="og:type" content="article">
-  <meta property="og:title" content="PROGRIT 導入事例｜VERSANT（ヴァ―サント）【法人版】">
+  <meta property="og:title" content="PROGRIT 導入事例｜Versant（ヴァ―サント）【法人版】">
   <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/casestudy/07/index.html">
-  <meta property="og:description" content="社会人を中心に英語学習のコーチングを提供するプログリットでは、専任のコンサルタントが、一人ひとりの課題や目標に合わせた最適な学習カリキュラムで、「良質×大量」の学習環境による英語力向上の最大化を目指している。累計受講者数は2万人以上、法人導入社数は270社を超える。メインのビジネス英会話コースで「VERSANT」を活用する。">
+  <meta property="og:description" content="社会人を中心に英語学習のコーチングを提供するプログリットでは、専任のコンサルタントが、一人ひとりの課題や目標に合わせた最適な学習カリキュラムで、「良質×大量」の学習環境による英語力向上の最大化を目指している。累計受講者数は2万人以上、法人導入社数は270社を超える。メインのビジネス英会話コースで「Versant」を活用する。">
   <meta property="og:image" content="https://school.nikkei.co.jp/nn/feature/hr/assets/img/ogp_nbs_logo.jpg">
-  <meta property="og:site_name" content="PROGRIT 導入事例｜VERSANT（ヴァ―サント）【法人版】">
+  <meta property="og:site_name" content="PROGRIT 導入事例｜Versant（ヴァ―サント）【法人版】">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="135452203504570">
   <link rel="shortcut icon" href="https://school.nikkei.co.jp/nn/parts/school2016/images/favicon.ico" type="image/vnd.microsoft.icon">
@@ -87,7 +87,7 @@
 <header class="l-header">
   <div class="l-header__cnt">
     <a href="../../index.html">
-      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ" class="l-header__logo">
+      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="Versant&trade; ロゴ" class="l-header__logo">
     </a>
     <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
     <label for="nav-toggle" class="l-header__nav-toggle">
@@ -114,7 +114,7 @@
   <div class="l-page-head is__case07">
     <div class="l-inner">
       <p class="l-page-head__name is__en">Case07</p>
-      <h1 class="l-page-head__ttl">VERSANTの分析で<br>コンサルティングを深化</h1>
+      <h1 class="l-page-head__ttl">Versantの分析で<br>コンサルティングを深化</h1>
       <div>
         <p class="p-casestudy-article__kv_company">プログリット</p>
         <p class="p-casestudy-article__kv_manager">
@@ -129,15 +129,15 @@
     <section class="p-casestudy-article__lead l-bg__gray">
       <div class="l-inner">
         <div class="l-article__lead is__white">
-          <p>社会人を中心に英語学習のコーチングを提供するプログリットでは、専任のコンサルタントが、一人ひとりの課題や目標に合わせた最適な学習カリキュラムで、「良質×大量」の学習環境による英語力向上の最大化を目指している。累計受講者数は2万人以上、法人導入社数は270社を超える。メインのビジネス英会話コースで「VERSANT」を活用する。</p>
+          <p>社会人を中心に英語学習のコーチングを提供するプログリットでは、専任のコンサルタントが、一人ひとりの課題や目標に合わせた最適な学習カリキュラムで、「良質×大量」の学習環境による英語力向上の最大化を目指している。累計受講者数は2万人以上、法人導入社数は270社を超える。メインのビジネス英会話コースで「Versant」を活用する。</p>
         </div>
 
         <div class="p-casestudy-article__summary">
-          <h2 class="p-casestudy-article__summary_headline">「VERSANT」の結果分析で個別最適なカリキュラムを作成</h2>
+          <h2 class="p-casestudy-article__summary_headline">「Versant」の結果分析で個別最適なカリキュラムを作成</h2>
 
           <div class="p-casestudy-article__summary_cnt">
             <h3 class="summary_badge">活用内容</h3>
-            <p>外国語を習得するプロセスの研究である第二言語習得論に基づき、受講者の弱点や目標から、最適な学習方法・時間を特定する際、独自の科学的なデータと共に「VERSANT」の結果分析を参考に専用カリキュラムを作成。3カ月のコーチング期間終了後にその成果を「VERSANT」で確認する。</p>
+            <p>外国語を習得するプロセスの研究である第二言語習得論に基づき、受講者の弱点や目標から、最適な学習方法・時間を特定する際、独自の科学的なデータと共に「Versant」の結果分析を参考に専用カリキュラムを作成。3カ月のコーチング期間終了後にその成果を「Versant」で確認する。</p>
           </div>
 
           <div class="p-casestudy-article__summary_cnt">
@@ -168,18 +168,18 @@
 
         <div class="l-article__section_point_wrp">
           <h3 class="l-article__section_point">
-            受講者の課題発見と解決の指標に<br class="visible_to_m">「VERSANT」を活用
+            受講者の課題発見と解決の指標に<br class="visible_to_m">「Versant」を活用
           </h3>
 
           <h4 class="p-casestudy-article__section_head visible_m">
             
-            <span class="o-textline">創業当初から「VERSANT」を採用していますが、</span><br>
+            <span class="o-textline">創業当初から「Versant」を採用していますが、</span><br>
             <span class="o-textline">忙しいビジネスパーソンが自分のタイミングで</span><br>
             <span class="o-textline">短時間に受験できる効率の良さも、</span><br>
             <span class="o-textline">短期集中のトレーニングには大きな利点です。</span>
           </h4>
           <h4 class="p-casestudy-article__section_head visible_to_m">
-            <span class="o-textline">創業当初から「VERSANT」を採用</span><br>
+            <span class="o-textline">創業当初から「Versant」を採用</span><br>
             <span class="o-textline">していますが、忙しいビジネス</span><br>
             <span class="o-textline">パーソンが自分のタイミングで</span><br>
             <span class="o-textline">短時間に受験できる効率の良さも、</span><br>
@@ -190,7 +190,7 @@
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            プログリットの英語コーチングの特徴と、「VERSANT」の活用方法を教えてください。
+            プログリットの英語コーチングの特徴と、「Versant」の活用方法を教えてください。
           </p>
           <p class="l-article__section_interview_answer">
             プログリットの最大の特徴は、短期集中で英語力を飛躍的に伸ばすことです。そのために最も効率の良い学習方法を選択し、かつ日々の学習時間を最大化することが重要です。我々は受講者専任のコンサルタントとして、一人ひとりの課題や目標に合わせた最適な学習カリキュラムやライフスタイルに合わせたスケジュールを設定し、「学習生産性×投下時間」を最大化させることで、受講期間中の英語力向上を狙います。
@@ -199,10 +199,10 @@
             これまで2万人以上にご受講いただいていますが、短期集中で英語力を伸ばすというコンセプトがら、その多くが英語を使う緊急度の高いビジネスパーソンです。徹底的に無駄を省き、必要なことの優先順位を考えて高効率にトレーニングすることで短期間に成果が出ることが期待できます。   
           </p>
           <p class="l-article__section_interview_answer">
-            2万人以上の学習データをもとに、科学と実践データの両面から専用のカリキュラムを作成していますが、それぞれの受講者様の実力に合わせてカスタマイズすることが重要です。例えば、多くの日本人が語彙は十分に備えているのに、とっさの英作文力が弱かったり、長文のリスニング力が不足していることがあります。ただ、そのバランスや課題点は個別に異なります。当社のビジネス英会話コースでは、「VERSANT」の詳細な結果分析を基に、一人ひとりの課題や長所を発見しています。
+            2万人以上の学習データをもとに、科学と実践データの両面から専用のカリキュラムを作成していますが、それぞれの受講者様の実力に合わせてカスタマイズすることが重要です。例えば、多くの日本人が語彙は十分に備えているのに、とっさの英作文力が弱かったり、長文のリスニング力が不足していることがあります。ただ、そのバランスや課題点は個別に異なります。当社のビジネス英会話コースでは、「Versant」の詳細な結果分析を基に、一人ひとりの課題や長所を発見しています。
           </p>
           <p class="l-article__section_interview_answer">
-            創業当初から「VERSANT」を採用しています。スピーキング力やリスニング力、語彙力、流暢さなどが測れるだけでなく、忙しいビジネスパーソンが自分のタイミングで短時間に受験できる効率の良さも、短期集中のトレーニングには大きな利点です。 
+            創業当初から「Versant」を採用しています。スピーキング力やリスニング力、語彙力、流暢さなどが測れるだけでなく、忙しいビジネスパーソンが自分のタイミングで短時間に受験できる効率の良さも、短期集中のトレーニングには大きな利点です。 
           </p>
           <div class="l-article__section_interview_img">
             <img src="../../assets/img/casestudy/07/img_01.jpg" alt="インタビュー画像">
@@ -220,43 +220,43 @@
           <h4 class="p-casestudy-article__section_head visible_m">
             <span class="o-textline">最大限に効果を引き出すカリキュラムにするためには、</span><br>
             <span class="o-textline">コンサルタントの定性的な主観と</span><br>
-            <span class="o-textline">「VERSANT」の定量的な分析の両輪が必須です。</span>
+            <span class="o-textline">「Versant」の定量的な分析の両輪が必須です。</span>
           </h4>
           <h4 class="p-casestudy-article__section_head visible_to_m">
             <span class="o-textline">最大限に効果を引き出す</span><br>
             <span class="o-textline">カリキュラムにするためには、</span><br>
             <span class="o-textline">コンサルタントの定性的な主観と</span><br>
-            <span class="o-textline">「VERSANT」の定量的な分析の</span><br>
+            <span class="o-textline">「Versant」の定量的な分析の</span><br>
             <span class="o-textline">両輪が必須です。</span>
           </h4>
         </div>
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            具体的には「VERSANT」の結果は、どうカリキュラムに反映していますか。また、受講者の反応はいかがですか。
+            具体的には「Versant」の結果は、どうカリキュラムに反映していますか。また、受講者の反応はいかがですか。
           </p>
           <p class="l-article__section_interview_answer">
-            受講までの流れとして、まず無料カウンセリングで面談するコンサルタントが当社の基準に沿って英語力を診断し、カリキュラムを作成してご提案します。受講が決まった方には、専任のコンサルタントがつき、毎週60分のコンサル面談を実施していきます。「VERSANT」は専任コンサルとの初回面談までに受験していただき、各コンサルタントはその結果を分析しながら、カリキュラムをより現実的で高効率なものに更新します。
+            受講までの流れとして、まず無料カウンセリングで面談するコンサルタントが当社の基準に沿って英語力を診断し、カリキュラムを作成してご提案します。受講が決まった方には、専任のコンサルタントがつき、毎週60分のコンサル面談を実施していきます。「Versant」は専任コンサルとの初回面談までに受験していただき、各コンサルタントはその結果を分析しながら、カリキュラムをより現実的で高効率なものに更新します。
           </p>
           <p class="l-article__section_interview_answer">
-            「VERSANT」を活用する大きなメリットはコンサルタントの主観だけに頼らず、客観性を担保できる点です。コンサルタントたちは常に「VERSANT」の結果分析の方法を議論しながら進化させており、一人が判断に迷ったりした際には複数人で分析することもあります。最大限に効果を引き出すカリキュラムにするためには、コンサルタントの定性的な主観と「VERSANT」の定量的な分析の両輪が必須で、特にビジネスパーソンはその点に深い納得感を持ってトレーニングを進めていただいていると感じています。<br>
-            多くの英語テストは聞き取りやすい音声ですが、「VERSANT」のそれはかなり現実に近いものですから、それに慣れることは実践的な英会話を目標にする人にとって役立ちます。また、上達度が数字（スコア）で示せることも重要な点です。
+            「Versant」を活用する大きなメリットはコンサルタントの主観だけに頼らず、客観性を担保できる点です。コンサルタントたちは常に「Versant」の結果分析の方法を議論しながら進化させており、一人が判断に迷ったりした際には複数人で分析することもあります。最大限に効果を引き出すカリキュラムにするためには、コンサルタントの定性的な主観と「Versant」の定量的な分析の両輪が必須で、特にビジネスパーソンはその点に深い納得感を持ってトレーニングを進めていただいていると感じています。<br>
+            多くの英語テストは聞き取りやすい音声ですが、「Versant」のそれはかなり現実に近いものですから、それに慣れることは実践的な英会話を目標にする人にとって役立ちます。また、上達度が数字（スコア）で示せることも重要な点です。
           </p>
           <p class="l-article__section_interview_answer">
-            ビジネス英会話コースでは、3ヶ月後にも「VERSANT」を受講していただきます。確実に上達していてもその実感が持てないという方もいらっしゃるのですが、そういった時「VERSANT」を用いることで、確かな成長を定量的にお伝えすることができます。もちろん、法人枠で受講されている方は、会社への報告が必要な場合もあります。人事部などからは「実践的な英語を話せる人を把握したい」という要望も強くなっており、事業部単位で「この部署の人々を英語の会議で議論できるレベルに」と希望される企業も増えています。<br>
+            ビジネス英会話コースでは、3ヶ月後にも「Versant」を受講していただきます。確実に上達していてもその実感が持てないという方もいらっしゃるのですが、そういった時「Versant」を用いることで、確かな成長を定量的にお伝えすることができます。もちろん、法人枠で受講されている方は、会社への報告が必要な場合もあります。人事部などからは「実践的な英語を話せる人を把握したい」という要望も強くなっており、事業部単位で「この部署の人々を英語の会議で議論できるレベルに」と希望される企業も増えています。<br>
             これまでの受講者のスコアアップの指標は受講者の皆さんのモチベーション向上や目標にもなりますし、当社としても、対外的に示せる成果でもあります。
           </p>
         </div>
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            「VERSANT」のスピーキングテストは24年1月にアップグレードしました。どのように評価されていますか。
+            「Versant」のスピーキングテストは24年1月にアップグレードしました。どのように評価されていますか。
           </p>
           <p class="l-article__section_interview_answer">
             第一印象は判定の精度が高まったことです。特にリスニングスコアが加わり、スピーキングのスコアと共に把握できることは当社のプログラムによりフィットした印象です。<br>
             やはりリスニングができないと会話はスタートしないので重要です。漠然と理解できているのと、会話の細部まで理解できているのとでは、そこから先の会話の正確性が異なります。それが客観的な評価で把握できることは、コンサルティングの質向上に大きく関わりますので、大変ありがたい進化です。
           </p>
           <p class="l-article__section_interview_answer">
-            当社のコンサルタントは英語を仕事の中で使ってきたプロで、社内研修を受けて第二言語習得論も習得していますが、全員「VERSANT」を受験して、自己の実力を確認しています。「VERSANT」の定量的なスコアを確認することで、自己確認をしたり改善点を見出したりしながら、コンサルティングの質向上に努めています。
+            当社のコンサルタントは英語を仕事の中で使ってきたプロで、社内研修を受けて第二言語習得論も習得していますが、全員「Versant」を受験して、自己の実力を確認しています。「Versant」の定量的なスコアを確認することで、自己確認をしたり改善点を見出したりしながら、コンサルティングの質向上に努めています。
           </p>
         </div>
 
@@ -273,11 +273,11 @@
             テクノロジーとコンサルティングの<br class="visible_to_m">両者の利点を追求
           </h3>
           <h4 class="p-casestudy-article__section_head visible_m">
-            <span class="o-textline">AIを活用する「VERSANT」を採用するメリットも、</span><br>
+            <span class="o-textline">AIを活用する「Versant」を採用するメリットも、</span><br>
             <span class="o-textline">人がそれを分析することに意味があるからです。</span>
           </h4>
           <h4 class="p-casestudy-article__section_head visible_to_m">
-            <span class="o-textline">AIを活用する「VERSANT」を</span><br>
+            <span class="o-textline">AIを活用する「Versant」を</span><br>
             <span class="o-textline">採用するメリットも、</span><br>
             <span class="o-textline">人がそれを分析することに</span><br>
             <span class="o-textline">意味があるからです。</span>
@@ -292,7 +292,7 @@
             AIの社会浸透は大きなゲームチェンジになると思っています。当社も2024年7月にAI英会話のサービスをリリースしました。学習者の興味関心や近況を AI が分析し記憶することで、今までの英会話よりもパーソナライズされた、より深い内容で英会話練習をすることができます。AI の発話レベルやアクセントの調整も可能で、英会話を今まで以上に気軽に続けられることのできるアプリとなっています。弊社はこれまで、英語コーチングサービスを主軸として事業を展開してきましたが、英語コーチング「プログリット」は3ヶ月約60万円の高単価サービスであり、利用者は一定層に限られます。英語学習に必要なサービスを幅広いセグメントに展開していくため、現在サブスクサービスを複数展開し、ラインナップの充実化を進めています。さらに今後は、価格帯や年齢問わず、全方位的にサービスを展開していく予定です。<br>
             その中で、テクノロジーの活用は大変重要になりますが、テクノロジーだけではなく、「人×テクノロジー」双方の力を最大限引き出すことで英語学習に革新をもたらしていきたいと考えています。
           </p>
-          <p class="l-article__section_interview_answer">英語コーチングでは、個々の長所短所やその変化をつぶさに見て分析し、目標に向けて頑張る人々に寄り添ってサポートをしています。現時点では、それはテクノロジーとの大きな違いであり、AIを活用する「VERSANT」を採用するメリットも、人がそれを分析することに意味があると考えています。その両者の利点を常に見つめながら、理想の英会話習得のシステムを追求して、日本社会のグローバル化に貢献していきたいと考えています。</p>
+          <p class="l-article__section_interview_answer">英語コーチングでは、個々の長所短所やその変化をつぶさに見て分析し、目標に向けて頑張る人々に寄り添ってサポートをしています。現時点では、それはテクノロジーとの大きな違いであり、AIを活用する「Versant」を採用するメリットも、人がそれを分析することに意味があると考えています。その両者の利点を常に見つめながら、理想の英会話習得のシステムを追求して、日本社会のグローバル化に貢献していきたいと考えています。</p>
         </div>
 
         <div class="l-article__section_interview">
@@ -320,7 +320,7 @@
           <p class="l-footer__info_head">お問合せ窓口</p>
           <div class="l-footer__info_txt"><span>Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793</a> (平日10:00〜17:00)</div>
           <div class="l-footer__info_txt"><span>Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
+          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">Versant法人利用規約</a>
       </address>  
       
       <div class="l-footer__lnk_box">
