--- a/casestudy/10/index.html
+++ b/casestudy/10/index.html
@@ -2,8 +2,8 @@
   
 
 <!--Header Options
-<SEOTitle>構造計画研究所　導入事例｜VERSANT（ヴァーサント）【法人版】</SEOTitle>
-<SEODescription>建築・IT分野の技術コンサルティングファームとして知られる構造計画研究所は、約10年前より東南アジアから若い技術系人材を積極的に採用している。社内外でも日本語が必要となる業務が多く、ほとんどの外国籍人材は入社後に日本語を学ぶ。入社後、最初数年は共通言語として英語でのコミュニケーションが必要となるため、書類審査を通過した人の英語スピーキング力を測るために、2019年から「VERSANT」を採用。</SEODescription>
+<SEOTitle>構造計画研究所　導入事例｜Versant（ヴァーサント）【法人版】</SEOTitle>
+<SEODescription>建築・IT分野の技術コンサルティングファームとして知られる構造計画研究所は、約10年前より東南アジアから若い技術系人材を積極的に採用している。社内外でも日本語が必要となる業務が多く、ほとんどの外国籍人材は入社後に日本語を学ぶ。入社後、最初数年は共通言語として英語でのコミュニケーションが必要となるため、書類審査を通過した人の英語スピーキング力を測るために、2019年から「Versant」を採用。</SEODescription>
 <SEOrobots>noarchive</SEOrobots>
 <SEOcanonical>/nn/special/versant/</SEOcanonical>
 <OGType>article</OGType>
@@ -51,8 +51,8 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>構造計画研究所　導入事例｜VERSANT（ヴァーサント）【法人版】</title>
-  <meta name="description" content="建築・IT分野の技術コンサルティングファームとして知られる構造計画研究所は、約10年前より東南アジアから若い技術系人材を積極的に採用している。社内外でも日本語が必要となる業務が多く、ほとんどの外国籍人材は入社後に日本語を学ぶ。入社後、最初数年は共通言語として英語でのコミュニケーションが必要となるため、書類審査を通過した人の英語スピーキング力を測るために、2019年から「VERSANT」を採用。">
+  <title>構造計画研究所　導入事例｜Versant（ヴァーサント）【法人版】</title>
+  <meta name="description" content="建築・IT分野の技術コンサルティングファームとして知られる構造計画研究所は、約10年前より東南アジアから若い技術系人材を積極的に採用している。社内外でも日本語が必要となる業務が多く、ほとんどの外国籍人材は入社後に日本語を学ぶ。入社後、最初数年は共通言語として英語でのコミュニケーションが必要となるため、書類審査を通過した人の英語スピーキング力を測るために、2019年から「Versant」を採用。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
 
@@ -60,11 +60,11 @@
 
   <meta name="robots" content="noarchive"/>
   <meta property="og:type" content="article">
-  <meta property="og:title" content="構造計画研究所　導入事例｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:title" content="構造計画研究所　導入事例｜Versant（ヴァーサント）【法人版】">
   <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/casestudy/10/index.html">
-  <meta property="og:description" content="建築・IT分野の技術コンサルティングファームとして知られる構造計画研究所は、約10年前より東南アジアから若い技術系人材を積極的に採用している。社内外でも日本語が必要となる業務が多く、ほとんどの外国籍人材は入社後に日本語を学ぶ。入社後、最初数年は共通言語として英語でのコミュニケーションが必要となるため、書類審査を通過した人の英語スピーキング力を測るために、2019年から「VERSANT」を採用。">
+  <meta property="og:description" content="建築・IT分野の技術コンサルティングファームとして知られる構造計画研究所は、約10年前より東南アジアから若い技術系人材を積極的に採用している。社内外でも日本語が必要となる業務が多く、ほとんどの外国籍人材は入社後に日本語を学ぶ。入社後、最初数年は共通言語として英語でのコミュニケーションが必要となるため、書類審査を通過した人の英語スピーキング力を測るために、2019年から「Versant」を採用。">
   <meta property="og:image" content="https://school.nikkei.co.jp/nn/feature/hr/assets/img/ogp_nbs_logo.jpg">
-  <meta property="og:site_name" content="構造計画研究所　導入事例｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:site_name" content="構造計画研究所　導入事例｜Versant（ヴァーサント）【法人版】">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="135452203504570">
   <link rel="shortcut icon" href="https://school.nikkei.co.jp/nn/parts/school2016/images/favicon.ico" type="image/vnd.microsoft.icon">
@@ -87,7 +87,7 @@
 <header class="l-header">
   <div class="l-header__cnt">
     <a href="../../index.html">
-      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ" class="l-header__logo">
+      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="Versant&trade; ロゴ" class="l-header__logo">
     </a>
     <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
     <label for="nav-toggle" class="l-header__nav-toggle">
@@ -129,7 +129,7 @@
     <section class="p-casestudy-article__lead l-bg__gray">
       <div class="l-inner">
         <div class="l-article__lead is__white">
-          <p>建築・IT分野の技術コンサルティングファームとして知られる構造計画研究所は、約10年前より東南アジアから若い技術系人材を積極的に採用している。<br>社内外でも日本語が必要となる業務が多く、ほとんどの外国籍人材は入社後に日本語を学ぶ。<br>入社後、最初数年は共通言語として英語でのコミュニケーションが必要となるため、書類審査を通過した人の英語スピーキング力を測るために、2019年から「VERSANT」を採用。</p>
+          <p>建築・IT分野の技術コンサルティングファームとして知られる構造計画研究所は、約10年前より東南アジアから若い技術系人材を積極的に採用している。<br>社内外でも日本語が必要となる業務が多く、ほとんどの外国籍人材は入社後に日本語を学ぶ。<br>入社後、最初数年は共通言語として英語でのコミュニケーションが必要となるため、書類審査を通過した人の英語スピーキング力を測るために、2019年から「Versant」を採用。</p>
         </div>
 
         <div class="p-casestudy-article__summary">
@@ -137,7 +137,7 @@
 
           <div class="p-casestudy-article__summary_cnt">
             <h3 class="summary_badge">活用内容</h3>
-            <p>約10年前より東南アジアの学生たちを採用するなかで、「ビジネス英語」ができることを採用条件の一つに据えている。CV（カリキュラム・ビタエ）を提出した学生には「VERSANT」を受験してもらい、他の条件と照らし合わせながら一定基準をクリアした学生との面接を実施する。海外からの応募者は国内留学生を含め毎年約400~500人。</p>
+            <p>約10年前より東南アジアの学生たちを採用するなかで、「ビジネス英語」ができることを採用条件の一つに据えている。CV（カリキュラム・ビタエ）を提出した学生には「Versant」を受験してもらい、他の条件と照らし合わせながら一定基準をクリアした学生との面接を実施する。海外からの応募者は国内留学生を含め毎年約400~500人。</p>
           </div>
 
           <div class="p-casestudy-article__summary_cnt">
@@ -191,22 +191,22 @@
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            海外の学生を採用する際に「VERSANT」を活用する理由について教えてください。
+            海外の学生を採用する際に「Versant」を活用する理由について教えてください。
           </p>
           <p class="l-article__section_interview_answer">
             国内の理工系や技術系の学生の争奪戦が激しくなり、国籍や使用言語にとらわれず当社に心を寄せてくれる方の参画を目指し、外国籍人才の採用を始めました。当初、シンガポールで行われる日本企業の合同説明会に出展したことから、多くは東南アジアの大学生・大学院生で、中国や韓国、インド、インドネシア、マレーシア、ミャンマーからの応募が一定数あります。
           </p>
           <p class="l-article__section_interview_answer">
-            当社では9割の顧客が日本企業ですから、いまのところ彼らの英語力をビジネスに生かすことを目的としてはおらず、入社後には必ず日本語を勉強していただきます。ただ、日本語で業務ができるまでに平均2年は必要なため、その間のコミュニケーションは英語です。そのため、業務や日常生活に必要な英語力を測る目的で「VERSANT」を採用しました。
+            当社では9割の顧客が日本企業ですから、いまのところ彼らの英語力をビジネスに生かすことを目的としてはおらず、入社後には必ず日本語を勉強していただきます。ただ、日本語で業務ができるまでに平均2年は必要なため、その間のコミュニケーションは英語です。そのため、業務や日常生活に必要な英語力を測る目的で「Versant」を採用しました。
           </p>
           <p class="l-article__section_interview_answer">
             当初は自己申告でCVに英語レベルを記載してもらっていたのですが、「ビジネス英語レベル」とあっても面談してみるとその実力は様々でした。外国籍の応募者は海外からが200人、国内留学生が300人で計500人いますので、できるだけ実際の実力を事前に把握し、効率良く適任者と巡り合うことが必要です。
           </p>
           <p class="l-article__section_interview_answer">
-            様々な英語テストがある中で、重視したのは①英語を使った実際の会話力が正確に測れることと、②時間や金額面で受験者に負担がかからないこと、③詳細な結果分析が分かることです。「VERSANT」はそのすべての条件を満たしていたので採用することになりました。英語採用を担当する私たちも全員で受験しましたが、とても精度の高い採点結果で、リアルな英語力が判別できると高く評価しています。
+            様々な英語テストがある中で、重視したのは①英語を使った実際の会話力が正確に測れることと、②時間や金額面で受験者に負担がかからないこと、③詳細な結果分析が分かることです。「Versant」はそのすべての条件を満たしていたので採用することになりました。英語採用を担当する私たちも全員で受験しましたが、とても精度の高い採点結果で、リアルな英語力が判別できると高く評価しています。
           </p>
           <p class="l-article__section_interview_answer">
-            現在は、CV提出者には「VERSANT」を含むいくつかのテストを受験してもらい、その結果を照らし合わせて面接への通過者を決定します。「VERSANT」の基準スコアは40としていますが、そこに届かなくてもCVの内容が魅力的だったりすれば、さらにスコア分析などを詳細に見ていきます。例えば、発音の結果がスコアを下げている場合、意図を伝えるうえでは影響が少ないこともあります。「VERSANT」の詳しい結果評価は、リアルな分析ができるので、リクルーティングにはとても重宝します。
+            現在は、CV提出者には「Versant」を含むいくつかのテストを受験してもらい、その結果を照らし合わせて面接への通過者を決定します。「Versant」の基準スコアは40としていますが、そこに届かなくてもCVの内容が魅力的だったりすれば、さらにスコア分析などを詳細に見ていきます。例えば、発音の結果がスコアを下げている場合、意図を伝えるうえでは影響が少ないこともあります。「Versant」の詳しい結果評価は、リアルな分析ができるので、リクルーティングにはとても重宝します。
           </p>
 
           <div class="l-article__section_interview_img">
@@ -242,10 +242,10 @@
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            「VERSANT」を受験して入社された外国籍の人々は、入社後どのように活躍されていますか。また、応募理由の傾向などがあれば教えてください。
+            「Versant」を受験して入社された外国籍の人々は、入社後どのように活躍されていますか。また、応募理由の傾向などがあれば教えてください。
           </p>
           <p class="l-article__section_interview_answer">
-            「VERSANT」で高いスコアだった人々はやはりコミュニケーションもスムーズで、順調に社内の風土にも馴染んでいきます。
+            「Versant」で高いスコアだった人々はやはりコミュニケーションもスムーズで、順調に社内の風土にも馴染んでいきます。
           </p>
           <p class="l-article__section_interview_answer">
             今年は5年以上の経験を有した外国籍所員がメインとなる海外事業タスクフォースが立ち上がりました。外国籍人才の採用を始めて約10年が経ち、これまでになかった海外での活躍の場が生まれ始めています。
@@ -269,13 +269,13 @@
             グローバル人才の割合20％を目標に
           </h3>
           <h4 class="p-casestudy-article__section_head visible_m">
-            <span class="o-textline">応募者が「VERSANT」を受ける時間はわずかで、</span><br>
+            <span class="o-textline">応募者が「Versant」を受ける時間はわずかで、</span><br>
             <span class="o-textline">採用側が結果をチェックする時間もわずかですが、</span><br>
             <span class="o-textline">その時間で言語面では互いに対話できる準備が</span>
             <span class="o-textline">できているのだと明確になる点が重要だと考えています。</span>
           </h4>
           <h4 class="p-casestudy-article__section_head visible_to_m">
-            <span class="o-textline">応募者が「VERSANT」を受ける</span><br>
+            <span class="o-textline">応募者が「Versant」を受ける</span><br>
             <span class="o-textline">時間はわずかで、採用側が結果を</span><br>
             <span class="o-textline">チェックする時間もわずかですが、</span><br>
             <span class="o-textline">その時間で言語面では互いに対話</span>
@@ -287,19 +287,19 @@
 
         <div class="l-article__section_interview">
           <p class="l-article__section_interview_question">
-            「VERSANT」を採用して良かった点と、グローバル人材によるダイバーシティーについての展望についてお考えをお聞かせください。
+            「Versant」を採用して良かった点と、グローバル人材によるダイバーシティーについての展望についてお考えをお聞かせください。
           </p>
           <p class="l-article__section_interview_answer">
-            「VERSANT」を導入したことで大きく変わったのは、応募者と確実に意思疎通ができる環境ができたことです。東南アジアの様々な国や地域で異なる母国語を持つ人々が日本の企業で働こうとする場合、求職者側も採用者側もお互いのことを理解し合うには、英語でのコミュニケーションしかありません。CVの内容が魅力的で面接しても、英語も日本語もできなければ、その人のキャリアビジョンや会社に求めていることが分からず、採用してもしなくてもお互いに不幸な結果を招いてしまいます。
+            「Versant」を導入したことで大きく変わったのは、応募者と確実に意思疎通ができる環境ができたことです。東南アジアの様々な国や地域で異なる母国語を持つ人々が日本の企業で働こうとする場合、求職者側も採用者側もお互いのことを理解し合うには、英語でのコミュニケーションしかありません。CVの内容が魅力的で面接しても、英語も日本語もできなければ、その人のキャリアビジョンや会社に求めていることが分からず、採用してもしなくてもお互いに不幸な結果を招いてしまいます。
           </p>
           <p class="l-article__section_interview_answer">
-            応募者が「VERSANT」を受ける時間はわずかで、採用側が結果をチェックする時間もわずかですが、その時間で言語面では互いに対話できる準備ができているのだと明確になる点が重要だと考えています。
+            応募者が「Versant」を受ける時間はわずかで、採用側が結果をチェックする時間もわずかですが、その時間で言語面では互いに対話できる準備ができているのだと明確になる点が重要だと考えています。
           </p>
           <p class="l-article__section_interview_answer">
             コロナ禍が長引いた影響で、海外からの応募者は減少傾向で、その代わり国内留学生の応募数が増えています。英語での採用を始めたときに掲げた、国籍や使用言語にとらわれず当社に心を寄せてくれる方の参画を目指す姿勢はこれからも大事にしていきます。多彩な文化背景を持つ人々の採用が、結果、組織のダイバーシティーやダイナミズムに影響を与えると考えています。現在、全体構成比約8％の外国籍所員を、まずは20％への拡大を目指しています。
           </p>
           <p class="l-article__section_interview_answer">
-            外国籍所員を受け入れる各部門からは「外国籍所員の中には日本の技術系や理工系には無い発想を持つ人がいる」という声もあり、そうした優秀な人を海外から誘致するのは砂漠の中でダイヤモンドを探すような作業かもしれませんが、重要な役割だと考えています。リクルート部の英語採用担当としては、いずれはそうした様々な海外大学の学生たちのインターンシップを受け入れ、会社の事業内容や雰囲気、仕事の面白さなどを肌で感じてもらうような仕組みづくりも視野に入れています。その際も「VERSANT」での英語力の測定は確実に役立つはずだと考えています。
+            外国籍所員を受け入れる各部門からは「外国籍所員の中には日本の技術系や理工系には無い発想を持つ人がいる」という声もあり、そうした優秀な人を海外から誘致するのは砂漠の中でダイヤモンドを探すような作業かもしれませんが、重要な役割だと考えています。リクルート部の英語採用担当としては、いずれはそうした様々な海外大学の学生たちのインターンシップを受け入れ、会社の事業内容や雰囲気、仕事の面白さなどを肌で感じてもらうような仕組みづくりも視野に入れています。その際も「Versant」での英語力の測定は確実に役立つはずだと考えています。
           </p>
         </div>
       </section>
@@ -324,7 +324,7 @@
           <p class="l-footer__info_head">お問合せ窓口</p>
           <div class="l-footer__info_txt"><span>Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793</a> (平日10:00〜17:00)</div>
           <div class="l-footer__info_txt"><span>Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
+          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">Versant法人利用規約</a>
       </address>  
       
       <div class="l-footer__lnk_box">
