--- a/casestudy/index.html
+++ b/casestudy/index.html
@@ -2,8 +2,8 @@
 
   
 <!--Header Options
-<SEOTitle>導入事例・コラム｜VERSANT（ヴァーサント）【法人版】</SEOTitle>
-<SEODescription>定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、VERSANT（ヴァーサント）は、数多くの法人企業様のグローバル人材育成をご支援しております。語学力の新基準として人材育成を推進しておられる企業様の先進的な取り組みをご紹介します。</SEODescription>
+<SEOTitle>導入事例・コラム｜Versant（ヴァーサント）【法人版】</SEOTitle>
+<SEODescription>定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、Versant（ヴァーサント）は、数多くの法人企業様のグローバル人材育成をご支援しております。語学力の新基準として人材育成を推進しておられる企業様の先進的な取り組みをご紹介します。</SEODescription>
 <SEOrobots>noarchive</SEOrobots>
 <SEOcanonical>/nn/special/versant/</SEOcanonical>
 <OGType>article</OGType>
@@ -51,8 +51,8 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>導入事例・コラム｜VERSANT（ヴァーサント）【法人版】</title>
-  <meta name="description" content="定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、VERSANT（ヴァーサント）は、数多くの法人企業様のグローバル人材育成をご支援しております。語学力の新基準として人材育成を推進しておられる企業様の先進的な取り組みをご紹介します。">
+  <title>導入事例・コラム｜Versant（ヴァーサント）【法人版】</title>
+  <meta name="description" content="定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、Versant（ヴァーサント）は、数多くの法人企業様のグローバル人材育成をご支援しております。語学力の新基準として人材育成を推進しておられる企業様の先進的な取り組みをご紹介します。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
 
@@ -60,11 +60,11 @@
 
   <meta name="robots" content="noarchive"/>
   <meta property="og:type" content="article">
-  <meta property="og:title" content="導入事例・コラム｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:title" content="導入事例・コラム｜Versant（ヴァーサント）【法人版】">
   <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/casestudy/index.html">
-  <meta property="og:description" content="定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、VERSANT（ヴァーサント）は、数多くの法人企業様のグローバル人材育成をご支援しております。語学力の新基準として人材育成を推進しておられる企業様の先進的な取り組みをご紹介します。">
+  <meta property="og:description" content="定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、Versant（ヴァーサント）は、数多くの法人企業様のグローバル人材育成をご支援しております。語学力の新基準として人材育成を推進しておられる企業様の先進的な取り組みをご紹介します。">
   <meta property="og:image" content="https://school.nikkei.co.jp/nn/feature/hr/assets/img/ogp_nbs_logo.jpg">
-  <meta property="og:site_name" content="導入事例・コラム｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:site_name" content="導入事例・コラム｜Versant（ヴァーサント）【法人版】">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="135452203504570">
   <link rel="shortcut icon" href="https://school.nikkei.co.jp/nn/parts/school2016/images/favicon.ico" type="image/vnd.microsoft.icon">
@@ -87,7 +87,7 @@
 <header class="l-header">
   <div class="l-header__cnt">
     <a href="../index.html">
-      <img src="../assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ" class="l-header__logo">
+      <img src="../assets/img/index/header_logo.png" width="206" height="38.95" alt="Versant&trade; ロゴ" class="l-header__logo">
     </a>
     <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
     <label for="nav-toggle" class="l-header__nav-toggle">
@@ -113,7 +113,7 @@
       <div class="l-page-head l-bg__gray is__page-head-bg">
         <div class="l-inner">
           <h1 class="l-page-head__name">導入事例/コラム</h1>
-          <h2 class="l-page-head__ttl">国内約500の企業・<br class="sp_only">教育機関が<br>VERSANTを導入</h2>
+          <h2 class="l-page-head__ttl">国内約500の企業・<br class="sp_only">教育機関が<br>Versantを導入</h2>
         </div>
       </div>
       <div class="p-casestudy__company">
@@ -282,7 +282,7 @@
               <div class="p-casestudy__post-inner">
                 <div class="p-casestudy__post-text">
                   <h3 class="p-casestudy__post-title">プログリット</h3>
-                  <p class="p-casestudy__post-desc">VERSANTの分析でコンサルティングを深化</p>
+                  <p class="p-casestudy__post-desc">Versantの分析でコンサルティングを深化</p>
                 </div>
                
                 <picture class="p-casestudy__post-logo">
@@ -336,7 +336,7 @@
               <a href="../column/02/index.html" class="p-index__column_link">
                 <img src="../assets/img/index/column_02.jpg" alt="コラムサムネイル">
                 <div class="p-index__column_link_info">
-                  <h5 class="column_head">社員の英語スピーキング力をVERSANTで可視化しませんか</h5>
+                  <h5 class="column_head">社員の英語スピーキング力をVersantで可視化しませんか</h5>
                   <p class="column_date">2024/09/09</p>
                 </div>
               </a>
@@ -370,7 +370,7 @@
           <p class="l-footer__info_head">お問合せ窓口</p>
           <div class="l-footer__info_txt"><span>Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793</a> (平日10:00〜17:00)</div>
           <div class="l-footer__info_txt"><span>Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
+          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">Versant法人利用規約</a>
       </address>  
       
       <div class="l-footer__lnk_box">
