--- a/column/02/index.html
+++ b/column/02/index.html
@@ -2,8 +2,8 @@
   
 
 <!--Header Options
-<SEOTitle>社員の英語スピーキング力をVERSANTで可視化しませんか｜VERSANT（ヴァーサント）【法人版】</SEOTitle>
-<SEODescription>プロが認める英語テストの決定版-日本企業のグローバル展開が加速する昨今、ビジネスパーソンには本質的なグローバルスキルが求められています。グローバル環境下でビジネスを推進するには異文化理解やグローバルマインドセット、また「英語でのコミュニケーションスキル」が欠かせません。ビジネスパーソンの英語学習の新たな主流、コーチング英会話を運営するプロが、英語力の成長を促す秘訣、と語るのが「VERSANT（ヴァーサント）」です。「スピーキング力」の向上にVERSANTをどのように活用しているのか、その核心に迫ります。</SEODescription>
+<SEOTitle>社員の英語スピーキング力をVersantで可視化しませんか｜Versant（ヴァーサント）【法人版】</SEOTitle>
+<SEODescription>プロが認める英語テストの決定版-日本企業のグローバル展開が加速する昨今、ビジネスパーソンには本質的なグローバルスキルが求められています。グローバル環境下でビジネスを推進するには異文化理解やグローバルマインドセット、また「英語でのコミュニケーションスキル」が欠かせません。ビジネスパーソンの英語学習の新たな主流、コーチング英会話を運営するプロが、英語力の成長を促す秘訣、と語るのが「Versant（ヴァーサント）」です。「スピーキング力」の向上にVersantをどのように活用しているのか、その核心に迫ります。</SEODescription>
 <SEOrobots>noarchive</SEOrobots>
 <SEOcanonical>/nn/special/versant/</SEOcanonical>
 <OGType>article</OGType>
@@ -51,8 +51,8 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>社員の英語スピーキング力をVERSANTで可視化しませんか｜VERSANT（ヴァーサント）【法人版】</title>
-  <meta name="description" content="プロが認める英語テストの決定版-日本企業のグローバル展開が加速する昨今、ビジネスパーソンには本質的なグローバルスキルが求められています。グローバル環境下でビジネスを推進するには異文化理解やグローバルマインドセット、また「英語でのコミュニケーションスキル」が欠かせません。ビジネスパーソンの英語学習の新たな主流、コーチング英会話を運営するプロが、英語力の成長を促す秘訣、と語るのが「VERSANT（ヴァーサント）」です。「スピーキング力」の向上にVERSANTをどのように活用しているのか、その核心に迫ります。">
+  <title>社員の英語スピーキング力をVersantで可視化しませんか｜Versant（ヴァーサント）【法人版】</title>
+  <meta name="description" content="プロが認める英語テストの決定版-日本企業のグローバル展開が加速する昨今、ビジネスパーソンには本質的なグローバルスキルが求められています。グローバル環境下でビジネスを推進するには異文化理解やグローバルマインドセット、また「英語でのコミュニケーションスキル」が欠かせません。ビジネスパーソンの英語学習の新たな主流、コーチング英会話を運営するプロが、英語力の成長を促す秘訣、と語るのが「Versant（ヴァーサント）」です。「スピーキング力」の向上にVersantをどのように活用しているのか、その核心に迫ります。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
 
@@ -60,11 +60,11 @@
 
   <meta name="robots" content="noarchive"/>
   <meta property="og:type" content="article">
-  <meta property="og:title" content="社員の英語スピーキング力をVERSANTで可視化しませんか｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:title" content="社員の英語スピーキング力をVersantで可視化しませんか｜Versant（ヴァーサント）【法人版】">
   <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/column/02/index.html">
-  <meta property="og:description" content="プロが認める英語テストの決定版-日本企業のグローバル展開が加速する昨今、ビジネスパーソンには本質的なグローバルスキルが求められています。グローバル環境下でビジネスを推進するには異文化理解やグローバルマインドセット、また「英語でのコミュニケーションスキル」が欠かせません。ビジネスパーソンの英語学習の新たな主流、コーチング英会話を運営するプロが、英語力の成長を促す秘訣、と語るのが「VERSANT（ヴァーサント）」です。「スピーキング力」の向上にVERSANTをどのように活用しているのか、その核心に迫ります。">
+  <meta property="og:description" content="プロが認める英語テストの決定版-日本企業のグローバル展開が加速する昨今、ビジネスパーソンには本質的なグローバルスキルが求められています。グローバル環境下でビジネスを推進するには異文化理解やグローバルマインドセット、また「英語でのコミュニケーションスキル」が欠かせません。ビジネスパーソンの英語学習の新たな主流、コーチング英会話を運営するプロが、英語力の成長を促す秘訣、と語るのが「Versant（ヴァーサント）」です。「スピーキング力」の向上にVersantをどのように活用しているのか、その核心に迫ります。">
   <meta property="og:image" content="https://school.nikkei.co.jp/nn/feature/hr/assets/img/ogp_nbs_logo.jpg">
-  <meta property="og:site_name" content="社員の英語スピーキング力をVERSANTで可視化しませんか｜VERSANT（ヴァーサント）【法人版】">
+  <meta property="og:site_name" content="社員の英語スピーキング力をVersantで可視化しませんか｜Versant（ヴァーサント）【法人版】">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="135452203504570">
   <link rel="shortcut icon" href="https://school.nikkei.co.jp/nn/parts/school2016/images/favicon.ico" type="image/vnd.microsoft.icon">
@@ -87,7 +87,7 @@
 <header class="l-header">
   <div class="l-header__cnt">
     <a href="../../index.html">
-      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="VERSANT&trade; ロゴ" class="l-header__logo">
+      <img src="../../assets/img/index/header_logo.png" width="206" height="38.95" alt="Versant&trade; ロゴ" class="l-header__logo">
     </a>
     <input type="checkbox" id="nav-toggle" class="l-header__nav-checkbox">
     <label for="nav-toggle" class="l-header__nav-toggle">
@@ -114,7 +114,7 @@
   <div class="l-page-head is__column02">
     <div class="l-inner">
       <p class="l-page-head__name is__en">Special Column</p>
-      <h1 class="l-page-head__ttl">社員の英語スピーキング力を<br><span class="p-column02__kv_logo"><img src="../../assets/img/column_02/kv_logo.svg" alt="VERSANT&trade;"></span><span class="p-column02__kv_description">で<br class="visible_to_m"><span class="p-column02__kv_scale">可視化</span>しませんか。</span></h1>
+      <h1 class="l-page-head__ttl">社員の英語スピーキング力を<br><span class="p-column02__kv_logo"><img src="../../assets/img/column_02/kv_logo.svg" alt="Versant&trade;"></span><span class="p-column02__kv_description">で<br class="visible_to_m"><span class="p-column02__kv_scale">可視化</span>しませんか。</span></h1>
       <div class="p-column02__kv_img visible_m"><img src="../../assets/img/column_02/kv_img.png" alt=""></div>
       <div class="p-column02__kv_phone"><img src="../../assets/img/column_02/kv_phone.png" alt=""></div>
     </div>
@@ -124,10 +124,10 @@
   <article>
     <div class="l-inner">
     <div class="p-column02__inner">
-      <p class="p-column02__lead">日本企業のグローバル展開が加速する昨今、ビジネスパーソンには本質的なグローバルスキルが求められています。グローバル環境下でビジネスを推進するには異文化理解やグローバルマインドセット、また「英語でのコミュニケーションスキル」が欠かせません。<br>ビジネスパーソンの英語学習の新たな主流、コーチング英会話を運営するプロが、英語力の成長を促す秘訣、と語るのが「VERSANT（ヴァーサント）」です。「スピーキング力」の向上にVERSANTをどのように活用しているのか、その核心に迫ります。</p>
+      <p class="p-column02__lead">日本企業のグローバル展開が加速する昨今、ビジネスパーソンには本質的なグローバルスキルが求められています。グローバル環境下でビジネスを推進するには異文化理解やグローバルマインドセット、また「英語でのコミュニケーションスキル」が欠かせません。<br>ビジネスパーソンの英語学習の新たな主流、コーチング英会話を運営するプロが、英語力の成長を促す秘訣、と語るのが「Versant（ヴァーサント）」です。「スピーキング力」の向上にVersantをどのように活用しているのか、その核心に迫ります。</p>
       <section class="p-column02__cta_wrap">
-        <h2 class="p-column02__cta_title">企業から選ばれる英語テストVERSANTを体験いただけます</h2>
-        <p>VERSANTは世界160か国、年間300万人が受検する世界標準の英語テスト。<br>高精度のAIによる正確な採点で「英語スピーキング力」を可視化できます。<br>スマホ・PCで20分完結する手軽さで、国内でも採用・研修の効果測定に約500社が導入。<br>会社の海外対応力を強化する第一歩に、「英語力の基準」を見直してみませんか。</p>
+        <h2 class="p-column02__cta_title">企業から選ばれる英語テストVersantを体験いただけます</h2>
+        <p>Versantは世界160か国、年間300万人が受検する世界標準の英語テスト。<br>高精度のAIによる正確な採点で「英語スピーキング力」を可視化できます。<br>スマホ・PCで20分完結する手軽さで、国内でも採用・研修の効果測定に約500社が導入。<br>会社の海外対応力を強化する第一歩に、「英語力の基準」を見直してみませんか。</p>
         <a href="https://lcbform.nikkei.com/OF-versant-trial.html" target="_blank" class="o-btn__square is__black">トライアル＆資料請求（無料）</a>
       </section>
       <nav class="p-column02__nav_wrap">
@@ -168,7 +168,7 @@
         </ul>
       </nav>
       <div class="p-column02__section_wrap">
-        <h2 class="p-column02__subtitle">英語のプロが認めるVERSANT</h2>
+        <h2 class="p-column02__subtitle">英語のプロが認めるVersant</h2>
         <section class="l-article__section_cnt is__person1">
           <a id="person1" name="person1" class="p-column02__anchor"></a>
           <div class="p-column02__section_img"><img src="../../assets/img/column_02/section1_img.jpg" alt="三木社長"></div>
@@ -181,11 +181,11 @@
           </section>
           <div class="p-column02__section_box">
           <h3 class="p-column02__section_title">スピーキング力の成長を1点刻みで可視化<span class="p-column02__section_marker">モチベーション維持にも効果的</span></h3>
-            <p>ビジネスの世界では数量や納期、コスト、品質など目標や結果をすべて数値で評価します。しかし、ビジネスで使う英語のコミュニケーション力はこれまで曖昧に評価されてきました。それを明確に示すことができるのが「VERSANT」です。<br>グローバルタレントマネジメントを進める中で英語コミュニケーション力（交渉・契約で必要なレベル）の評価基準も明確に示され始め、「VERSANT」を基準にする企業も増えています。</p>
-            <p>当社は①ビジネスで必要な英語スピーキング力が数値で測れる②手ごろなコストと精度の高さ③変化値を示すブレのない尺度、の３つの点を評価し、「VERSANT」を採用しました。受講者に毎月受験していただき、その成長を1点刻みで把握し、カリキュラムを常に進化させています。</p>
-            <p>TORAIZ受講者の平均スコアではGSE32点から英語学習をスタートしますので、海外で何とか商談をこなせるGSE43点を1年後のゴールに設定し、毎月1点アップを目指していただきます。4カ月目と9カ月目に伸び悩みの時期があることも取得データから分かっていますので、モチベーションを落とすことなく、着々と学習を進めていただくことができます。VERSANTスコアは簡単には上がらないものですが、ご自身の成長が、VERSANTのスコアに反映されてくると、手ごたえと自信がついて表情が変わってきます。</p>
+            <p>ビジネスの世界では数量や納期、コスト、品質など目標や結果をすべて数値で評価します。しかし、ビジネスで使う英語のコミュニケーション力はこれまで曖昧に評価されてきました。それを明確に示すことができるのが「Versant」です。<br>グローバルタレントマネジメントを進める中で英語コミュニケーション力（交渉・契約で必要なレベル）の評価基準も明確に示され始め、「Versant」を基準にする企業も増えています。</p>
+            <p>当社は①ビジネスで必要な英語スピーキング力が数値で測れる②手ごろなコストと精度の高さ③変化値を示すブレのない尺度、の３つの点を評価し、「Versant」を採用しました。受講者に毎月受験していただき、その成長を1点刻みで把握し、カリキュラムを常に進化させています。</p>
+            <p>TORAIZ受講者の平均スコアではGSE32点から英語学習をスタートしますので、海外で何とか商談をこなせるGSE43点を1年後のゴールに設定し、毎月1点アップを目指していただきます。4カ月目と9カ月目に伸び悩みの時期があることも取得データから分かっていますので、モチベーションを落とすことなく、着々と学習を進めていただくことができます。Versantスコアは簡単には上がらないものですが、ご自身の成長が、Versantのスコアに反映されてくると、手ごたえと自信がついて表情が変わってきます。</p>
             <p>いま企業の海外窓口部門が廃止され始め、各部署が直接海外との交渉をするケースが増えるなど、国内のグローバル化も顕著です。グローバルタレントマネジメントも導入され始めていますが、成功されている企業様に共通しているのは、人財戦略が経営の中長期計画と連動し、具体的なプランとして落とし込まれていること、ではないでしょうか。さらに人的資本経営が問われる今、会社が求めるスキルセットと、社員ご自身のキャリアパスが明確につながっていることも大切な要件です。</p>
-            <p>当社が目指すのは「個別最適なカリキュラム」の構築による効果的なプログラムの実現です。受講者のなりたい姿の解像度を上げ、英語が必要なコミュニケーションを想定し、一人ひとりのゴールに合わせたプログラムを学習理論や過去1万人の学習データをもとに構築し提供しています。多くの受講者が1年のレッスン期間を待たず、10カ月ほどで海外担当部署への異動を果たしています。それぞれが目指すグローバルビジネスでの活躍を可能にするために、「VERSANT」スコアの分析は学習のPDCAサイクルを回す欠かせない指標であり、当社の重要な資産です。</p>
+            <p>当社が目指すのは「個別最適なカリキュラム」の構築による効果的なプログラムの実現です。受講者のなりたい姿の解像度を上げ、英語が必要なコミュニケーションを想定し、一人ひとりのゴールに合わせたプログラムを学習理論や過去1万人の学習データをもとに構築し提供しています。多くの受講者が1年のレッスン期間を待たず、10カ月ほどで海外担当部署への異動を果たしています。それぞれが目指すグローバルビジネスでの活躍を可能にするために、「Versant」スコアの分析は学習のPDCAサイクルを回す欠かせない指標であり、当社の重要な資産です。</p>
             <div class="p-column02__section_box_img"><img src="../../assets/img/column_02/section1_box_img.jpg" alt=""></div>
           </div>
           <section class="p-column02__summary_wrap">
@@ -193,12 +193,12 @@
             <ul class="p-column02__summary_list">
               <li>成長が1点刻みのスコアに反映され自信がついてくる、モチベーション維持に効果的</li>
               <li>曖昧だった仕事で使える英語のコミュニケーション力（交渉・契約で必要なレベル）を明確に示せる</li>
-              <li>「VERSANT」スコアは、目標から逆算した学習のPDCAサイクルを回すために欠かせない指標</li>
+              <li>「Versant」スコアは、目標から逆算した学習のPDCAサイクルを回すために欠かせない指標</li>
             </ul>
           </section>
           <section class="p-column02__cta_wrap">
-            <h2 class="p-column02__cta_title">トライズの英語学習に欠かせない「VERSANT」のスコアとは </h2>
-            <p>VERSANTのスコアGSE（Global Score of English）は、世界的な英語指標CEFR（ヨーロッパ共通言語参照枠）に完全準拠しており、<br class="visible_m">スコアごとに英語でできることについて詳細な定義がされています。<br>スコアが持つ意味、ビジネスシーン別にどの程度のスコアが求められるのかが気になる方はぜひダウンロードしてご覧ください。</p>
+            <h2 class="p-column02__cta_title">トライズの英語学習に欠かせない「Versant」のスコアとは </h2>
+            <p>VersantのスコアGSE（Global Score of English）は、世界的な英語指標CEFR（ヨーロッパ共通言語参照枠）に完全準拠しており、<br class="visible_m">スコアごとに英語でできることについて詳細な定義がされています。<br>スコアが持つ意味、ビジネスシーン別にどの程度のスコアが求められるのかが気になる方はぜひダウンロードしてご覧ください。</p>
             <a href="https://school.nikkei.co.jp/feature/hr/contents/knowhow/15?b_cid=nbs_hr_knowhow" target="_blank" class="o-btn__square is__black">スコア活用方法ガイドを<br class="visible_to_m">ダウンロード（無料）</a>
           </section>
         </section>
@@ -218,9 +218,9 @@
             <h3 class="p-column02__section_title">AI採点で英語力の課題が明確に
             <span class="p-column02__section_marker">スマホで受験できる手軽さが好評</span></h3>
             <p>当社は「世界で自由に活躍できる人を増やす」をミッションに掲げ、本質的な英語学習体験を提供しています。中でも主力サービスの英語コーチング「プログリット」は、専任のコンサルタントが受講者に寄り添いながら英語力向上の動機や目的を理解し、その実現に向けたパッションを最大限に引き出しながら、短期で英語力を向上させることを目指しています。</p>
-            <p>「VERSANT」の高精度な採点結果は、受講者の現状や課題を定量的に把握するのに有効な指標です。短期間で英語を習得するためには、いま何が課題なのかを明確にすることがまず大切です。「英語で仕事ができるようになりたい」という動機や目指すゴール、そして今の実力などの多くの要素は意外と曖昧なものです。コンサルタントが面談での対話を通して定性的に深掘りしていくのと同時に、世界標準のテストである「VERSANT」で定量的に英語力の現状を数値化することで、的確な課題対策が検討でき、受講者一人ひとりに合ったカリキュラムを組むことができます。その上で、当社のコンサルタントが徹底的に伴走します。モチベーションが低いなら一緒にビジョンを描き、時間の確保が難しいなら一緒に時間の使い方から考え、学習以外のあらゆることに関与します。適切な方法で本気で取り組めば英語力は確実に上達します。</p>
-            <p>忙しいビジネスパーソンがいつでもどこからでもスマートフォンなどで受験でき、すぐに結果がわかる手軽さも、「VERSANT」を採用した大きな理由です。学習の開始時と終了後に測定することで、3カ月間の成果を明確に示すことができます。</p>
-            <p>企業研修での引き合いも増えています。オンラインミーティングの定着や海外出張の復活など、リアルタイムでコミュニケーションをとる機会も増え、これまで以上に英語で発信する力が問われるようになりました。VERSANTの基準が企業内にも定着しつつあります。そんな中で、多くのビジネスパーソンが真剣に英語学習に向き合うようになるためには、企業のリーダーが本気のメッセージを発信することが重要だと思います。日本企業の多くがグローバル展開を戦略の柱に据えるいま、「プログリットの門をたたけば確実に英語が身に付き、グローバルな舞台で活躍できる人財を育成することができる」という絶対的な存在になることを目指し、日本のグローバル化に大きく貢献していきたいと考えています。</p>
+            <p>「Versant」の高精度な採点結果は、受講者の現状や課題を定量的に把握するのに有効な指標です。短期間で英語を習得するためには、いま何が課題なのかを明確にすることがまず大切です。「英語で仕事ができるようになりたい」という動機や目指すゴール、そして今の実力などの多くの要素は意外と曖昧なものです。コンサルタントが面談での対話を通して定性的に深掘りしていくのと同時に、世界標準のテストである「Versant」で定量的に英語力の現状を数値化することで、的確な課題対策が検討でき、受講者一人ひとりに合ったカリキュラムを組むことができます。その上で、当社のコンサルタントが徹底的に伴走します。モチベーションが低いなら一緒にビジョンを描き、時間の確保が難しいなら一緒に時間の使い方から考え、学習以外のあらゆることに関与します。適切な方法で本気で取り組めば英語力は確実に上達します。</p>
+            <p>忙しいビジネスパーソンがいつでもどこからでもスマートフォンなどで受験でき、すぐに結果がわかる手軽さも、「Versant」を採用した大きな理由です。学習の開始時と終了後に測定することで、3カ月間の成果を明確に示すことができます。</p>
+            <p>企業研修での引き合いも増えています。オンラインミーティングの定着や海外出張の復活など、リアルタイムでコミュニケーションをとる機会も増え、これまで以上に英語で発信する力が問われるようになりました。Versantの基準が企業内にも定着しつつあります。そんな中で、多くのビジネスパーソンが真剣に英語学習に向き合うようになるためには、企業のリーダーが本気のメッセージを発信することが重要だと思います。日本企業の多くがグローバル展開を戦略の柱に据えるいま、「プログリットの門をたたけば確実に英語が身に付き、グローバルな舞台で活躍できる人財を育成することができる」という絶対的な存在になることを目指し、日本のグローバル化に大きく貢献していきたいと考えています。</p>
             <div class="p-column02__section_box_img"><img src="../../assets/img/column_02/section2_box_img.jpg" alt=""></div>
           </div>
           <section class="p-column02__summary_wrap">
@@ -232,8 +232,8 @@
             </ul>
           </section>
           <section class="p-column02__cta_wrap">
-            <h2 class="p-column02__cta_title">最新のAIによる高精度な採点結果を即座に提供できる「VERSANT」 </h2>
-            <p>VERSANTは、最新のAI技術を活用し、採点結果を即座に提供します。高精度のAIを活用した採点は、信頼性も高く、<br class="visible_m">国内外のグローバル企業のほか、政府機関などでも導入されています。<br>VERSANTの特徴や活用シーン・導入事例が気になる方はぜひご覧ください。</p>
+            <h2 class="p-column02__cta_title">最新のAIによる高精度な採点結果を即座に提供できる「Versant」 </h2>
+            <p>Versantは、最新のAI技術を活用し、採点結果を即座に提供します。高精度のAIを活用した採点は、信頼性も高く、<br class="visible_m">国内外のグローバル企業のほか、政府機関などでも導入されています。<br>Versantの特徴や活用シーン・導入事例が気になる方はぜひご覧ください。</p>
             <a href="https://lcbform.nikkei.com/OF-versant-trial.html" target="_blank" class="o-btn__square is__black">資料をダウンロード（無料）</a>
           </section>    
         </section>
@@ -251,18 +251,18 @@
             <h3 class="p-column02__section_title">「聞いて、理解して、話す」
               <span class="p-column02__section_marker">ビジネスに必要な英語力をスコア化</span></h3>
             <p>ビジネスに必要な英語力とは何か。ごく平易に言えば、こちらの考えや要望を説得力をもって伝え、着地点へと導く「相手を説得するための」英語力です。パーソナルトレーニングジムというコンセプトを掲げる当社では、第二言語習得研究という理論に基づくトレーニングで総合的な英語力を個別に「鍛える」お手伝いをしています。</p>
-            <p>言語の専門家たちが構築する「VERSANT」は指導にあたって大きな力を発揮しています。当社ではプログラム開始前後に「VERSANT」を受験していただきます。弊社のコンサルタントは初回コンサルティングでVERSANTのスコアレポートを通して、受講者のリスニングやスピーキングスキルの課題になりそうなポイントの仮説を立てます。</p>
+            <p>言語の専門家たちが構築する「Versant」は指導にあたって大きな力を発揮しています。当社ではプログラム開始前後に「Versant」を受験していただきます。弊社のコンサルタントは初回コンサルティングでVersantのスコアレポートを通して、受講者のリスニングやスピーキングスキルの課題になりそうなポイントの仮説を立てます。</p>
             <p>例えば「リスニングができない」という症状がある方に対して、その症状を引き起こしている要因を精緻に見極めて、その要因ごとに適切な学習メニューを提示することで解決に導きます。</p>
-            <p>VERSANT の設問形式は、その方のリアルなビジネスの場での英語運用力の現状や上達を図るために非常に優れており、英語を学ぶビジネスパーソンにとって大変有効です。<br>特に、設問C「会話に関する質問」、設問D「文章に関する質問」では、正確なリスニング力と即時的に回答する高いスピーキング力が要求されます。また、設問E「ストーリーテリング(話の要約、言い換え)」は、一見ビジネス英会話に関係ないように見えますが、時系列で仕事の内容を説明したり、要約して伝えることは、普段のビジネスシーンでも求められる力です。当社のトレーニングで鍛える力と密接にリンクしており、多くの受講者がVERSANTの有用性に納得いただいています。</p>
-            <p>今年アップデートされた「VERSANT」では、スピーキングスコアだけでなく、リスニングスコアも測定されるようになりました。相手の話を「聞いて、理解して、話す」という実際のコミュニケーションにより近い状況を把握できるようになったことも利点です。</p>
-            <p>グローバルな舞台での活躍を目指す企業や個人にとって、英語は１つのツールに過ぎません。メインの業務を疎かにしてまで学習に時間を割いていては本末転倒になりかねません。日々の業務や家族との時間を疎かにすることなく、効率良く英語力の向上を実現いただくことが当社の使命です。「VERSANT」の結果も参考にしつつ科学的なアプローチで英語学習の生産性を上げ、グローバル化への課題解決に語学力の面で貢献していきます。</p>
+            <p>Versant の設問形式は、その方のリアルなビジネスの場での英語運用力の現状や上達を図るために非常に優れており、英語を学ぶビジネスパーソンにとって大変有効です。<br>特に、設問C「会話に関する質問」、設問D「文章に関する質問」では、正確なリスニング力と即時的に回答する高いスピーキング力が要求されます。また、設問E「ストーリーテリング(話の要約、言い換え)」は、一見ビジネス英会話に関係ないように見えますが、時系列で仕事の内容を説明したり、要約して伝えることは、普段のビジネスシーンでも求められる力です。当社のトレーニングで鍛える力と密接にリンクしており、多くの受講者がVersantの有用性に納得いただいています。</p>
+            <p>今年アップデートされた「Versant」では、スピーキングスコアだけでなく、リスニングスコアも測定されるようになりました。相手の話を「聞いて、理解して、話す」という実際のコミュニケーションにより近い状況を把握できるようになったことも利点です。</p>
+            <p>グローバルな舞台での活躍を目指す企業や個人にとって、英語は１つのツールに過ぎません。メインの業務を疎かにしてまで学習に時間を割いていては本末転倒になりかねません。日々の業務や家族との時間を疎かにすることなく、効率良く英語力の向上を実現いただくことが当社の使命です。「Versant」の結果も参考にしつつ科学的なアプローチで英語学習の生産性を上げ、グローバル化への課題解決に語学力の面で貢献していきます。</p>
             <div class="p-column02__section_box_img"><img src="../../assets/img/column_02/section3_box_img.jpg" alt=""></div>
           </div>
           <section class="p-column02__summary_wrap">
             <h5 class="p-column02__summary_title">ポイント</h5>
             <ul class="p-column02__summary_list">
               <li>スコアレポートで仮題を見極め、適切なトレーニングを設計できる</li>
-              <li>VERSANTの設問は、リアルなビジネスで問われる英語運用力を測るために非常に優れている</li>
+              <li>Versantの設問は、リアルなビジネスで問われる英語運用力を測るために非常に優れている</li>
               <li>実際のコミュニケーションにより近い状況で英語力を把握できる</li>
             </ul>
           </section>
@@ -271,11 +271,11 @@
           <div class="p-column02__section_box">
             <p>3社が共通して重視するのは、トレーニング前の「スキルの可視化」でした。
               企業でも同様に、スキルの可視化が、人材プールを把握し、研修を設計するための第一歩になります。グローバル展開を進める日本企業には、必要な人材のスキル要件を設定することが求められます。実務につながる「英語スピーキング力」を測るテストが、採用や研修で不可欠です。</p>
-              <p>VERSANTの手軽さ・スコアの正確さは、実践的な英語力の可視化や英語習得のための今の課題を明確にするための強い味方となります。グローバル人材育成研修の効率化やグローバル人材の採用活動にぜひお役立てください。</p>
+              <p>Versantの手軽さ・スコアの正確さは、実践的な英語力の可視化や英語習得のための今の課題を明確にするための強い味方となります。グローバル人材育成研修の効率化やグローバル人材の採用活動にぜひお役立てください。</p>
           </div>
           <section class="p-column02__cta_wrap">
-            <h2 class="p-column02__cta_title">海外対応力強化の第一歩 英語テストVERSANTで手軽に可視化</h2>
-            <p>これまでの英語テストでは、「実際に話せない」「即戦力にならない」といったミスマッチを感じたことはありませんか？<br>日経では、企業の本質的なグローバル人財育成支援のため、実践的な語学スキルを手軽に可視化するテスト<br class="visible_m">「VERSANT（ヴァーサント）」を提供しています。<br>法人での導入をご検討の方には、無料のトライアル受験も可能です。グローバル人財育成の担当者の方はぜひご体験ください。</p>
+            <h2 class="p-column02__cta_title">海外対応力強化の第一歩 英語テストVersantで手軽に可視化</h2>
+            <p>これまでの英語テストでは、「実際に話せない」「即戦力にならない」といったミスマッチを感じたことはありませんか？<br>日経では、企業の本質的なグローバル人財育成支援のため、実践的な語学スキルを手軽に可視化するテスト<br class="visible_m">「Versant（ヴァーサント）」を提供しています。<br>法人での導入をご検討の方には、無料のトライアル受験も可能です。グローバル人財育成の担当者の方はぜひご体験ください。</p>
             <a href="https://lcbform.nikkei.com/OF-versant-trial.html" target="_blank" class="o-btn__square is__black">トライアル＆資料請求（無料）</a>
           </section>    
         </div>
@@ -287,9 +287,9 @@
 
   <section class="p-column__bnr_report__wrp" id="document_form">
     <div class="p-column__bnr_report" >
-      <p class="p-column__bnr_report_ttl">【大人気のレポート】<br>VERSANT1万人分析で見えた日本人の英語力に関する驚きの事実とは？</p>
+      <p class="p-column__bnr_report_ttl">【大人気のレポート】<br>Versant1万人分析で見えた日本人の英語力に関する驚きの事実とは？</p>
       <div class="p-column__bnr_report_img">
-        <img loading="lazy" id="" src="../../assets/img/column_01/report_bnr_01.png" alt="VERSANT資料イメージ" class="" height="290" width="280" role="presentation" data-retry="0">
+        <img loading="lazy" id="" src="../../assets/img/column_01/report_bnr_01.png" alt="Versant資料イメージ" class="" height="290" width="280" role="presentation" data-retry="0">
       </div>
       <ul class="p-column__bnr_report_list">
         <li>CEFRとの相関関係「企業別平均で47点を超えたのは〇〇%」</li>
@@ -335,7 +335,7 @@
           <p class="l-footer__info_head">お問合せ窓口</p>
           <div class="l-footer__info_txt"><span>Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793</a> (平日10:00〜17:00)</div>
           <div class="l-footer__info_txt"><span>Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
+          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">Versant法人利用規約</a>
       </address>  
       
       <div class="l-footer__lnk_box">
